--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>人生游戏系统</title>
-    <meta name="description" content="反本能·主动进化系统" />
+    <meta name="description" content="人生游戏管理系统" />
     <meta name="theme-color" content="#4285f4" />
     <link rel="manifest" href="/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
