更新思维模型文件，确保包含所有六个必需部分

--- a/thinking-models/10-10-10法则.html
+++ b/thinking-models/10-10-10法则.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -72,13 +71,81 @@
 
         <path d="M-400,0 L-380,0 M380,0 L400,0" stroke="#1e293b" stroke-width="1" opacity="0.1" />
       </g>
-      <text x="500" y="520" text-anchor="middle" fill="#1e293b" style="font-size: 14px; font-weight: 900; letter-spacing: 0.5em; opacity: 0.3;">DEc我S我ON F我LTER THROUGH T我ME</text>
+      <text x="500" y="520" text-anchor="middle" fill="#1e293b" style="font-size: 14px; font-weight: 900; letter-spacing: 0.5em; opacity: 0.3;">DECISION FILTER THROUGH TIME</text>
     </svg>
   </div>
 
   <div class="text-content">
     <h1>10/10/10 法则</h1>
     <p>当身陷情绪、难以决断时，将视角拉远，通过三层时间维度来审视当前的决策。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>10/10/10 法则是一种时间透视决策工具，通过将决策放在三个不同的时间维度中进行评估，帮助人们超越即时情绪和短期利益，做出更符合长期价值的选择。</p>
+      <ul>
+        <li><strong>时间维度设计：</strong>10分钟（短期情绪）、10个月（中期影响）、10年（长期价值）三个时间点的选择，覆盖了人类决策中最常见的三个时间视角。</li>
+        <li><strong>认知系统激活：</strong>通过强制切换时间视角，激活大脑的“慢系统”（理性思考），抑制“快系统”（情绪反应）的主导地位。</li>
+        <li><strong>价值层级排序：</strong>帮助决策者识别哪些因素在不同时间尺度下的重要性变化，从而优先考虑具有长期复利效应的选择。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>10/10/10 法则的核心原则基于人类决策的认知特性和时间偏好。</p>
+      <ul>
+        <li><strong>时间视角转换：</strong>通过物理化的时间标尺，强制决策者从单一时间视角中抽离，获得更全面的决策视角。</li>
+        <li><strong>情绪降温机制：</strong>利用时间距离效应，削弱即时情绪对决策的影响，使理性思考成为可能。</li>
+        <li><strong>长期价值优先：</strong>通过10年视角的终极拷问，确保决策与个人核心价值观和长期目标保持一致。</li>
+        <li><strong>决策一致性：</strong>帮助决策者在不同时间尺度下保持决策逻辑的一致性，避免短视行为。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>10/10/10 法则适用于需要平衡短期情绪与长期价值的各种决策场景。</p>
+      <ul>
+        <li><strong>个人生活决策：</strong>职业选择、人际关系、健康管理、财务规划等人生重大决策。</li>
+        <li><strong>职业发展决策：</strong>项目选择、工作机会评估、职业转型、团队管理等职场决策。</li>
+        <li><strong>创业与投资决策：</strong>创业方向、投资策略、资源分配、风险评估等商业决策。</li>
+        <li><strong>情绪管理场景：</strong>冲突处理、压力应对、焦虑管理等需要情绪调节的情境。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用10/10/10 法则的具体技巧和方法。</p>
+      <ul>
+        <li><strong>结构化提问：</strong>严格按照10分钟→10个月→10年的顺序进行提问，确保思考的层次性。</li>
+        <li><strong>书面记录：</strong>将三个时间维度的思考结果写下来，增加决策的清晰度和可追溯性。</li>
+        <li><strong>角色扮演：</strong>想象自己是10个月后或10年后的自己，从未来视角审视当前决策。</li>
+        <li><strong>定期回顾：</strong>对过去使用该法则做出的决策进行回顾，评估其有效性并调整使用方法。</li>
+        <li><strong>团队应用：</strong>在团队决策中使用该法则，帮助团队成员超越个人视角，达成共识。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际生活和工作中有效应用10/10/10 法则。</p>
+      <ul>
+        <li><strong>建立决策模板：</strong>创建标准化的10/10/10 决策模板，包括三个时间维度的问题和评估标准。</li>
+        <li><strong>设置决策触发点：</strong>在情绪激动、压力较大或面临重大决策时，主动触发10/10/10 思考流程。</li>
+        <li><strong>培养时间视角习惯：</strong>通过日常小决策的练习，培养自动切换时间视角的思维习惯。</li>
+        <li><strong>结合其他工具：</strong>与SWOT分析、决策树等工具结合使用，获得更全面的决策支持。</li>
+        <li><strong>分享与传播：</strong>向团队和朋友介绍该法则，通过教别人来深化自己的理解和应用能力。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>10/10/10 法则在不同情境下的具体应用案例。</p>
+      <ul>
+        <li><strong>职业选择案例：</strong>当面临一个高薪但压力大的工作机会时，使用10/10/10法则评估：10分钟后（兴奋）、10个月后（可能疲惫）、10年后（职业发展影响），从而做出更全面的选择。</li>
+        <li><strong>人际关系案例：</strong>在与他人发生冲突时，使用10/10/10法则：10分钟后（可能冷静）、10个月后（可能淡忘）、10年后（可能无关紧要），从而避免冲动行为。</li>
+        <li><strong>投资决策案例：</strong>在考虑一项高风险投资时，使用10/10/10法则：10分钟后（可能贪婪）、10个月后（可能波动）、10年后（可能回报），从而做出更理性的投资决策。</li>
+        <li><strong>健康管理案例：</strong>在考虑是否坚持锻炼时，使用10/10/10法则：10分钟后（可能懒惰）、10个月后（可能健康改善）、10年后（可能显著健康差异），从而增强坚持的动力。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>决策标尺</h3>
@@ -90,7 +157,7 @@
       <div>
         <h3>终极目标</h3>
         <ul>
-          <li><strong>遗产视角：</strong>问自己 10 年后是否会为这个决定感到自豪？这能帮助你锁定那些具有长期复利的正确A。</li>
+          <li><strong>遗产视角：</strong>问自己 10 年后是否会为这个决定感到自豪？这能帮助你锁定那些具有长期复利的正确选择。</li>
           <li><strong>理性校准：</strong>这不仅是时间管理，更是对人生优先级的物理化强制对齐。</li>
         </ul>
       </div>
