--- a/thinking-models/ESS策略.html
+++ b/thinking-models/ESS策略.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -83,6 +82,68 @@
   <div class="text-content">
     <h1>进化稳定策略 (ESS)</h1>
     <p>由约翰·梅纳德·史密斯提出。在一个群体中，如果绝大多数成员都采取某种策略，而任何少数突变者都无法通过改变策略获得更高收益，那么该策略就是“进化稳定”的。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>进化稳定策略是博弈论中的重要概念，它描述了一种在进化过程中能够持续存在的策略状态。ESS 不仅适用于生物进化，也广泛应用于社会、经济和政治领域。</p>
+      <ul>
+        <li>关键要素1：群体一致性 - 大多数成员采用相同策略</li>
+        <li>关键要素2：入侵抵抗 - 突变策略无法获得优势</li>
+        <li>关键要素3：动态平衡 - 系统能自我修复回到稳态</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>ESS 的核心原则基于博弈论和进化理论的结合。</p>
+      <ul>
+        <li><strong>原则1：</strong>稳定性优先于最优性 - 最稳定的策略而非理论上最优的策略会最终胜出</li>
+        <li><strong>原则2：</strong>自我强化机制 - 采用该策略的个体越多，该策略的优势越明显</li>
+        <li><strong>原则3：</strong>边界保护 - 系统会自动排斥偏离核心策略的行为</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>ESS 适用于各种存在竞争和合作的系统。</p>
+      <ul>
+        <li>生物进化 - 物种行为和特征的演化</li>
+        <li>商业生态 - 市场规则和竞争策略的形成</li>
+        <li>社会规范 - 文化习俗和道德准则的建立</li>
+        <li>政治系统 - 制度设计和权力平衡</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何识别和应用 ESS 思维。</p>
+      <ul>
+        <li><strong>技巧1：</strong>识别现有稳态 - 观察系统中占主导地位的行为模式</li>
+        <li><strong>技巧2：</strong>评估入侵成本 - 分析打破现有 ESS 需要的资源和风险</li>
+        <li><strong>技巧3：</strong>设计新稳态 - 创造能够自我维持的新策略系统</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际工作和生活中应用 ESS 思维。</p>
+      <ul>
+        <li><strong>建议1：</strong>尊重现有规则 - 在理解现有 ESS 的基础上进行创新</li>
+        <li><strong>建议2：</strong>培养系统思维 - 从整体角度看待策略的稳定性</li>
+        <li><strong>建议3：</strong>建立反馈机制 - 确保新策略能够自我调整和优化</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>ESS 在不同领域的具体应用。</p>
+      <ul>
+        <li><strong>案例1：</strong>企业文化建设 - 打造具有自我强化机制的价值观体系</li>
+        <li><strong>案例2：</strong>市场竞争策略 - 建立难以被竞争对手模仿的商业模式</li>
+        <li><strong>案例3：</strong>个人习惯养成 - 培养能够自动维持的良好习惯系统</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>系统韧性</h3>
