--- a/thinking-models/GROW模型.html
+++ b/thinking-models/GROW模型.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -88,7 +87,74 @@
 
   <div class="text-content">
     <h1>GROW 教练模型</h1>
-    <p>教练技术的底层协议。通过四个维度的引导，将模糊的想法转化为清晰的愿景与坚定的D计划。</p>
+    <p>教练技术的底层协议。通过四个维度的引导，将模糊的想法转化为清晰的愿景与坚定的执行计划。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>GROW模型是一种结构化的教练方法，通过四个关键步骤帮助个体或团队明确目标、分析现状、探索选择并确立行动意愿。</p>
+      <ul>
+        <li>关键要素1：目标设定 (Goal) - 明确具体、可衡量的目标</li>
+        <li>关键要素2：现状分析 (Reality) - 客观评估当前情况和差距</li>
+        <li>关键要素3：选择探索 (Options) - 寻找多种可能的解决方案</li>
+        <li>关键要素4：行动意愿 (Will) - 确立具体的行动计划和承诺</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>GROW模型的核心原则基于教练技术和目标设定理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>以目标为导向 - 聚焦于明确的结果</li>
+        <li><strong>原则2：</strong>客观真实 - 基于事实而非主观判断</li>
+        <li><strong>原则3：</strong>多元化思考 - 探索多种可能性</li>
+        <li><strong>原则4：</strong>行动优先 - 转化为具体的行动计划</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>GROW模型适用于需要明确目标和行动计划的各种场景。</p>
+      <ul>
+        <li>个人发展 - 职业规划、目标设定、问题解决</li>
+        <li>团队管理 - 绩效辅导、团队建设、项目规划</li>
+        <li>领导力发展 - 决策制定、问题分析、战略规划</li>
+        <li>教育培训 - 学习规划、技能发展、职业指导</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用GROW模型进行教练对话。</p>
+      <ul>
+        <li><strong>技巧1：</strong>开放式提问 - 用"什么"、"如何"等问题引导思考</li>
+        <li><strong>技巧2：</strong>具体化 - 将模糊的目标转化为具体可衡量的指标</li>
+        <li><strong>技巧3：</strong>挑战假设 - 帮助被教练者突破思维局限</li>
+        <li><strong>技巧4：</strong>问责制 - 确立明确的行动承诺和时间期限</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化GROW模型的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>创造安全空间 - 建立信任关系，鼓励开放分享</li>
+        <li><strong>建议2：</strong>循序渐进 - 按照GROW的顺序逐步引导，不要跳过步骤</li>
+        <li><strong>建议3：</strong>持续跟进 - 定期检查进度，调整行动计划</li>
+        <li><strong>建议4：</strong>自我应用 - 将GROW模型用于自我反思和个人规划</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>GROW模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>职业发展 - 帮助员工明确职业目标，制定发展计划</li>
+        <li><strong>案例2：</strong>绩效改进 - 针对绩效问题，分析原因并制定改进措施</li>
+        <li><strong>案例3：</strong>团队建设 - 帮助团队明确共同目标，解决冲突</li>
+        <li><strong>案例4：</strong>个人问题解决 - 帮助个体应对工作或生活中的挑战</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>驱动路径</h3>
@@ -101,7 +167,7 @@
         <h3>A转化</h3>
         <ul>
           <li><strong>路径 (Options)：</strong>打破单一思维，穷尽所有可能的突围方案。</li>
-          <li><strong>意愿 (Will)：</strong>确立第一步的具体动作，赋予其不容妥协的D期限。</li>
+          <li><strong>意愿 (Will)：</strong>确立第一步的具体动作，赋予其不容妥协的期限。</li>
         </ul>
       </div>
     </div>
