--- a/thinking-models/MVA协议.html
+++ b/thinking-models/MVA协议.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>最小可行性A</title><style>
+  <title>最小可行性产品 (MVA)</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -72,8 +71,73 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>最小可行性A (MVA 计划rotocol)</h1>
+    <h1>最小可行性产品 (MVA 协议)</h1>
     <p>完美主义本质上是“恐惧”的避难所。MVA 要求你：只做 50% 的准备就启动。先跑通流程，获得市场的真实反馈（哪怕是挨骂），其价值远超你在屋子里构思 100 天的完美蓝图。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>最小可行性产品 (MVA) 是一种反完美主义的行动策略，强调通过快速发布和迭代来获取真实反馈，而非在准备阶段过度消耗资源。</p>
+      <ul>
+        <li>关键要素1：最小准备 - 只做必要的准备工作</li>
+        <li>关键要素2：快速发布 - 以Beta版形式尽早推向市场</li>
+        <li>关键要素3：反馈循环 - 基于市场反馈进行迭代改进</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>MVA 的核心原则基于精益创业和敏捷开发理念。</p>
+      <ul>
+        <li><strong>原则1：</strong>行动优先于完美 - 完成比完美更重要</li>
+        <li><strong>原则2：</strong>反馈驱动 - 市场反馈是最好的指南针</li>
+        <li><strong>原则3：</strong>快速迭代 - 通过持续改进实现优化</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>MVA 适用于需要快速验证和迭代的创新场景。</p>
+      <ul>
+        <li>产品开发 - 新功能或新产品的推出</li>
+        <li>内容创作 - 视频、文章、 podcast 等内容的发布</li>
+        <li>营销活动 - 新营销策略的测试</li>
+        <li>个人项目 - 技能学习、个人品牌建设</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 MVA 策略。</p>
+      <ul>
+        <li><strong>技巧1：</strong>50% 原则 - 只做一半的准备就启动</li>
+        <li><strong>技巧2：</strong>时间限制 - 设定严格的发布截止日期</li>
+        <li><strong>技巧3：</strong>最小功能集 - 只包含核心功能，忽略次要特性</li>
+        <li><strong>技巧4：</strong>明确反馈渠道 - 为用户提供方便的反馈方式</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何克服完美主义倾向，成功实施 MVA。</p>
+      <ul>
+        <li><strong>建议1：</strong>重构思维 - 将“不完美”视为“迭代机会”</li>
+        <li><strong>建议2：</strong>设定小目标 - 将大项目分解为可快速完成的小部分</li>
+        <li><strong>建议3：</strong>建立问责制 - 找朋友或同事监督你的发布承诺</li>
+        <li><strong>建议4：</strong>庆祝进步 - 为每一次发布和迭代庆祝，不论结果如何</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>MVA 在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>内容创作 - 发布第一条不完美的视频，然后根据反馈持续改进</li>
+        <li><strong>案例2：</strong>产品开发 - 发布MVP版本，收集用户反馈后再添加高级功能</li>
+        <li><strong>案例3：</strong>个人品牌 - 开始写博客或发社交媒体帖子，不等待“完美时机”</li>
+        <li><strong>案例4：</strong>学习新技能 - 尽早开始实践，在实际应用中学习，而非只看书本</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>A准则</h3>
