--- a/thinking-models/MVP演进.html
+++ b/thinking-models/MVP演进.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>MV计划 进化逻辑</title><style>
+  <title>MVP 进化逻辑</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -64,7 +63,7 @@
             <rect x="-40" y="30" width="80" height="10" rx="5" fill="#94a3b8" />
             <circle cx="-30" cy="45" r="10" fill="#1e293b" />
             <circle cx="30" cy="45" r="10" fill="#1e293b" />
-            <text y="80" text-anchor="middle" fill="#94a3b8" style="font-size: 12px; font-weight: 900;">1. 滑板 (MV计划)</text>
+            <text y="80" text-anchor="middle" fill="#94a3b8" style="font-size: 12px; font-weight: 900;">1. 滑板 (MVP)</text>
           </g>
 
           <!-- 阶段 2: 自行车 -->
@@ -98,8 +97,74 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>MV计划 进化逻辑 (Minimum Viable 计划roduct)</h1>
+    <h1>MVP 进化逻辑 (Minimum Viable Product)</h1>
     <p>解决完美主义的核武器。不要试图在实验室里闭门造出法拉利（那需要极长的零反馈期），要先造一块滑板。滑板虽然简陋，但它能完成“移动”的核心功能，并为你换回第一手的使用反馈。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>MVP 进化逻辑是一种产品开发策略，强调通过迭代式发展从简单原型逐步演进为完整产品，而非一次性构建完美产品。</p>
+      <ul>
+        <li>关键要素1：核心功能聚焦 - 只实现最基本的功能</li>
+        <li>关键要素2：快速验证 - 尽早获得用户反馈</li>
+        <li>关键要素3：渐进式改进 - 基于反馈持续优化</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>MVP 进化逻辑的核心原则基于精益创业思想。</p>
+      <ul>
+        <li><strong>原则1：</strong>价值优先 - 先解决用户最核心的问题</li>
+        <li><strong>原则2：</strong>快速迭代 - 小步快跑，持续改进</li>
+        <li><strong>原则3：</strong>反馈驱动 - 用户反馈是产品进化的指南针</li>
+        <li><strong>原则4：</strong>资源效率 - 避免在非核心功能上浪费资源</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>MVP 进化逻辑适用于各种创新和开发场景。</p>
+      <ul>
+        <li>产品开发 - 新软件、硬件产品的推出</li>
+        <li>服务设计 - 新服务模式的测试</li>
+        <li>创业项目 - 初创企业的产品策略</li>
+        <li>内部创新 - 企业内部的新想法验证</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 MVP 进化逻辑。</p>
+      <ul>
+        <li><strong>技巧1：</strong>核心功能识别 - 识别并聚焦于最核心的用户需求</li>
+        <li><strong>技巧2：</strong>原型设计 - 创建最小可行的产品原型</li>
+        <li><strong>技巧3：</strong>用户测试 - 尽早让目标用户使用产品</li>
+        <li><strong>技巧4：</strong>迭代规划 - 基于反馈制定清晰的迭代计划</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何成功实施 MVP 进化策略。</p>
+      <ul>
+        <li><strong>建议1：</strong>设定明确的成功指标 - 定义什么是成功的 MVP</li>
+        <li><strong>建议2：</strong>建立快速反馈循环 - 简化用户反馈收集和分析流程</li>
+        <li><strong>建议3：</strong>保持灵活性 - 准备根据反馈调整产品方向</li>
+        <li><strong>建议4：</strong>管理期望值 - 向用户明确传达产品处于早期阶段</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>MVP 进化逻辑在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>移动应用开发 - 先推出核心功能的简化版，再逐步添加高级特性</li>
+        <li><strong>案例2：</strong> SaaS 产品 - 先服务小众用户群体，再扩展功能和市场</li>
+        <li><strong>案例3：</strong>硬件产品 - 先推出功能简化的原型，再改进设计和性能</li>
+        <li><strong>案例4：</strong>内容平台 - 先建立基础内容库，再根据用户偏好扩展内容类型</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>核心谬误</h3>
