--- a/thinking-models/NK模型.html
+++ b/thinking-models/NK模型.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -76,6 +75,71 @@
   <div class="text-content">
     <h1>NK 适应性景观 (NK Model)</h1>
     <p>考夫曼提出。N 代表系统元件数，K 代表元件间的相互依赖（耦合）程度。K 值越高，景观越崎岖，充满无数个“局部最优”山峰，让进化迷失其中。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>NK 模型是一种用于描述复杂系统适应性的理论框架，通过模拟系统元件及其相互依赖关系，展示系统如何在适应过程中面临局部最优陷阱。</p>
+      <ul>
+        <li>关键要素1：系统元件 (N) - 系统的组成部分数量</li>
+        <li>关键要素2：相互依赖 (K) - 元件间的耦合程度</li>
+        <li>关键要素3：适应性景观 - 系统可能状态的价值分布</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>NK 模型的核心原则基于复杂系统理论和进化生物学。</p>
+      <ul>
+        <li><strong>原则1：</strong>复杂度诅咒 - 系统越复杂（K值越高），越容易陷入局部最优</li>
+        <li><strong>原则2：</strong>适应性限制 - 高度耦合的系统难以通过渐进式改进实现全局最优</li>
+        <li><strong>原则3：</strong>模块化优势 - 降低耦合度可以提高系统的适应性</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>NK 模型适用于分析各种复杂系统的适应性和进化过程。</p>
+      <ul>
+        <li>组织管理 - 企业结构和流程优化</li>
+        <li>产品开发 - 软件架构设计和技术演进</li>
+        <li>生态系统 - 生物进化和物种适应</li>
+        <li>社会系统 - 文化演化和制度变迁</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何应用 NK 模型思维分析和优化复杂系统。</p>
+      <ul>
+        <li><strong>技巧1：</strong>耦合度评估 - 分析系统元件间的依赖关系强度</li>
+        <li><strong>技巧2：</strong>模块化设计 - 将系统分解为低耦合的子系统</li>
+        <li><strong>技巧3：</strong>战略跳跃 - 在陷入局部最优时采用颠覆性策略</li>
+        <li><strong>技巧4：</strong>适应性测试 - 定期评估系统对变化的适应能力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何降低系统复杂度，提高适应性。</p>
+      <ul>
+        <li><strong>建议1：</strong>去中心化 - 减少层级依赖，赋予子系统更多自主权</li>
+        <li><strong>建议2：</strong>接口标准化 - 通过标准接口降低元件间的直接依赖</li>
+        <li><strong>建议3：</strong>冗余设计 - 引入多样性以提高系统的鲁棒性</li>
+        <li><strong>建议4：</strong>实验文化 - 鼓励小范围试错和创新</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>NK 模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>软件架构 - 从单体应用向微服务架构转型，降低模块间耦合</li>
+        <li><strong>案例2：</strong>企业管理 - 建立扁平化组织，减少层级依赖，提高决策速度</li>
+        <li><strong>案例3：</strong>产品创新 - 在现有产品基础上进行颠覆性创新，突破局部最优</li>
+        <li><strong>案例4：</strong>城市规划 - 通过功能分区和交通优化，提高城市系统的适应性</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>复杂度诅咒</h3>
