--- a/thinking-models/OKR目标管理.html
+++ b/thinking-models/OKR目标管理.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -85,6 +84,72 @@
   <div class="text-content">
     <h1>OKR 目标管理</h1>
     <p>Objective 是我们要去的远方，Key Results 是脚下的路标。它不是绩效工具，而是组织的对齐引擎。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>OKR（Objectives and Key Results）是一种目标管理框架，通过设定明确的目标和可量化的关键结果，帮助组织实现战略对齐和聚焦。</p>
+      <ul>
+        <li>关键要素1：目标 (Objective) - 定性的、鼓舞人心的方向</li>
+        <li>关键要素2：关键结果 (Key Results) - 量化的、可衡量的成果</li>
+        <li>关键要素3：对齐机制 - 确保个人和团队目标与组织战略一致</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>OKR 的核心原则基于目标设定理论和组织管理实践。</p>
+      <ul>
+        <li><strong>原则1：</strong>挑战性目标 - 设定具有雄心的目标以激发潜力</li>
+        <li><strong>原则2：</strong>量化管理 - 通过可衡量的关键结果追踪进度</li>
+        <li><strong>原则3：</strong>透明公开 - 确保所有目标对组织成员可见</li>
+        <li><strong>原则4：</strong>定期回顾 - 频繁检查进度并调整策略</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>OKR 适用于各种规模和类型的组织。</p>
+      <ul>
+        <li>企业管理 - 战略规划和执行</li>
+        <li>团队协作 - 项目管理和目标对齐</li>
+        <li>个人发展 - 职业规划和技能提升</li>
+        <li>创业公司 - 快速成长和方向调整</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效实施和应用 OKR 框架。</p>
+      <ul>
+        <li><strong>技巧1：</strong>目标设定 - 确保目标具有挑战性但可实现</li>
+        <li><strong>技巧2：</strong>关键结果设计 - 每个关键结果必须可量化和可验证</li>
+        <li><strong>技巧3：</strong>周期管理 - 设定合理的 OKR 周期（通常为季度）</li>
+        <li><strong>技巧4：</strong>回顾机制 - 定期检查进度并进行反思</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 OKR 的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>自上而下与自下而上结合 - 确保战略对齐和团队参与</li>
+        <li><strong>建议2：</strong>避免过度设定 - 每个周期设定 3-5 个目标即可</li>
+        <li><strong>建议3：</strong>与绩效评估分离 - OKR 是成长工具而非考核工具</li>
+        <li><strong>建议4：</strong>培养 OKR 文化 - 通过培训和示例建立 OKR 思维</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>OKR 在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>科技公司 - 产品开发和市场拓展</li>
+        <li><strong>案例2：</strong>市场营销 -  campaign 规划和效果追踪</li>
+        <li><strong>案例3：</strong>个人成长 - 技能学习和职业发展</li>
+        <li><strong>案例4：</strong>非营利组织 - 项目管理和社会影响力评估</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>O 的法则</h3>
