--- a/thinking-models/OODA循环.html
+++ b/thinking-models/OODA循环.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>OOda 循环</title><style>
+  <title>OODA 循环</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -67,12 +66,12 @@
         <g transform="translate(0, 220)">
           <circle r="70" fill="#ef4444" fill-opacity="0.6" />
           <text text-anchor="middle" y="5" fill="white" style="font-size: 24px; font-weight: 900;">决策</text>
-          <text y="40" text-anchor="middle" fill="#ef4444" style="font-size: 10px; font-weight: 800;">(decide)</text>
+          <text y="40" text-anchor="middle" fill="#ef4444" style="font-size: 10px; font-weight: 800;">(Decide)</text>
         </g>
         <g transform="translate(-220, 0)">
           <circle r="70" fill="#ef4444" />
-          <text text-anchor="middle" y="5" fill="white" style="font-size: 24px; font-weight: 900;">a</text>
-          <text y="40" text-anchor="middle" fill="#ef4444" style="font-size: 10px; font-weight: 800;">(act)</text>
+          <text text-anchor="middle" y="5" fill="white" style="font-size: 24px; font-weight: 900;">行动</text>
+          <text y="40" text-anchor="middle" fill="#ef4444" style="font-size: 10px; font-weight: 800;">(Act)</text>
           <circle r="90" fill="none" stroke="#ef4444" stroke-width="2" class="animate-ping" />
         </g>
 
@@ -82,25 +81,92 @@
           <line x1="0" y1="0" x2="0" y2="-220" stroke="#ef4444" stroke-width="4" stroke-linecap="round" opacity="0.3" />
         </g>
       </g>
-      <text x="500" y="80" text-anchor="middle" fill="#ef4444" style="font-size: 32px; font-weight: 900; letter-spacing: 0.1em; opacity: 0.2;">S计划EEd BEaTS 计划ERFEcT我ON</text>
+      <text x="500" y="80" text-anchor="middle" fill="#ef4444" style="font-size: 32px; font-weight: 900; letter-spacing: 0.1em; opacity: 0.2;">SPEED BEATS PERFECTION</text>
     </svg>
   </div>
   <div class="text-content">
-    <h1>OOda 循环</h1>
+    <h1>OODA 循环</h1>
     <p>由空军战略家约翰·博伊德提出。在不确定的对抗环境中，获胜的关键不在于计划的完美，而在于决策循环的速度是否能快于对手的反应时间。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>OODA 循环（观察 - 调整 - 决策 - 行动）是一种决策框架，强调在快速变化的环境中通过迭代式决策获得优势。</p>
+      <ul>
+        <li>关键要素1：观察 (Observe) - 收集信息和数据</li>
+        <li>关键要素2：调整 (Orient) - 分析信息并形成理解</li>
+        <li>关键要素3：决策 (Decide) - 基于分析做出决策</li>
+        <li>关键要素4：行动 (Act) - 执行决策并观察结果</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>OODA 循环的核心原则基于军事战略和决策理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>速度优势 - 决策循环速度快于对手</li>
+        <li><strong>原则2：</strong>迭代学习 - 通过反馈不断调整和改进</li>
+        <li><strong>原则3：</strong>适应变化 - 在不确定环境中保持灵活性</li>
+        <li><strong>原则4：</strong>认知优势 - 形成更准确的环境理解</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>OODA 循环适用于各种需要快速决策的动态环境。</p>
+      <ul>
+        <li>军事战略 - 战场决策和战术执行</li>
+        <li>商业竞争 - 市场竞争和战略决策</li>
+        <li>创业创新 - 快速迭代和市场适应</li>
+        <li>个人决策 - 危机处理和问题解决</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 OODA 循环进行决策。</p>
+      <ul>
+        <li><strong>技巧1：</strong>缩短循环时间 - 减少每个步骤的时间消耗</li>
+        <li><strong>技巧2：</strong>增强观察能力 - 建立多维度的信息收集系统</li>
+        <li><strong>技巧3：</strong>优化调整过程 - 培养快速分析和理解能力</li>
+        <li><strong>技巧4：</strong>行动优先 - 接受“大致正确”的决策并快速执行</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 OODA 循环的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>训练快速决策 - 通过模拟和练习提高决策速度</li>
+        <li><strong>建议2：</strong>建立反馈机制 - 确保行动结果能及时反馈到观察阶段</li>
+        <li><strong>建议3：</strong>保持灵活性 - 避免过度计划，预留调整空间</li>
+        <li><strong>建议4：</strong>破坏对手循环 - 通过干扰对手的观察和决策过程获得优势</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>OODA 循环在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>军事作战 - 战斗机飞行员的空中格斗战术</li>
+        <li><strong>案例2：</strong>商业竞争 - 科技公司的产品迭代和市场响应</li>
+        <li><strong>案例3：</strong>创业公司 - 快速试错和市场验证</li>
+        <li><strong>案例4：</strong>个人危机 - 紧急情况下的快速决策和行动</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>核心逻辑</h3>
         <ul>
           <li><strong>观察与调整：</strong>这是循环最难的部分。不仅要看发生了什么（观察），更要通过自己的心智模型和文化背景过滤掉错觉（调整）。</li>
-          <li><strong>速度溢价：</strong>只要你的 OOda 循环比对手快，你就能制造出对手无法理解和反应的混乱场域。</li>
+          <li><strong>速度溢价：</strong>只要你的 OODA 循环比对手快，你就能制造出对手无法理解和反应的混乱场域。</li>
         </ul>
       </div>
       <div>
         <h3>实战应用</h3>
         <ul>
-          <li><strong>敏捷生存：</strong>在创业或危机处理中，先做一个“大致正确”的决定并a，通过反馈快速修正，优于长期的推演。</li>
-          <li><strong>破坏节奏：</strong>通过出其不意的a，强行中断对手的观察阶段，使其决策始终建立在旧的现实上。</li>
+          <li><strong>敏捷生存：</strong>在创业或危机处理中，先做一个“大致正确”的决定并行动，通过反馈快速修正，优于长期的推演。</li>
+          <li><strong>破坏节奏：</strong>通过出其不意的行动，强行中断对手的观察阶段，使其决策始终建立在旧的现实上。</li>
         </ul>
       </div>
     </div>
