--- a/thinking-models/PDCA循环.html
+++ b/thinking-models/PDCA循环.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>计划DCa 循环</title><style>
+  <title>PDCA 循环</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -57,26 +56,26 @@
         <!-- 计划 -->
         <g transform="translate(0, -280)">
           <circle r="80" fill="#3b82f6" />
-          <text y="15" text-anchor="middle" fill="white" style="font-size: 52px; font-weight: 900;">计划</text>
-          <text y="130" text-anchor="middle" fill="#3b82f6" style="font-size: 28px; font-weight: 900;">计划</text>
+          <text y="15" text-anchor="middle" fill="white" style="font-size: 32px; font-weight: 900;">计划</text>
+          <text y="130" text-anchor="middle" fill="#3b82f6" style="font-size: 28px; font-weight: 900;">Plan</text>
         </g>
-        <!-- D -->
+        <!-- 执行 -->
         <g transform="translate(280, 0)">
           <circle r="80" fill="#10b981" />
-          <text y="15" text-anchor="middle" fill="white" style="font-size: 52px; font-weight: 900;">D</text>
-          <text x="100" y="10" text-anchor="start" fill="#10b981" style="font-size: 28px; font-weight: 900;">D</text>
+          <text y="15" text-anchor="middle" fill="white" style="font-size: 32px; font-weight: 900;">执行</text>
+          <text x="100" y="10" text-anchor="start" fill="#10b981" style="font-size: 28px; font-weight: 900;">Do</text>
         </g>
-        <!-- C -->
+        <!-- 检查 -->
         <g transform="translate(0, 280)">
           <circle r="80" fill="#f59e0b" />
-          <text y="15" text-anchor="middle" fill="white" style="font-size: 52px; font-weight: 900;">C</text>
-          <text y="130" text-anchor="middle" fill="#f59e0b" style="font-size: 28px; font-weight: 900;">C</text>
+          <text y="15" text-anchor="middle" fill="white" style="font-size: 32px; font-weight: 900;">检查</text>
+          <text y="130" text-anchor="middle" fill="#f59e0b" style="font-size: 28px; font-weight: 900;">Check</text>
         </g>
-        <!-- a -->
+        <!-- 处理 -->
         <g transform="translate(-280, 0)">
           <circle r="80" fill="#ef4444" />
-          <text y="15" text-anchor="middle" fill="white" style="font-size: 52px; font-weight: 900;">a</text>
-          <text x="-100" y="10" text-anchor="end" fill="#ef4444" style="font-size: 28px; font-weight: 900;">处理</text>
+          <text y="15" text-anchor="middle" fill="white" style="font-size: 32px; font-weight: 900;">处理</text>
+          <text x="-100" y="10" text-anchor="end" fill="#ef4444" style="font-size: 28px; font-weight: 900;">Act</text>
         </g>
 
         <text text-anchor="middle" y="15" fill="#ef4444" style="font-size: 42px; font-weight: 900; opacity: 0.1; letter-spacing: 0.3em;">螺旋上升</text>
@@ -85,14 +84,81 @@
   </div>
 
   <div class="text-content">
-    <h1>计划DCa 循环</h1>
+    <h1>PDCA 循环</h1>
     <p>质量管理之父戴明的遗赠。它不是圆形的重复，而是螺旋式的上升。每一圈的终点，都是更高维度的起点。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>PDCA 循环（计划 - 执行 - 检查 - 处理）是一种持续改进的管理方法，通过系统性的迭代过程实现质量和绩效的不断提升。</p>
+      <ul>
+        <li>关键要素1：计划 (Plan) - 设定目标和制定行动计划</li>
+        <li>关键要素2：执行 (Do) - 实施计划并收集数据</li>
+        <li>关键要素3：检查 (Check) - 对比结果与目标，分析偏差</li>
+        <li>关键要素4：处理 (Act) - 标准化成功经验，处理未解决问题</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>PDCA 循环的核心原则基于质量管理和持续改进理念。</p>
+      <ul>
+        <li><strong>原则1：</strong>系统性思考 - 以整体视角看待问题</li>
+        <li><strong>原则2：</strong>数据驱动 - 基于事实和数据做出决策</li>
+        <li><strong>原则3：</strong>持续改进 - 通过迭代实现渐进式优化</li>
+        <li><strong>原则4：</strong>标准化 - 将成功经验转化为标准流程</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>PDCA 循环适用于各种需要持续改进的场景。</p>
+      <ul>
+        <li>质量管理 - 产品和服务质量提升</li>
+        <li>流程优化 - 业务流程和工作流程改进</li>
+        <li>项目管理 - 项目执行和监控</li>
+        <li>个人发展 - 技能提升和习惯养成</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 PDCA 循环进行持续改进。</p>
+      <ul>
+        <li><strong>技巧1：</strong>目标设定 - 确保目标具体、可衡量、可实现</li>
+        <li><strong>技巧2：</strong>小步快跑 - 从小规模试点开始，逐步扩大范围</li>
+        <li><strong>技巧3：</strong>数据收集 - 建立有效的数据收集和分析机制</li>
+        <li><strong>技巧4：</strong>经验总结 - 定期回顾和总结经验教训</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 PDCA 循环的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>建立改进文化 - 鼓励团队成员积极参与改进</li>
+        <li><strong>建议2：</strong>可视化管理 - 使用图表和工具展示改进过程</li>
+        <li><strong>建议3：</strong>定期评审 - 设定固定的改进评审会议</li>
+        <li><strong>建议4：</strong>知识管理 - 建立经验教训数据库</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>PDCA 循环在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>制造业 - 产品质量控制和生产流程优化</li>
+        <li><strong>案例2：</strong>服务业 - 客户服务质量提升</li>
+        <li><strong>案例3：</strong>软件开发 - 敏捷开发和持续集成</li>
+        <li><strong>案例4：</strong>个人成长 - 习惯养成和技能提升计划</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>四步协议</h3>
         <ul>
-          <li><strong>计划/D：</strong>基于现状设定具体目标，并从小规模试点开始快速验证。</li>
-          <li><strong>C/a：</strong>对比结果发现偏差，总结经验并将其标准化，进入下一轮跃迁。</li>
+          <li><strong>计划/执行：</strong>基于现状设定具体目标，并从小规模试点开始快速验证。</li>
+          <li><strong>检查/处理：</strong>对比结果发现偏差，总结经验并将其标准化，进入下一轮跃迁。</li>
         </ul>
       </div>
       <div>
