--- a/thinking-models/PESTEL分析.html
+++ b/thinking-models/PESTEL分析.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>计划ESTEL 分析</title><style>
+  <title>PESTEL 分析</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -73,14 +72,83 @@
   </div>
 
   <div class="text-content">
-    <h1>计划ESTEL 分析</h1>
-    <p>捕捉那些决定生存的宏观巨浪。企业不只是在行业内竞争，更是在复杂的外部大气层中航行。计划ESTEL 帮你预判未来的断裂点。</p>
+    <h1>PESTEL 分析</h1>
+    <p>捕捉那些决定生存的宏观巨浪。企业不只是在行业内竞争，更是在复杂的外部大气层中航行。PESTEL 帮你预判未来的断裂点。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>PESTEL 分析是一种宏观环境分析工具，通过六个维度评估外部环境对组织的影响。</p>
+      <ul>
+        <li>关键要素1：政治 (Political) - 政府政策、法律法规等政治因素</li>
+        <li>关键要素2：经济 (Economic) - 经济增长、通货膨胀、汇率等经济因素</li>
+        <li>关键要素3：社会 (Social) - 人口结构、文化趋势、消费习惯等社会因素</li>
+        <li>关键要素4：技术 (Technological) - 技术创新、自动化、数字化等技术因素</li>
+        <li>关键要素5：环境 (Environmental) - 环保法规、可持续发展、气候变化等环境因素</li>
+        <li>关键要素6：法律 (Legal) - 法律法规、行业规范、知识产权等法律因素</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>PESTEL 分析的核心原则基于战略管理和环境扫描理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>系统性思考 - 全面评估所有外部环境因素</li>
+        <li><strong>原则2：</strong>前瞻性分析 - 预测未来趋势和变化</li>
+        <li><strong>原则3：</strong>相关性评估 - 重点关注对组织影响最大的因素</li>
+        <li><strong>原则4：</strong>动态更新 - 定期更新分析以反映环境变化</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>PESTEL 分析适用于各种需要评估外部环境的场景。</p>
+      <ul>
+        <li>战略规划 - 企业长期战略制定</li>
+        <li>市场进入 - 新市场或新业务评估</li>
+        <li>风险评估 - 识别外部环境风险</li>
+        <li>机会识别 - 发现潜在的市场机会</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 PESTEL 分析进行环境评估。</p>
+      <ul>
+        <li><strong>技巧1：</strong>结构化分析 - 按照六个维度系统收集信息</li>
+        <li><strong>技巧2：</strong>优先级排序 - 对因素影响程度进行评估和排序</li>
+        <li><strong>技巧3：</strong>情景规划 - 基于关键因素变化构建不同情景</li>
+        <li><strong>技巧4：</strong>整合分析 - 将 PESTEL 与其他分析工具结合使用</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 PESTEL 分析的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>团队协作 - 汇集不同领域专家的见解</li>
+        <li><strong>建议2：</strong>数据支持 - 基于可靠数据和信息进行分析</li>
+        <li><strong>建议3：</strong>定期更新 - 每半年或一年进行一次全面更新</li>
+        <li><strong>建议4：</strong>行动导向 - 将分析结果转化为具体的战略行动</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>PESTEL 分析在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>企业战略 - 制定五年发展规划时评估外部环境</li>
+        <li><strong>案例2：</strong>市场进入 - 评估进入新国家或地区市场的可行性</li>
+        <li><strong>案例3：</strong>产品开发 - 基于社会和技术趋势开发新产品</li>
+        <li><strong>案例4：</strong>投资决策 - 评估投资机会的外部环境风险和机会</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>扫描重点</h3>
         <ul>
           <li><strong>非线性拐点：</strong>寻找法律或技术层面的突然断裂，那通常是颠覆性机会的温床。</li>
-          <li><strong>外部依赖：</strong>没有任何业务是孤立的。计划ESTEL 能帮你识别出那些隐藏的系统性风险。</li>
+          <li><strong>外部依赖：</strong>没有任何业务是孤立的。PESTEL 能帮你识别出那些隐藏的系统性风险。</li>
         </ul>
       </div>
       <div>
