--- a/thinking-models/PMF模型.html
+++ b/thinking-models/PMF模型.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>计划MF 适配模型</title><style>
+  <title>PMF 适配模型</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -65,24 +64,91 @@
         <rect x="230" y="10" width="20" height="25" fill="#fbbf24" rx="4" />
         <text x="110" y="110" text-anchor="middle" fill="#fbbf24" style="font-size: 32px; font-weight: 900;">产品方案 (钥匙)</text>
       </g>
-      <text x="500" y="80" text-anchor="middle" fill="#ef4444" style="font-size: 48px; font-weight: 900; letter-spacing: 0.2em; opacity: 0.1;">计划ROdUcT MaRKET F我T</text>
+      <text x="500" y="80" text-anchor="middle" fill="#ef4444" style="font-size: 48px; font-weight: 900; letter-spacing: 0.2em; opacity: 0.1;">PRODUCT MARKET FIT</text>
     </svg>
   </div>
   <div class="text-content">
-    <h1>计划MF 适配模型</h1>
+    <h1>PMF 适配模型</h1>
     <p>创业公司唯一的任务：就是在资源耗尽之前，让产品（钥匙）与市场（锁）达成那个能产生自发增长的完美契合点。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>PMF (Product-Market Fit) 是指产品与市场需求的完美匹配状态，当产品能够满足市场的核心需求并产生自发增长时，就达到了 PMF。</p>
+      <ul>
+        <li>关键要素1：市场需求 - 未被满足的用户痛点或需求</li>
+        <li>关键要素2：产品解决方案 - 能够有效解决市场需求的产品功能</li>
+        <li>关键要素3：用户验证 - 用户对产品的接受度和满意度</li>
+        <li>关键要素4：增长动力 - 产品的自发传播和增长能力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>PMF 的核心原则基于产品管理和创业理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>市场优先 - 先理解市场需求，再开发产品</li>
+        <li><strong>原则2：</strong>用户导向 - 以用户反馈为中心进行产品迭代</li>
+        <li><strong>原则3：</strong>专注核心 - 聚焦于解决用户最痛的核心问题</li>
+        <li><strong>原则4：</strong>数据驱动 - 通过数据验证产品与市场的匹配度</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>PMF 适用于各种产品开发和创业场景。</p>
+      <ul>
+        <li>创业公司 - 新产品或新服务的市场验证</li>
+        <li>产品开发 - 现有产品的市场适配调整</li>
+        <li>市场拓展 - 产品进入新市场的适配</li>
+        <li>创新项目 - 内部创新项目的市场验证</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效寻找和验证 PMF。</p>
+      <ul>
+        <li><strong>技巧1：</strong>用户访谈 - 深入了解用户痛点和需求</li>
+        <li><strong>技巧2：</strong>最小可行产品 - 通过 MVP 快速验证假设</li>
+        <li><strong>技巧3：</strong>数据指标 - 建立关键指标体系评估 PMF</li>
+        <li><strong>技巧4：</strong>迭代优化 - 基于用户反馈持续改进产品</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何提高找到 PMF 的概率。</p>
+      <ul>
+        <li><strong>建议1：</strong>及早验证 - 在投入大量资源前进行市场验证</li>
+        <li><strong>建议2：</strong>专注细分 - 先在细分市场找到 PMF，再扩展</li>
+        <li><strong>建议3：</strong>保持灵活 - 准备根据市场反馈调整产品方向</li>
+        <li><strong>建议4：</strong>持续监控 - 即使找到 PMF 也要持续关注市场变化</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>PMF 在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>科技创业 - 找到产品与目标用户的完美匹配</li>
+        <li><strong>案例2：</strong>传统企业 - 新产品线的市场验证</li>
+        <li><strong>案例3：</strong>SaaS 产品 - 通过用户反馈迭代找到 PMF</li>
+        <li><strong>案例4：</strong>移动应用 - 在竞争激烈的市场中找到差异化优势</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>适配逻辑</h3>
         <ul>
           <li><strong>锁是残酷的：</strong>市场痛点是客观存在的物理事实。你不能强迫用户改变习惯来适应你的“精美钥匙”。</li>
-          <li><strong>动态迭代：</strong>计划MF 不是一次性的，它是通过不断的 MV计划 实验，磨掉钥匙上多余的、不匹配的齿痕。</li>
+          <li><strong>动态迭代：</strong>PMF 不是一次性的，它是通过不断的 MVP 实验，磨掉钥匙上多余的、不匹配的齿痕。</li>
         </ul>
       </div>
       <div>
         <h3>判别标准</h3>
         <ul>
-          <li><strong>留存曲线：</strong>如果留存曲线在中长期变平且不归零，说明你已经触碰到了 计划MF 的边缘。</li>
+          <li><strong>留存曲线：</strong>如果留存曲线在中长期变平且不归零，说明你已经触碰到了 PMF 的边缘。</li>
           <li><strong>自发推荐：</strong>最好的证明不是广告转化，而是用户因为无法忍受失去你的产品而疯狂向他人安利。</li>
         </ul>
       </div>
