--- a/thinking-models/RFM模型.html
+++ b/thinking-models/RFM模型.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -75,18 +74,85 @@
            <text y="30" text-anchor="middle" fill="#ef4444" style="font-size: 10px;">即将流失</text>
         </g>
       </g>
-      <text x="500" y="60" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">C我们TOMER VaLUE QUaNT我F我CaT我ON</text>
+      <text x="500" y="60" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">Customer Value Quantification</text>
     </svg>
   </div>
   <div class="text-content">
     <h1>RFM 用户价值模型</h1>
     <p>衡量用户生命周期价值的经典工具。通过 R (最近消费)、F (消费频率)、M (消费金额) 三个物理指标，将用户精准分层并制定策略。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>RFM (Recency, Frequency, Monetary) 模型是一种用户价值评估工具，通过三个关键指标对用户进行分层，帮助企业识别高价值用户并制定针对性的营销策略。</p>
+      <ul>
+        <li>关键要素1：最近消费 (Recency) - 用户最后一次购买的时间，反映用户活跃度</li>
+        <li>关键要素2：消费频率 (Frequency) - 用户在一定时间内的购买次数，反映用户忠诚度</li>
+        <li>关键要素3：消费金额 (Monetary) - 用户在一定时间内的消费总额，反映用户消费能力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>RFM 模型的核心原则基于客户关系管理和价值营销理念。</p>
+      <ul>
+        <li><strong>原则1：</strong>差异化管理 - 根据用户价值不同采取不同的管理策略</li>
+        <li><strong>原则2：</strong>数据驱动 - 基于客观数据进行用户分层和价值评估</li>
+        <li><strong>原则3：</strong>动态调整 - 定期更新用户数据，反映用户价值的变化</li>
+        <li><strong>原则4：</strong>价值最大化 - 重点关注高价值用户，优化资源配置</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>RFM 模型适用于各种需要用户价值评估和分层的场景。</p>
+      <ul>
+        <li>零售行业 - 客户价值评估和忠诚度管理</li>
+        <li>电商平台 - 用户分层和个性化营销</li>
+        <li>金融服务 - 客户价值评估和风险控制</li>
+        <li>订阅服务 - 用户留存和 churn 预测</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 RFM 模型进行用户价值评估。</p>
+      <ul>
+        <li><strong>技巧1：</strong>指标标准化 - 将 R、F、M 三个指标标准化为相同的尺度</li>
+        <li><strong>技巧2：</strong>分位数划分 - 使用分位数将用户划分为不同层次</li>
+        <li><strong>技巧3：</strong>组合分析 - 分析不同 RFM 组合的用户特征和行为</li>
+        <li><strong>技巧4：</strong>趋势分析 - 追踪用户 RFM 值的变化趋势</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 RFM 模型的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>定期更新 - 每季度或半年更新一次 RFM 数据</li>
+        <li><strong>建议2：</strong>结合其他指标 - 与用户行为、偏好等指标结合使用</li>
+        <li><strong>建议3：</strong>制定分层策略 - 为不同 RFM 层级的用户制定专属策略</li>
+        <li><strong>建议4：</strong>测试优化 - 不断测试和优化 RFM 模型的应用效果</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>RFM 模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>电商平台 - 识别高价值用户并提供专属优惠</li>
+        <li><strong>案例2：</strong>零售企业 - 针对不同 RFM 层级的用户制定不同的促销策略</li>
+        <li><strong>案例3：</strong>金融机构 - 基于 RFM 值评估客户风险和价值</li>
+        <li><strong>案例4：</strong>订阅服务 - 预测用户 churn 风险并制定留存策略</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>指标解剖</h3>
         <ul>
           <li><strong>R (Recency)：</strong>离现在越近，用户活跃度越高，对新活动的响应概率就越大。</li>
           <li><strong>F (Frequency)：</strong>代表了忠诚度和习惯。高频用户是系统的基座。</li>
+          <li><strong>M (Monetary)：</strong>反映了用户的消费能力和价值贡献。</li>
         </ul>
       </div>
       <div>
@@ -94,6 +160,7 @@
         <ul>
           <li><strong>高价值维护：</strong>R/F/M 全高的用户是企业的生命线，应提供最高级别的特权服务。</li>
           <li><strong>唤醒策略：</strong>对于 R 值极高（好久没来）但 F/M 曾经很高的用户，应进行针对性的防流失挽回。</li>
+          <li><strong>培育计划：</strong>对于 F/M 较低但 R 较近的新用户，应通过激励提高其消费频率和金额。</li>
         </ul>
       </div>
     </div>
