--- a/thinking-models/SCAMPER创意法.html
+++ b/thinking-models/SCAMPER创意法.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>Sc是计划ER 创新法</title><style>
+  <title>SCAMPER 创新法</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -65,27 +64,99 @@
         <!-- 卫星维度 (全量汉化) -->
         <g fill="#ef4444" font-weight="900" style="font-size: 18px;">
           <text x="0" y="-280" text-anchor="middle">替代 (Substitute)</text>
-          <text x="320" y="0" text-anchor="start">合并 (combine)</text>
+          <text x="320" y="0" text-anchor="start">合并 (Combine)</text>
           <text x="250" y="280" text-anchor="start">适应 (Adapt)</text>
           <text x="0" y="360" text-anchor="middle">修改 (Modify)</text>
-          <text x="-250" y="280" text-anchor="end">用途 (计划ut to other use)</text>
+          <text x="-250" y="280" text-anchor="end">用途 (Put to other use)</text>
           <text x="-320" y="0" text-anchor="end">消除 (Eliminate)</text>
           <text x="-250" y="-280" text-anchor="end">反转 (Reverse)</text>
         </g>
       </g>
-      <text x="500" y="80" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 20px; font-weight: 900; letter-spacing: 0.5em;">SYSTEMAT我c cREAT我V我TY ENG我NE</text>
+      <text x="500" y="80" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 20px; font-weight: 900; letter-spacing: 0.5em;">SYSTEMATIC CREATIVITY ENGINE</text>
     </svg>
   </div>
 
   <div class="text-content">
-    <h1>Sc是计划ER 创新法</h1>
+    <h1>SCAMPER 创新法</h1>
     <p>一种强制性的发散思维工具。通过七个维度的手术刀式切口，对现有事物进行彻底的解构与异化重组。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>SCAMPER 创意法是一种系统化的创新思维工具，通过七个维度的思考框架，帮助人们打破思维惯性，产生新颖的创意和解决方案。</p>
+      <ul>
+        <li>关键要素1：替代 (Substitute) - 寻找可替代的材料、流程或组件</li>
+        <li>关键要素2：合并 (Combine) - 将不同的元素或功能组合在一起</li>
+        <li>关键要素3：适应 (Adapt) - 调整现有事物以适应新的情境</li>
+        <li>关键要素4：修改 (Modify) - 改变现有事物的形状、大小、颜色等属性</li>
+        <li>关键要素5：用途 (Put to other use) - 为现有事物寻找新的用途</li>
+        <li>关键要素6：消除 (Eliminate) - 移除现有事物中的某些元素</li>
+        <li>关键要素7：反转 (Reverse) - 颠倒现有事物的顺序或结构</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>SCAMPER 创意法的核心原则基于创造性思维和系统创新理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>系统性思考 - 通过结构化的框架覆盖所有可能的创新方向</li>
+        <li><strong>原则2：</strong>打破惯性 - 强制突破常规思维模式和习惯</li>
+        <li><strong>原则3：</strong>组合创新 - 通过重组现有元素创造新价值</li>
+        <li><strong>原则4：</strong>多维度思考 - 从多个角度审视问题和解决方案</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>SCAMPER 创意法适用于各种需要创新思维的场景。</p>
+      <ul>
+        <li>产品设计 - 开发新产品或改进现有产品</li>
+        <li>服务创新 - 设计新服务或优化现有服务</li>
+        <li>营销创意 - 制定创新的营销策略和活动</li>
+        <li>问题解决 - 寻找复杂问题的创新解决方案</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 SCAMPER 创意法进行创新思考。</p>
+      <ul>
+        <li><strong>技巧1：</strong>顺序应用 - 按顺序逐个应用七个维度进行思考</li>
+        <li><strong>技巧2：</strong>组合应用 - 同时应用多个维度进行组合创新</li>
+        <li><strong>技巧3：</strong>强制联想 - 对每个维度进行强制联想，不轻易否定任何想法</li>
+        <li><strong>技巧4：</strong>视觉化 - 使用思维导图等工具记录和可视化创意过程</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 SCAMPER 创意法的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>团队应用 - 组织头脑风暴会议，集体应用 SCAMPER 方法</li>
+        <li><strong>建议2：</strong>定期练习 - 将 SCAMPER 作为定期创新练习的工具</li>
+        <li><strong>建议3：</strong>案例研究 - 分析成功创新案例中 SCAMPER 原则的应用</li>
+        <li><strong>建议4：</strong>记录整理 - 建立创意档案，记录和整理 SCAMPER 产生的创意</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>SCAMPER 创意法在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>产品设计 - 通过替代材料和合并功能，开发出更轻、更多功能的笔记本电脑</li>
+        <li><strong>案例2：</strong>服务创新 - 通过适应和修改现有服务，为不同客户群体提供个性化服务</li>
+        <li><strong>案例3：</strong>营销创意 - 通过反转常规营销逻辑，创造出病毒式传播的营销活动</li>
+        <li><strong>案例4：</strong>问题解决 - 通过消除不必要的步骤和调整流程，优化生产效率</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>思考路径</h3>
         <ul>
           <li><strong>替代与合并：</strong>用新材料、新流程替换旧系统，或将两个无关的功能强行缝合。</li>
           <li><strong>消除与反转：</strong>做减法往往比做加法更具颠覆性，尝试将事物的逻辑顺序彻底颠倒。</li>
+          <li><strong>适应与修改：</strong>调整现有事物以适应新情境，或改变其属性创造新价值。</li>
+          <li><strong>用途转换：</strong>为现有事物寻找完全不同的使用场景。</li>
         </ul>
       </div>
       <div>
@@ -93,6 +164,8 @@
         <ul>
           <li><strong>打破僵局：</strong>当思路陷入惯性时，强制按照这 7 个字母进行一遍全方位自检。</li>
           <li><strong>组合拳：</strong>伟大的创新本质上就是对旧要素进行的“非共识重组”。</li>
+          <li><strong>快速迭代：</strong>不要追求一次性完美，通过快速试错和迭代不断优化创意。</li>
+          <li><strong>跨界应用：</strong>将其他领域的 SCAMPER 应用经验移植到当前问题中。</li>
         </ul>
       </div>
     </div>
