--- a/thinking-models/SWOT分析.html
+++ b/thinking-models/SWOT分析.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -86,19 +85,90 @@
   <div class="text-content">
     <h1>SWOT 分析</h1>
     <p>最经典的战略扫描工具。通过解构内部资源与外部环境的博弈，构建一套攻守兼备的A方案。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>SWOT 分析是一种战略规划工具，通过评估组织的优势 (Strengths)、劣势 (Weaknesses)、机遇 (Opportunities) 和威胁 (Threats)，帮助组织制定有效的战略决策。</p>
+      <ul>
+        <li>关键要素1：优势 (Strengths) - 组织内部的积极因素，如资源、能力、核心竞争力</li>
+        <li>关键要素2：劣势 (Weaknesses) - 组织内部的消极因素，如资源不足、能力缺陷、竞争劣势</li>
+        <li>关键要素3：机遇 (Opportunities) - 外部环境中的积极因素，如市场趋势、技术发展、政策变化</li>
+        <li>关键要素4：威胁 (Threats) - 外部环境中的消极因素，如竞争加剧、市场萎缩、政策限制</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>SWOT 分析的核心原则基于战略管理和环境扫描理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>系统性思考 - 全面评估组织内部和外部环境</li>
+        <li><strong>原则2：</strong>客观真实 - 基于事实和数据进行分析，避免主观判断</li>
+        <li><strong>原则3：</strong>动态更新 - 定期更新分析以反映环境变化</li>
+        <li><strong>原则4：</strong>战略导向 - 分析结果应直接指导战略决策</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>SWOT 分析适用于各种需要战略规划和决策的场景。</p>
+      <ul>
+        <li>企业战略 - 制定长期发展战略和年度计划</li>
+        <li>项目管理 - 评估项目可行性和风险</li>
+        <li>个人发展 - 职业规划和自我评估</li>
+        <li>市场进入 - 评估新市场的机会和风险</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 SWOT 分析进行战略规划。</p>
+      <ul>
+        <li><strong>技巧1：</strong>结构化分析 - 按照 S、W、O、T 的顺序进行系统分析</li>
+        <li><strong>技巧2：</strong>矩阵组合 - 使用 SWOT 矩阵分析不同因素的组合影响</li>
+        <li><strong>技巧3：</strong>优先级排序 - 对因素进行重要性排序，聚焦关键因素</li>
+        <li><strong>技巧4：</strong>对比分析 - 与竞争对手进行 SWOT 对比，发现相对优势和劣势</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 SWOT 分析的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>团队参与 - 组织跨部门团队进行 SWOT 分析，获得多角度视角</li>
+        <li><strong>建议2：</strong>数据支持 - 基于市场调研、行业分析等数据进行分析</li>
+        <li><strong>建议3：</strong>定期更新 - 每季度或半年更新一次 SWOT 分析</li>
+        <li><strong>建议4：</strong>行动转化 - 将分析结果转化为具体的行动计划和目标</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>SWOT 分析在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>企业战略规划 - 制定五年发展战略，识别增长机会和风险</li>
+        <li><strong>案例2：</strong>新产品开发 - 评估新产品的市场机会和内部能力匹配度</li>
+        <li><strong>案例3：</strong>个人职业规划 - 评估自身优势和劣势，制定职业发展路径</li>
+        <li><strong>案例4：</strong>市场进入策略 - 评估进入新市场的机会和风险，制定进入策略</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>组合矩阵</h3>
         <ul>
           <li><strong>增长战略 (SO)：</strong>依靠内部优势，去抓住外部每一个爆发性的机遇。</li>
           <li><strong>防御战略 (WT)：</strong>在劣势明显且面临威胁时，果断收缩防线，避免系统性崩塌。</li>
+          <li><strong>扭转战略 (WO)：</strong>利用外部机遇来克服内部劣势。</li>
+          <li><strong>多元化战略 (ST)：</strong>利用内部优势来应对外部威胁。</li>
         </ul>
       </div>
       <div>
         <h3>D要点</h3>
         <ul>
-          <li><strong>客观审视：</strong>劣势并不等于“可以改进的缺点”，而是需要回避的系统性短板。</li>
+          <li><strong>客观审视：</strong>劣势并不等于"可以改进的缺点"，而是需要回避的系统性短板。</li>
           <li><strong>动态更新：</strong>环境机遇转瞬即逝，SWOT 必须随季度节奏高频迭代。</li>
+          <li><strong>战略聚焦：</strong>基于 SWOT 分析结果，聚焦于最有价值的战略方向。</li>
+          <li><strong>执行落地：</strong>将战略分析转化为具体的行动计划和衡量指标。</li>
         </ul>
       </div>
     </div>
