--- a/thinking-models/T型技能.html
+++ b/thinking-models/T型技能.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -67,6 +66,72 @@
   <div class="text-content">
     <h1>T 型人才模型</h1>
     <p>横向代表跨领域的视野与协作能力，纵向代表在某一特定领域的物理级穿透力。这是现代职场最具抗风险能力的生存结构。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>T 型人才模型是一种人才能力结构理论，通过横向的知识广度和纵向的专业深度两个维度，描述了现代社会所需的理想人才能力结构。</p>
+      <ul>
+        <li>关键要素1：纵向深度 (Vertical Depth) - 在特定领域的专业知识和技能深度</li>
+        <li>关键要素2：横向广度 (Horizontal Breadth) - 跨领域的知识视野和协作能力</li>
+        <li>关键要素3：整合能力 - 将不同领域的知识和技能整合应用的能力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>T 型人才模型的核心原则基于现代人才发展和知识管理理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>深度优先 - 先建立专业深度，再扩展知识广度</li>
+        <li><strong>原则2：</strong>广度赋能 - 跨领域知识为专业深度提供新视角和创新灵感</li>
+        <li><strong>原则3：</strong>整合价值 - 知识整合产生的价值大于单一领域知识的简单相加</li>
+        <li><strong>原则4：</strong>动态平衡 - 根据职业发展阶段和市场需求调整深度和广度的平衡</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>T 型人才模型适用于各种需要综合能力的场景。</p>
+      <ul>
+        <li>职业发展 - 个人职业规划和能力建设</li>
+        <li>人才培养 - 组织人才发展和培训规划</li>
+        <li>团队构建 - 打造互补型高效团队</li>
+        <li>教育体系 - 设计现代教育课程体系</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 T 型人才模型进行能力建设。</p>
+      <ul>
+        <li><strong>技巧1：</strong>阶段聚焦 - 职业初期聚焦深度建设，中期扩展广度</li>
+        <li><strong>技巧2：</strong>刻意练习 - 通过刻意练习深化专业技能</li>
+        <li><strong>技巧3：</strong>跨领域学习 - 系统性学习相关领域的基础知识</li>
+        <li><strong>技巧4：</strong>实践整合 - 在实际项目中整合应用不同领域的知识</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何构建 T 型能力结构。</p>
+      <ul>
+        <li><strong>建议1：</strong>制定能力发展计划 - 明确深度领域和广度拓展方向</li>
+        <li><strong>建议2：</strong>建立学习网络 - 与不同领域的专业人士建立学习交流网络</li>
+        <li><strong>建议3：</strong>参与跨学科项目 - 通过跨学科项目实践整合能力</li>
+        <li><strong>建议4：</strong>定期评估调整 - 定期评估能力结构，根据市场需求调整发展方向</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>T 型人才模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>产品经理 - 深度理解用户需求和产品设计，广度了解技术实现和市场营销</li>
+        <li><strong>案例2：</strong>数据科学家 - 深度掌握数据分析技术，广度了解业务领域知识</li>
+        <li><strong>案例3：</strong>企业家 - 深度了解行业运营，广度掌握战略管理和融资知识</li>
+        <li><strong>案例4：</strong>教师 - 深度掌握专业知识，广度了解教育心理学和教学方法</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>结构优势</h3>
@@ -80,6 +145,7 @@
         <ul>
           <li><strong>先纵后横：</strong>在职业初期，饱和式投入建立一个“一招鲜”的深度点，获得入场券。</li>
           <li><strong>主动出圈：</strong>在深度稳固后，系统性地学习心理学、商业逻辑和技术通识，完成 T 型的横向进化。</li>
+          <li><strong>持续整合：</strong>在实践中不断整合不同领域的知识，形成独特的能力优势。</li>
         </ul>
       </div>
     </div>
