--- a/thinking-models/VRIO模型.html
+++ b/thinking-models/VRIO模型.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>VR我O 核心竞争力</title><style>
+  <title>VRIO 核心竞争力</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -63,7 +62,7 @@
           <rect x="-40" y="-80" width="80" height="160" rx="10" fill="#3b82f6" fill-opacity="0.8" />
           <text text-anchor="middle" y="5" fill="white" style="font-size: 24px; font-weight: 900;" transform="rotate(-90)">稀缺性</text>
         </g>
-        <!-- 门槛 3: 我nimitability -->
+        <!-- 门槛 3: Inimitability -->
         <g transform="translate(400, 0)">
           <rect x="-40" y="-80" width="80" height="160" rx="10" fill="#3b82f6" fill-opacity="0.6" />
           <text text-anchor="middle" y="5" fill="white" style="font-size: 24px; font-weight: 900;" transform="rotate(-90)">难模仿</text>
@@ -88,8 +87,75 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>VR我O 核心竞争力模型</h1>
+    <h1>VRIO 核心竞争力模型</h1>
     <p>巴尼提出，用于审视企业资源是否能转化为持续的竞争优势。并非所有好的资源都是核心竞争力，它必须连续通过四个层级的筛选。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>VRIO 模型是一种用于评估企业资源和能力的战略分析工具，通过四个维度的评估框架，帮助企业识别和构建核心竞争力。</p>
+      <ul>
+        <li>关键要素1：价值性 (Value) - 资源能否帮助企业抓住机会或抵御威胁</li>
+        <li>关键要素2：稀缺性 (Rarity) - 资源是否被少数竞争者拥有</li>
+        <li>关键要素3：不可模仿性 (Inimitability) - 资源是否难以被竞争对手模仿或替代</li>
+        <li>关键要素4：组织力 (Organization) - 企业是否有能力组织和利用资源创造价值</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>VRIO 模型的核心原则基于资源基础理论和竞争优势理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>资源基础 - 企业的竞争优势来源于其独特的资源和能力</li>
+        <li><strong>原则2：</strong>持续竞争优势 - 只有同时具备价值性、稀缺性、不可模仿性和组织支持的资源才能带来持续竞争优势</li>
+        <li><strong>原则3：</strong>动态评估 - 资源的价值和稀缺性会随时间变化，需要定期评估</li>
+        <li><strong>原则4：</strong>系统性思考 - 资源的价值不仅取决于其本身，还取决于组织如何整合和利用它们</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>VRIO 模型适用于各种需要评估资源和能力的场景。</p>
+      <ul>
+        <li>企业战略 - 评估企业资源和能力，识别核心竞争力</li>
+        <li>并购决策 - 评估目标企业的资源价值</li>
+        <li>创业规划 - 识别创业企业的独特资源和能力</li>
+        <li>投资分析 - 评估企业的长期竞争潜力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用 VRIO 模型进行资源评估。</p>
+      <ul>
+        <li><strong>技巧1：</strong>系统性评估 - 按照 V、R、I、O 的顺序对资源进行全面评估</li>
+        <li><strong>技巧2：</strong>对比分析 - 与竞争对手进行资源对比，识别相对优势和劣势</li>
+        <li><strong>技巧3：</strong>动态评估 - 定期更新评估，反映资源价值的变化</li>
+        <li><strong>技巧4：</strong>整合分析 - 评估资源之间的协同效应和整合价值</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化 VRIO 模型的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>资源盘点 - 全面盘点企业的有形和无形资源</li>
+        <li><strong>建议2：</strong>竞争对手分析 - 了解竞争对手的资源状况</li>
+        <li><strong>建议3：</strong>能力建设 - 基于 VRIO 分析结果，有针对性地建设核心能力</li>
+        <li><strong>建议4：</strong>组织调整 - 优化组织结构和流程，更好地利用核心资源</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>VRIO 模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>科技公司 - 评估技术专利和研发能力的竞争价值</li>
+        <li><strong>案例2：</strong>消费品企业 - 评估品牌资产和客户忠诚度的竞争优势</li>
+        <li><strong>案例3：</strong>服务企业 - 评估服务流程和员工能力的独特价值</li>
+        <li><strong>案例4：</strong>制造业企业 - 评估生产技术和供应链能力的竞争潜力</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>四级漏斗</h3>
@@ -101,7 +167,7 @@
       <div>
         <h3>高级壁垒</h3>
         <ul>
-          <li><strong>不可模仿性 (我nimitability)：</strong>对手获得该资源的成本是否极高？(品牌、专利、复杂的历史沉淀)</li>
+          <li><strong>不可模仿性 (Inimitability)：</strong>对手获得该资源的成本是否极高？(品牌、专利、复杂的历史沉淀)</li>
           <li><strong>组织力 (Organization)：</strong>企业是否有配套的制度和文化来榨取该资源的全部潜力？</li>
         </ul>
       </div>
