--- a/thinking-models/一报还一报宽容.html
+++ b/thinking-models/一报还一报宽容.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -87,6 +86,73 @@
   <div class="text-content">
     <h1>宽恕型一报还一报 (Tit-for-Tat with Forgiveness)</h1>
     <p>博弈论的顶级智慧。单纯的一报还一报在有“噪音”（误解）的环境中会引发无限报复的死循环。宽恕型策略要求：在对方背叛后，有一定概率（如 10%）选择继续合作，以测试这是否只是一次意外。它是维护系统长期协作的终极粘合剂。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>宽恕型一报还一报是一种进化后的博弈策略，在保持报复威慑的同时，通过适度宽恕避免因误解导致的无限报复循环。</p>
+      <ul>
+        <li>关键要素1：初始合作 - 以合作开始互动</li>
+        <li>关键要素2：对等报复 - 对背叛行为进行相应惩罚</li>
+        <li>关键要素3：概率宽恕 - 以一定概率原谅对方的背叛</li>
+        <li>关键要素4：长期导向 - 关注长期整体收益而非短期得失</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>宽恕型一报还一报的核心原则基于博弈论和合作进化理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>善良性 - 始终以合作开始</li>
+        <li><strong>原则2：</strong>报复性 - 对背叛行为进行回应</li>
+        <li><strong>原则3：</strong>宽恕性 - 给予对方改过自新的机会</li>
+        <li><strong>原则4：</strong>清晰性 - 策略简单明了，让对方容易理解</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>宽恕型一报还一报适用于各种需要长期合作的互动场景。</p>
+      <ul>
+        <li>人际关系 - 朋友、家人、同事之间的互动</li>
+        <li>商业合作 - 企业间的长期合作关系</li>
+        <li>团队管理 - 团队内部的协作与冲突解决</li>
+        <li>国际关系 - 国家间的外交互动</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用宽恕型一报还一报策略。</p>
+      <ul>
+        <li><strong>技巧1：</strong>设定宽恕概率 - 根据环境噪音水平调整宽恕概率</li>
+        <li><strong>技巧2：</strong>明确沟通 - 让对方了解你的策略，增强可预测性</li>
+        <li><strong>技巧3：</strong>保持一致性 - 坚持策略，建立可靠形象</li>
+        <li><strong>技巧4：</strong>区分恶意与失误 - 尝试理解对方行为的原因</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何平衡报复与宽恕。</p>
+      <ul>
+        <li><strong>建议1：</strong>建立边界 - 明确哪些行为是不可接受的</li>
+        <li><strong>建议2：</strong>给予机会 - 对初次失误给予改正机会</li>
+        <li><strong>建议3：</strong>保持理性 - 避免情绪化的过度报复</li>
+        <li><strong>建议4：</strong>长期视角 - 关注长期合作的整体收益</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>宽恕型一报还一报在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>职场合作 - 处理同事的偶尔失误，维护团队和谐</li>
+        <li><strong>案例2：</strong>商业谈判 - 在合作中处理对方的临时变卦</li>
+        <li><strong>案例3：</strong>家庭关系 - 处理家庭成员间的矛盾与误解</li>
+        <li><strong>案例4：</strong>国际关系 - 通过外交手段解决国家间的分歧</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>策略优势</h3>
