--- a/thinking-models/上游思维.html
+++ b/thinking-models/上游思维.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -75,6 +74,73 @@
   <div class="text-content">
     <h1>上游思维</h1>
     <p>“与其不断把落水的人从下游救上来，不如去上游看看是谁在把他们推下去。”这是一种从根源解决问题的系统级思考方式。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>上游思维是一种预防性思维模式，强调从问题的根源入手，而不是仅仅处理表面症状。</p>
+      <ul>
+        <li>关键要素1：问题溯源 - 识别问题的根本原因</li>
+        <li>关键要素2：系统思考 - 理解问题所在的系统结构</li>
+        <li>关键要素3：预防措施 - 设计防止问题发生的机制</li>
+        <li>关键要素4：长期视角 - 关注长期效益而非短期应对</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>上游思维的核心原则基于系统理论和预防医学理念。</p>
+      <ul>
+        <li><strong>原则1：</strong>预防优先 - 防患于未然胜于事后补救</li>
+        <li><strong>原则2：</strong>根源解决 - 针对根本原因而非表面症状</li>
+        <li><strong>原则3：</strong>系统优化 - 改善整个系统而非局部修补</li>
+        <li><strong>原则4：</strong>协作共赢 - 跨越边界合作解决复杂问题</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>上游思维适用于各种需要从根源解决问题的场景。</p>
+      <ul>
+        <li>公共政策 - 社会问题的预防和解决</li>
+        <li>企业管理 - 流程优化和问题预防</li>
+        <li>产品设计 - 用户体验和质量改进</li>
+        <li>个人发展 - 习惯养成和问题预防</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用上游思维解决问题。</p>
+      <ul>
+        <li><strong>技巧1：</strong>5Why分析 - 连续追问为什么，找到问题根源</li>
+        <li><strong>技巧2：</strong>系统映射 - 绘制问题所在的系统结构图</li>
+        <li><strong>技巧3：</strong>前置设计 - 在设计阶段考虑可能的问题</li>
+        <li><strong>技巧4：</strong>指标监控 - 建立预警机制，及早发现问题</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何培养和应用上游思维。</p>
+      <ul>
+        <li><strong>建议1：</strong>留出思考时间 - 定期专门思考系统问题</li>
+        <li><strong>建议2：</strong>跨部门合作 - 打破组织边界，共同解决问题</li>
+        <li><strong>建议3：</strong>投资预防 - 为预防措施分配足够资源</li>
+        <li><strong>建议4：</strong>奖励预防 - 建立激励机制，奖励问题预防</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>上游思维在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>公共卫生 - 通过健康教育和环境改善预防疾病</li>
+        <li><strong>案例2：</strong>企业管理 - 通过流程优化减少质量问题</li>
+        <li><strong>案例3：</strong>产品设计 - 通过用户研究减少使用障碍</li>
+        <li><strong>案例4：</strong>个人发展 - 通过习惯养成预防健康问题</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>三大阻碍</h3>
