--- a/thinking-models/上瘾模型.html
+++ b/thinking-models/上瘾模型.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>钩子模型</title><style>
+  <title>上瘾模型</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -62,7 +61,7 @@
         </g>
         <g transform="translate(0, -180)">
           <circle r="70" fill="#ef4444" fill-opacity="0.3" stroke="#ef4444" stroke-width="4" />
-          <text text-anchor="middle" y="10" fill="#ef4444" style="font-size: 28px; font-weight: 900;">2. A</text>
+          <text text-anchor="middle" y="10" fill="#ef4444" style="font-size: 28px; font-weight: 900;">2. 行动</text>
         </g>
         <g transform="translate(180, 0)">
           <circle r="90" fill="#ef4444" filter="drop-shadow(0 0 40px #ef4444)" />
@@ -79,8 +78,75 @@
   </div>
 
   <div class="text-content">
-    <h1>钩子模型</h1>
+    <h1>上瘾模型</h1>
     <p>如何让用户在没有外部提醒的情况下，自发且习惯性地使用产品？这是一种基于心理学设计的行为闭环系统。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>钩子模型（Hook Model）是一种行为设计框架，通过触发、行动、多变奖赏和投入四个环节，创造用户习惯。</p>
+      <ul>
+        <li>关键要素1：触发 (Trigger) - 提醒用户采取行动的信号</li>
+        <li>关键要素2：行动 (Action) - 用户为获得奖赏而采取的简单行为</li>
+        <li>关键要素3：多变奖赏 (Variable Reward) - 不可预测的奖励机制</li>
+        <li>关键要素4：投入 (Investment) - 用户对产品的时间、数据等投入</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>钩子模型的核心原则基于行为心理学和神经科学。</p>
+      <ul>
+        <li><strong>原则1：</strong>触发驱动 - 内部或外部触发启动行为回路</li>
+        <li><strong>原则2：</strong>简易行动 - 降低行动门槛，提高响应率</li>
+        <li><strong>原则3：</strong>多变奖励 - 利用不确定性激发多巴胺分泌</li>
+        <li><strong>原则4：</strong>投入增强 - 用户投入越多，忠诚度越高</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>钩子模型适用于各种需要培养用户习惯的产品和服务。</p>
+      <ul>
+        <li>移动应用 - 社交、游戏、内容等应用</li>
+        <li>网站设计 - 提高用户粘性和回访率</li>
+        <li>产品设计 - 硬件和软件产品的用户体验</li>
+        <li>市场营销 - 培养品牌忠诚度</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用钩子模型设计产品。</p>
+      <ul>
+        <li><strong>技巧1：</strong>触发设计 - 结合外部触发和内部触发</li>
+        <li><strong>技巧2：</strong>行动简化 - 减少用户行动的摩擦</li>
+        <li><strong>技巧3：</strong>奖赏设计 - 创造多变且有意义的奖励</li>
+        <li><strong>技巧4：</strong>投入引导 - 鼓励用户在产品中建立资产</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何平衡用户价值和商业目标。</p>
+      <ul>
+        <li><strong>建议1：</strong>创造价值 - 确保产品真正解决用户问题</li>
+        <li><strong>建议2：</strong>透明设计 - 避免操纵性设计，保持用户信任</li>
+        <li><strong>建议3：</strong>个性化 - 根据用户行为定制体验</li>
+        <li><strong>建议4：</strong>持续优化 - 通过数据反馈不断改进</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>钩子模型在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>社交媒体 - 通过通知触发、滑动行动、内容奖励和个人资料投入</li>
+        <li><strong>案例2：</strong>游戏产品 - 通过任务触发、点击行动、随机奖励和游戏进度投入</li>
+        <li><strong>案例3：</strong>内容平台 - 通过推荐触发、浏览行动、个性化内容奖励和收藏投入</li>
+        <li><strong>案例4：</strong>移动支付 - 通过消费触发、扫码行动、优惠奖励和账户资金投入</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>回路机制</h3>
