--- a/thinking-models/不可能三角.html
+++ b/thinking-models/不可能三角.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -72,12 +71,78 @@
         <path d="M0,0 L0,-120" stroke="#ef4444" stroke-width="4" opacity="0.3" stroke-dasharray="5 5" />
         <text y="20" text-anchor="middle" fill="#ef4444" style="font-size: 42px; font-weight: 900;">三选其二</text>
       </g>
-      <text x="500" y="80" text-anchor="middle" fill="#64748b" opacity="0.2" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">THE TR我LEMMa EcONOM我cS</text>
+      <text x="500" y="80" text-anchor="middle" fill="#64748b" opacity="0.2" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">THE TRILEMMA ECONOMICS</text>
     </svg>
   </div>
   <div class="text-content">
-    <h1>不可能三角 (我mpossible Trinity)</h1>
+    <h1>不可能三角 (Impossible Trinity)</h1>
     <p>金融主权的客观死结：任何国家都无法同时实现资本自由流动、汇率稳定和独立的货币政策。你必须且只能选择其中的两个目标。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>不可能三角（Impossible Trinity）是宏观经济学中的一个重要概念，描述了开放经济条件下货币政策的内在矛盾。</p>
+      <ul>
+        <li>关键要素1：独立货币政策 - 国家自主制定货币政策的能力</li>
+        <li>关键要素2：汇率稳定 - 保持本国货币汇率的相对稳定</li>
+        <li>关键要素3：资本自由流动 - 允许资本在国际间自由进出</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>不可能三角的核心原则基于国际金融学理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>三选其二 - 三个目标中只能同时实现两个</li>
+        <li><strong>原则2：</strong>逻辑约束 - 三个目标之间存在内在的逻辑冲突</li>
+        <li><strong>原则3：</strong>权衡取舍 - 不同国家根据自身情况选择不同的组合</li>
+        <li><strong>原则4：</strong>普遍适用 - 不仅适用于国家层面，也适用于其他复杂系统</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>不可能三角适用于各种需要在多个相互冲突的目标之间做出权衡的场景。</p>
+      <ul>
+        <li>宏观经济 - 国家货币政策和汇率制度选择</li>
+        <li>企业管理 - 战略决策和资源分配</li>
+        <li>产品设计 - 功能、成本和质量的平衡</li>
+        <li>个人发展 - 时间、精力和目标的管理</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用不可能三角思维做出权衡决策。</p>
+      <ul>
+        <li><strong>技巧1：</strong>明确优先级 - 确定三个目标中最重要的两个</li>
+        <li><strong>技巧2：</strong>主动放弃 - 有意识地牺牲次要目标</li>
+        <li><strong>技巧3：</strong>动态调整 - 根据环境变化适时调整策略</li>
+        <li><strong>技巧4：</strong>系统思考 - 理解目标之间的内在联系</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何处理不可能三角的约束。</p>
+      <ul>
+        <li><strong>建议1：</strong>情境分析 - 根据具体情况选择合适的组合</li>
+        <li><strong>建议2：</strong>长期规划 - 考虑决策的长期影响</li>
+        <li><strong>建议3：</strong>灵活性 - 保持一定的政策调整空间</li>
+        <li><strong>建议4：</strong>沟通透明 - 明确传达决策的理由和权衡</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>不可能三角在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>国家货币政策 - 选择固定汇率还是浮动汇率</li>
+        <li><strong>案例2：</strong>企业战略 - 在质量、成本和速度之间做出选择</li>
+        <li><strong>案例3：</strong>产品开发 - 平衡功能丰富度、开发速度和成本控制</li>
+        <li><strong>案例4：</strong>个人时间管理 - 在工作、家庭和个人发展之间分配时间</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>冲突本质</h3>
