--- a/thinking-models/专家邓宁-克鲁格效应.html
+++ b/thinking-models/专家邓宁-克鲁格效应.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -68,13 +67,80 @@
         <text y="90" text-anchor="middle" fill="#10b981" style="font-size: 20px; font-weight: 900;">真知灼见</text>
       </g>
 
-      <text x="500" y="100" text-anchor="middle" fill="#94a3b8" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">THE 计划LaTEaU OF S我们Ta我NaB我L我TY</text>
+      <text x="500" y="100" text-anchor="middle" fill="#94a3b8" style="font-size: 24px; font-weight: 900; letter-spacing: 0.5em;">THE PLATEAU OF SUSTAINABILITY</text>
     </svg>
   </div>
 
   <div class="text-content">
     <h1>邓宁-克鲁格 (专家版)</h1>
     <p>真正的专家并不是无所不知，而是清晰地知道自己知识的边界。在越过“绝望之谷”后，每一步的提升都伴随着对未知的敬畏。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>专家版邓宁-克鲁格效应描述了从初学者到专家的认知发展历程，特别强调了专家阶段的认知特征。</p>
+      <ul>
+        <li>关键要素1：知识边界意识 - 清晰认识自己知道什么和不知道什么</li>
+        <li>关键要素2：持续学习 - 保持开放心态，不断更新知识</li>
+        <li>关键要素3：谨慎自信 - 在专业领域内保持适度自信</li>
+        <li>关键要素4：深度思考 - 能够进行复杂的分析和判断</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>专家版邓宁-克鲁格效应的核心原则基于认知心理学和专业发展理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>认知谦逊 - 承认自己的知识局限性</li>
+        <li><strong>原则2：</strong>终身学习 - 持续更新和扩展知识</li>
+        <li><strong>原则3：</strong>深度优于广度 - 在专业领域追求深度理解</li>
+        <li><strong>原则4：</strong>反思实践 - 通过反思和反馈不断改进</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>专家版邓宁-克鲁格效应适用于各种需要专业知识和技能的领域。</p>
+      <ul>
+        <li>专业发展 - 个人技能和知识的提升</li>
+        <li>教育培训 - 学习路径和教学方法设计</li>
+        <li>人才管理 - 评估和发展专业人才</li>
+        <li>决策制定 - 基于专业知识的判断和选择</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何培养专家思维和避免认知偏差。</p>
+      <ul>
+        <li><strong>技巧1：</strong>元认知训练 - 培养对自己思维过程的觉察</li>
+        <li><strong>技巧2：</strong>寻求反馈 - 主动获取他人的评价和建议</li>
+        <li><strong>技巧3：</strong>跨领域学习 - 从其他领域获取灵感和方法</li>
+        <li><strong>技巧4：</strong>教学实践 - 通过教学巩固和深化知识</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何发展和保持专家水平。</p>
+      <ul>
+        <li><strong>建议1：</strong>设定高标准 - 对自己的专业能力设定高要求</li>
+        <li><strong>建议2：</strong>建立学习习惯 - 定期学习和更新知识</li>
+        <li><strong>建议3：</strong>参与专业社区 - 与同行交流和合作</li>
+        <li><strong>建议4：</strong>记录反思 - 定期反思自己的专业实践</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>专家版邓宁-克鲁格效应在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>职业发展 - 工程师通过持续学习和项目实践成为领域专家</li>
+        <li><strong>案例2：</strong>医疗行业 - 医生通过临床经验和学术研究提升专业水平</li>
+        <li><strong>案例3：</strong>教育领域 - 教师通过教学反思和专业发展成为教学专家</li>
+        <li><strong>案例4：</strong>科研工作 - 科学家通过深入研究和学术交流成为学科专家</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>专家特质</h3>
