--- a/thinking-models/两分钟法则.html
+++ b/thinking-models/两分钟法则.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -61,7 +60,7 @@
         <g>
           <rect x="-5" y="-150" width="10" height="300" fill="#ef4444" class="animate-pulse" />
           <circle r="40" fill="#ef4444" filter="drop-shadow(0 0 30px #ef4444)" />
-          <text text-anchor="middle" y="8" fill="white" style="font-size: 14px; font-weight: 900;">2 M我N</text>
+          <text text-anchor="middle" y="8" fill="white" style="font-size: 14px; font-weight: 900;">2 MIN</text>
         </g>
 
         <!-- 启动后的惯性流 -->
@@ -81,6 +80,73 @@
   <div class="text-content">
     <h1>两分钟法则 (2-Minute Rule)</h1>
     <p>D力的核武器：如果一件事只需要不到两分钟就能完成，那就立刻去做（不进入清单直接结项）；如果一件事很宏大，那就先做它的前两分钟。目标不是完成，而是“开始”。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>两分钟法则是一种生产力策略，通过将任务分解为小的、可立即执行的部分，克服拖延并建立行动惯性。</p>
+      <ul>
+        <li>关键要素1：立即执行 - 快速完成小任务</li>
+        <li>关键要素2：启动仪式 - 为大任务创建简单的开始</li>
+        <li>关键要素3：惯性利用 - 利用开始的动量持续行动</li>
+        <li>关键要素4：心理突破 - 克服对任务的心理阻力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>两分钟法则的核心原则基于行为心理学和生产力理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>开始优先 - 开始比完美更重要</li>
+        <li><strong>原则2：</strong>小步快跑 - 将大任务分解为小步骤</li>
+        <li><strong>原则3：</strong>惯性效应 - 利用行动的惯性持续前进</li>
+        <li><strong>原则4：</strong>心理触发 - 通过小行动克服心理阻力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>两分钟法则适用于各种需要克服拖延、提高生产力的场景。</p>
+      <ul>
+        <li>个人生产力 - 日常任务管理和时间规划</li>
+        <li>工作效率 - 职场任务处理和项目启动</li>
+        <li>习惯养成 - 培养新习惯和行为改变</li>
+        <li>学习方法 - 学习任务的启动和持续</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效应用两分钟法则提高生产力。</p>
+      <ul>
+        <li><strong>技巧1：</strong>任务评估 - 快速判断任务是否可在两分钟内完成</li>
+        <li><strong>技巧2：</strong>启动设计 - 为大任务创建简单的两分钟启动仪式</li>
+        <li><strong>技巧3：</strong>惯性利用 - 一旦开始，尽量保持行动势头</li>
+        <li><strong>技巧4：</strong>批量处理 - 将多个两分钟任务集中处理</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化两分钟法则的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>建立意识 - 养成评估任务执行时间的习惯</li>
+        <li><strong>建议2：</strong>创造环境 - 为两分钟任务准备好执行环境</li>
+        <li><strong>建议3：</strong>记录成功 - 跟踪通过两分钟法则完成的任务</li>
+        <li><strong>建议4：</strong>扩展应用 - 将原则应用到更大的任务中</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>两分钟法则在不同领域的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>邮件处理 - 快速回复简单邮件，避免堆积</li>
+        <li><strong>案例2：</strong>习惯养成 - 每天花两分钟开始锻炼或学习</li>
+        <li><strong>案例3：</strong>项目启动 - 为大项目创建简单的两分钟启动步骤</li>
+        <li><strong>案例4：</strong> decluttering - 利用两分钟快速整理小区域</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>物理启动</h3>
