--- a/thinking-models/个人SWOT.html
+++ b/thinking-models/个人SWOT.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -81,6 +80,73 @@
   <div class="text-content">
     <h1>个人 SWOT 分析</h1>
     <p>不仅企业需要战略，个体更需要。通过系统梳理内在能力与外部环境，寻找那个能产生“最大杠杆”的生存位置。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>个人SWOT分析是一种个人战略规划工具，通过评估个人的优势、劣势、机会和威胁，制定个人发展策略。</p>
+      <ul>
+        <li>关键要素1：优势 (Strengths) - 个人的核心能力和资源</li>
+        <li>关键要素2：劣势 (Weaknesses) - 个人的不足和限制</li>
+        <li>关键要素3：机会 (Opportunities) - 外部环境中的有利因素</li>
+        <li>关键要素4：威胁 (Threats) - 外部环境中的不利因素</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>个人SWOT分析的核心原则基于个人发展和战略规划理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>自我认知 - 客观认识自己的优势和劣势</li>
+        <li><strong>原则2：</strong>环境适应 - 了解并适应外部环境的变化</li>
+        <li><strong>原则3：</strong>战略匹配 - 将个人能力与外部机会匹配</li>
+        <li><strong>原则4：</strong>持续改进 - 基于分析结果不断调整和改进</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>个人SWOT分析适用于各种个人发展和职业规划场景。</p>
+      <ul>
+        <li>职业规划 - 职业方向选择和发展路径设计</li>
+        <li>求职准备 - 简历优化和面试策略制定</li>
+        <li>个人成长 - 自我提升和能力发展规划</li>
+        <li>创业准备 - 创业方向和资源评估</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何有效进行个人SWOT分析。</p>
+      <ul>
+        <li><strong>技巧1：</strong>客观评估 - 诚实面对自己的优势和劣势</li>
+        <li><strong>技巧2：</strong>多角度思考 - 从不同角度分析自己和环境</li>
+        <li><strong>技巧3：</strong>具体明确 - 使用具体的例子和数据</li>
+        <li><strong>技巧4：</strong>定期更新 - 随着情况变化重新评估</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际应用中如何最大化个人SWOT分析的效果。</p>
+      <ul>
+        <li><strong>建议1：</strong>寻求反馈 - 从他人那里获取对自己的评价</li>
+        <li><strong>建议2：</strong>制定行动计划 - 基于分析结果制定具体的行动步骤</li>
+        <li><strong>建议3：</strong>聚焦优势 - 优先发展和利用自己的优势</li>
+        <li><strong>建议4：</strong>风险管理 - 制定应对威胁的策略</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>个人SWOT分析在不同场景的具体应用案例。</p>
+      <ul>
+        <li><strong>案例1：</strong>职业转型 - 评估转型的可行性和风险</li>
+        <li><strong>案例2：</strong>职场发展 - 制定晋升策略和能力提升计划</li>
+        <li><strong>案例3：</strong>创业准备 - 评估创业机会和个人准备情况</li>
+        <li><strong>案例4：</strong>学习规划 - 基于个人优势和市场需求选择学习方向</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>战略组合</h3>
