--- a/thinking-models/个人沉没成本.html
+++ b/thinking-models/个人沉没成本.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -77,12 +76,77 @@
   </div>
   <div class="text-content">
     <h1>沉没成本 (个人战略版)</h1>
-    <p>对于独自工作的你，最贵的东西不是钱，而是“无法拿回来的时间”。如果你为了证明自己没看走眼而死守一个烂项目，你损失的不仅是过去的投入，更是未来 5 年的无限可能性。</p>
+    <p>对于独自工作的你，最贵的东西不是钱，而是"无法拿回来的时间"。如果你为了证明自己没看走眼而死守一个烂项目，你损失的不仅是过去的投入，更是未来 5 年的无限可能性。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>个人沉没成本是指个人在某件事情上已经投入的时间、精力、情感和资源，这些投入无法收回，却常常影响我们的决策。</p>
+      <ul>
+        <li><strong>心理锚定效应：</strong>我们的决策往往被过去的投入所锚定，而不是基于未来的价值和机会成本。</li>
+        <li><strong>认知失调：</strong>当我们意识到自己的投入可能没有回报时，会产生心理不适，为了减少这种不适，我们往往会继续投入更多资源。</li>
+        <li><strong>自我认同绑定：</strong>我们常常将自己的价值与特定项目或选择绑定，放弃它们感觉像是承认自己的失败。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>个人沉没成本思维模型的核心原则是帮助我们做出更理性的决策，摆脱过去投入的束缚。</p>
+      <ul>
+        <li><strong>零基思维：</strong>每个决策都应基于当前和未来的价值，而非过去的投入。</li>
+        <li><strong>机会成本优先：</strong>考虑继续投入的机会成本，即放弃其他可能更有价值的选择所带来的损失。</li>
+        <li><strong>止损机制：</strong>为每个项目和活动设定明确的止损点，当达到该点时果断退出。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>个人沉没成本思维模型适用于个人生活和职业发展的多个领域。</p>
+      <ul>
+        <li><strong>职业选择：</strong>评估是否继续在当前工作或行业中投入时间和精力。</li>
+        <li><strong>项目管理：</strong>决定是否继续推进某个个人项目或创意。</li>
+        <li><strong>学习与技能发展：</strong>评估是否继续投入时间学习某项技能或知识。</li>
+        <li><strong>人际关系：</strong>评估是否继续维持某些消耗性的人际关系。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用个人沉没成本思维模型的具体技巧。</p>
+      <ul>
+        <li><strong>时间追踪审计：</strong>定期记录和分析自己的时间投入，识别可能的沉没成本陷阱。</li>
+        <li><strong>未来价值评估：</strong>为每个持续投入的项目创建未来价值评估表，明确记录预期回报。</li>
+        <li><strong>替代方案比较：</strong>定期思考如果将同样的时间和精力投入到其他领域可能获得的回报。</li>
+        <li><strong>外部视角咨询：</strong>向信任的朋友或导师寻求客观建议，帮助识别自己可能忽视的沉没成本。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中实际应用个人沉没成本思维模型。</p>
+      <ul>
+        <li><strong>设定定期检查点：</strong>为每个重要项目设定月度或季度检查点，评估是否继续投入。</li>
+        <li><strong>创建退出计划：</strong>在开始任何重大项目时，预先制定明确的退出条件和计划。</li>
+        <li><strong>培养实验心态：</strong>将项目视为实验而非终身承诺，根据反馈及时调整或终止。</li>
+        <li><strong>庆祝止损决策：</strong>将退出无回报项目视为智慧的胜利，而非失败的承认。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>个人沉没成本思维模型的具体应用案例。</p>
+      <ul>
+        <li><strong>创业项目：</strong>当一个创业想法已经投入了大量时间但仍然没有市场验证时，使用沉没成本模型评估是否继续投入或转向新方向。</li>
+        <li><strong>职业转型：</strong>在考虑是否离开当前行业转向新领域时，评估已有的行业经验和技能与新领域的机会成本。</li>
+        <li><strong>学习投资：</strong>在学习一项技能或考取证书时，定期评估投入的时间和金钱与预期回报的比例。</li>
+        <li><strong>人际关系：</strong>在评估是否继续维持一段消耗性的友谊或关系时，考虑已投入的情感与未来可能的发展。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>自尊的诅咒</h3>
         <ul>
-          <li><strong>证明自己的幻觉：</strong>我们往往通过“坚持”来获得一种虚假的英雄感。实际上，有些坚持只是智力懒惰和恐惧改变的遮羞布。</li>
+          <li><strong>证明自己的幻觉：</strong>我们往往通过"坚持"来获得一种虚假的英雄感。实际上，有些坚持只是智力懒惰和恐惧改变的遮羞布。</li>
           <li><strong>爱上工具而非目的：</strong>如果你开发的软件没人用，不要去优化它的功能，要问它解决的问题是否真实存在。</li>
         </ul>
       </div>
