--- a/thinking-models/个人账本.html
+++ b/thinking-models/个人账本.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -83,13 +82,79 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>个人复利账本 (计划ersonal Ledger)</h1>
-    <p>超级个体最大的幻觉是“只盯着银行余额”。真实的账本应包含三个账户：技能账户（你的单位产出上限）、信任账户（你的资源调动半径）、认知账户（你的避坑深度）。</p>
+    <h1>个人复利账本 (Personal Ledger)</h1>
+    <p>超级个体最大的幻觉是"只盯着银行余额"。真实的账本应包含三个账户：技能账户（你的单位产出上限）、信任账户（你的资源调动半径）、认知账户（你的避坑深度）。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>个人复利账本是一种全面评估个人资产的思维模型，超越了传统的财务视角，将无形资产纳入考量范围。</p>
+      <ul>
+        <li><strong>无形资产的复利效应：</strong>技能、信任和认知等无形资产具有比财务资产更强的复利效应，能够在长期产生指数级增长。</li>
+        <li><strong>资产的协同作用：</strong>三个核心账户之间存在协同效应，技能提升增强认知能力，认知提升促进信任建立，信任建立为技能应用创造更多机会。</li>
+        <li><strong>隐性资产的显性化：</strong>通过账本思维，将原本难以量化的无形资产显性化，便于管理和增长。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>个人复利账本的核心原则是全面、长期、协同地管理个人资产。</p>
+      <ul>
+        <li><strong>全面资产观：</strong>不仅关注财务资产，更重视技能、信任和认知等无形资产。</li>
+        <li><strong>长期主义：</strong>注重资产的长期积累和复利效应，而非短期收益。</li>
+        <li><strong>动态平衡：</strong>在三个核心账户之间保持动态平衡，避免过度偏向某一方面。</li>
+        <li><strong>主动投资：</strong>积极投资于无形资产的增长，将其视为长期回报率最高的投资。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>个人复利账本适用于追求长期发展的个人，尤其是自由职业者、创业者和知识工作者。</p>
+      <ul>
+        <li><strong>职业发展：</strong>评估和规划个人职业发展路径，平衡技能提升、人脉建立和认知升级。</li>
+        <li><strong>创业决策：</strong>在创业过程中，评估不同决策对三个核心账户的影响。</li>
+        <li><strong>个人成长：</strong>制定全面的个人成长计划，确保各方面均衡发展。</li>
+        <li><strong>危机应对：</strong>在危机时刻，利用三个账户的资产应对挑战，尤其是信任账户的资源调动能力。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效使用个人复利账本的具体技巧。</p>
+      <ul>
+        <li><strong>定期审计：</strong>每月对三个核心账户进行一次全面审计，评估各账户的增长情况。</li>
+        <li><strong>量化指标：</strong>为每个账户建立可量化的指标，如技能账户的项目完成质量，信任账户的推荐次数，认知账户的新见解数量。</li>
+        <li><strong>投资分配：</strong>根据个人阶段和目标，合理分配时间和资源到三个账户。</li>
+        <li><strong>复利计算：</strong>定期计算各账户的复利效应，直观感受长期积累的力量。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中实践个人复利账本思维。</p>
+      <ul>
+        <li><strong>建立日常习惯：</strong>每天花15分钟在三个账户中至少一个进行投资，如学习新技能、维护人际关系或阅读思考。</li>
+        <li><strong>设定阶段性目标：</strong>为每个账户设定3个月、6个月和1年的增长目标。</li>
+        <li><strong>寻求反馈：</strong>定期向信任的朋友或导师寻求反馈，了解自己在他人眼中的资产状况。</li>
+        <li><strong>庆祝小胜利：</strong>当任何一个账户取得进步时，及时庆祝，强化正向行为。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>个人复利账本的具体应用场景。</p>
+      <ul>
+        <li><strong>职业转型：</strong>在考虑职业转型时，评估新职业对三个核心账户的影响，选择长期回报率最高的方向。</li>
+        <li><strong>创业项目选择：</strong>在评估创业项目时，不仅考虑财务回报，还要考虑项目对技能、信任和认知账户的提升潜力。</li>
+        <li><strong>资源分配决策：</strong>当面临时间和资源分配决策时，参考三个账户的当前状况和目标，做出更全面的选择。</li>
+        <li><strong>个人危机应对：</strong>在面临个人危机时，盘点三个账户的资产，制定综合应对策略，尤其是利用信任账户的资源。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>资产审计</h3>
         <ul>
-          <li><strong>信任余额：</strong>每一次诚实的分享和超额的交付，都在增加你在他人心智中的“质押权”。这是危机时刻唯一的救命稻草。</li>
+          <li><strong>信任余额：</strong>每一次诚实的分享和超额的交付，都在增加你在他人心智中的"质押权"。这是危机时刻唯一的救命稻草。</li>
           <li><strong>认知增量：</strong>如果你今天没有更新对世界的看法，即便赚了钱，你的认知系统实际上是在通胀中贬值的。</li>
         </ul>
       </div>
