--- a/thinking-models/乐观偏见.html
+++ b/thinking-models/乐观偏见.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -73,26 +72,96 @@
         </path>
       </g>
 
-      <text x="500" y="550" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 12px; font-weight: 900; letter-spacing: 0.5em;">THE 我LL我们我ON OF 我NVULNERaB我L我TY</text>
+      <text x="500" y="550" text-anchor="middle" fill="#64748b" opacity="0.3" style="font-size: 12px; font-weight: 900; letter-spacing: 0.5em;">THE ILLUSION OF INVULNERABILITY</text>
     </svg>
   </div>
 
   <div class="text-content">
     <h1>乐观偏差 (Optimism Bias)</h1>
     <p>人类倾向于认为自己遭受负面事件（如生病、离婚、失业）的概率低于平均水平。这是生存的动力，也是灾难的源头。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>乐观偏差是一种普遍存在的认知偏差，影响着人类的决策和行为。</p>
+      <ul>
+        <li><strong>进化心理学视角：</strong>乐观偏差可能是进化过程中形成的适应性机制，帮助人类在面对不确定性时保持行动的勇气。</li>
+        <li><strong>神经科学基础：</strong>大脑的前额叶皮层在处理未来事件时，倾向于激活与积极结果相关的神经网络，而抑制消极结果的激活。</li>
+        <li><strong>社会比较效应：</strong>人们往往通过与他人比较来评估自己的风险，认为自己比平均水平更幸运。</li>
+        <li><strong>自我服务偏差：</strong>乐观偏差与自我服务偏差密切相关，人们倾向于将成功归因于自己的能力，将失败归因于外部因素。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>乐观偏差的核心原则在于理解其双重性：既是动力源泉，也是风险隐患。</p>
+      <ul>
+        <li><strong>双重性原则：</strong>乐观偏差既有积极的促进作用，也有消极的风险隐患，需要平衡利用。</li>
+        <li><strong>情境依赖性：</strong>乐观偏差的影响程度取决于具体情境，在不同领域表现各异。</li>
+        <li><strong>可调节性：</strong>通过认知干预和风险评估，可以在保持乐观动力的同时降低风险。</li>
+        <li><strong>群体差异：</strong>不同人群的乐观偏差程度存在差异，受文化、经验和个性等因素影响。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>乐观偏差影响着人类生活的多个领域，从个人决策到社会行为。</p>
+      <ul>
+        <li><strong>个人决策：</strong>职业选择、投资决策、健康行为等个人领域。</li>
+        <li><strong>组织管理：</strong>项目规划、风险管理、团队建设等组织领域。</li>
+        <li><strong>社会政策：</strong>公共卫生、环境保护、灾害预防等社会领域。</li>
+        <li><strong>心理保健：</strong>心理健康、压力管理、韧性培养等心理领域。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效管理乐观偏差的具体技巧。</p>
+      <ul>
+        <li><strong>预先检验：</strong>在做决策前，先想象最坏的结果，然后思考如何应对。</li>
+        <li><strong>外部视角：</strong>参考类似情境的统计数据和他人经验，获得更客观的风险评估。</li>
+        <li><strong>定期反思：</strong>定期回顾过去的决策，分析乐观偏差的影响，调整未来的决策过程。</li>
+        <li><strong>团队多元化：</strong>在团队决策中纳入不同视角的成员，减少群体乐观偏差。</li>
+        <li><strong>风险量化：</strong>将抽象的风险转化为具体的数字和概率，提高风险意识。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中平衡乐观偏差的利弊。</p>
+      <ul>
+        <li><strong>保持适度乐观：</strong>在保持行动动力的同时，对风险保持清醒认识。</li>
+        <li><strong>建立防御机制：</strong>即使相信事情会顺利发展，也要制定备用计划和风险应对策略。</li>
+        <li><strong>培养元认知：</strong>提高对自己认知过程的觉察能力，识别乐观偏差的影响。</li>
+        <li><strong>寻求反馈：</strong>定期从他人那里获得关于自己决策和风险评估的反馈。</li>
+        <li><strong>持续学习：</strong>通过学习和经验积累，提高风险评估的准确性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>乐观偏差在不同场景中的具体应用和管理策略。</p>
+      <ul>
+        <li><strong>创业决策：</strong>在创业过程中，保持乐观的同时，通过市场调研和风险评估降低失败风险。</li>
+        <li><strong>健康管理：</strong>虽然乐观有助于康复，但也要重视定期体检和健康预防措施。</li>
+        <li><strong>项目规划：</strong>在项目管理中，使用PERT等方法进行时间和资源估算，避免规划谬误。</li>
+        <li><strong>投资决策：</strong>在投资过程中，保持理性分析，避免过度乐观导致的风险承担。</li>
+        <li><strong>灾害预防：</strong>在面对自然灾害风险时，既要保持信心，也要做好充分的预防准备。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>心理红利</h3>
         <ul>
-          <li><strong>a催化剂：</strong>如果没有乐观偏差，几乎没人敢去创业或结婚。它通过降低压力来维持心理健康。</li>
-          <li><strong>抗压韧性：</strong>它能让人在挫折中迅速恢复，保持一种“未来会变好”的元动力。</li>
+          <li><strong>行动催化剂：</strong>如果没有乐观偏差，几乎没人敢去创业或结婚。它通过降低压力来维持心理健康。</li>
+          <li><strong>抗压韧性：</strong>它能让人在挫折中迅速恢复，保持一种"未来会变好"的元动力。</li>
         </ul>
       </div>
       <div>
         <h3>风险盲区</h3>
         <ul>
           <li><strong>防御缺失：</strong>由于不相信危机会降临，我们往往会忽视购买保险、定期体检等必要的预防行为。</li>
-          <li><strong>规划谬误：</strong>在估算项目风险时，这种偏差会让我们自动剔除那些“可能搞砸”的极端变量。</li>
+          <li><strong>规划谬误：</strong>在估算项目风险时，这种偏差会让我们自动剔除那些"可能搞砸"的极端变量。</li>
         </ul>
       </div>
     </div>
