--- a/thinking-models/乔哈里视窗.html
+++ b/thinking-models/乔哈里视窗.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -84,7 +83,79 @@
 
   <div class="text-content">
     <h1>乔哈里视窗</h1>
-    <p>人际沟通的深度映射。一个人的真实影响力和协作效率，本质上取决于其“公开区”的大小。</p>
+    <p>人际沟通的深度映射。一个人的真实影响力和协作效率，本质上取决于其"公开区"的大小。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>乔哈里视窗（Johari Window）是由约瑟夫·卢夫特（Joseph Luft）和哈里·英厄姆（Harry Ingham）在1955年提出的一种关于自我认知和人际沟通的模型。</p>
+      <ul>
+        <li><strong>四个区域的动态关系：</strong>公开区、盲目区、隐藏区和未知区之间的边界不是固定的，通过自我揭示和他人反馈可以动态调整。</li>
+        <li><strong>自我认知与他人认知的差异：</strong>每个人对自己的认知与他人对自己的认知之间存在差异，这种差异是沟通障碍的重要来源。</li>
+        <li><strong>信任建立的机制：</strong>通过适当的自我揭示（缩小隐藏区）和接受他人反馈（缩小盲目区），可以建立更深层次的信任关系。</li>
+        <li><strong>潜能开发的路径：</strong>未知区是个人潜能的储存库，通过新的经历和自我探索可以将未知区转化为其他区域。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>乔哈里视窗的核心原则在于通过自我认知和人际互动的动态调整，实现更有效的沟通和关系建立。</p>
+      <ul>
+        <li><strong>透明度原则：</strong>适当的自我揭示可以扩大公开区，提高沟通效率和信任水平。</li>
+        <li><strong>反馈原则：</strong>积极寻求和接受他人反馈是缩小盲目区、提高自我认知的关键。</li>
+        <li><strong>边界原则：</strong>自我揭示需要把握适当的度，过度揭示可能导致不适和信任受损。</li>
+        <li><strong>动态平衡原则：</strong>四个区域的大小需要根据具体情境和关系深度进行动态调整。</li>
+        <li><strong>成长原则：</strong>通过持续的自我探索和人际互动，不断将未知区转化为其他区域，实现个人成长。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>乔哈里视窗适用于各种需要人际沟通和自我认知的场景，从个人发展到组织管理。</p>
+      <ul>
+        <li><strong>个人发展：</strong>通过自我认知和他人反馈，识别个人优势和盲点，促进个人成长。</li>
+        <li><strong>人际关系：</strong>改善亲密关系、友谊和家庭关系中的沟通质量，建立更深层次的信任。</li>
+        <li><strong>团队建设：</strong>提高团队成员之间的透明度和信任，减少沟通障碍，增强协作效率。</li>
+        <li><strong>领导力发展：</strong>帮助领导者提高自我认知，更好地理解团队成员的视角，提升领导 effectiveness。</li>
+        <li><strong>冲突解决：</strong>通过扩大公开区，减少误解和偏见，促进冲突的建设性解决。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用乔哈里视窗的具体技巧。</p>
+      <ul>
+        <li><strong>自我揭示技巧：</strong>从低风险的自我信息开始，逐渐过渡到更深入的个人感受和想法。</li>
+        <li><strong>反馈寻求技巧：</strong>提出具体、明确的反馈请求，而非笼统的"你觉得我怎么样"。</li>
+        <li><strong>反馈给予技巧：</strong>提供具体、建设性的反馈，关注行为而非人格，使用"我"语句表达感受。</li>
+        <li><strong>区域调整技巧：</strong>根据关系的发展阶段和具体情境，有意识地调整四个区域的边界。</li>
+        <li><strong>潜能探索技巧：</strong>通过尝试新的经历、挑战和学习，探索未知区，开发个人潜能。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活和工作中实际应用乔哈里视窗。</p>
+      <ul>
+        <li><strong>定期自我反思：</strong>定期回顾自己的行为和感受，识别可能的盲点和隐藏的优势。</li>
+        <li><strong>建立反馈文化：</strong>在团队和关系中建立开放、建设性的反馈文化，鼓励双向反馈。</li>
+        <li><strong>适度自我揭示：</strong>根据关系的深度和情境的适当性，进行适度的自我揭示，建立信任。</li>
+        <li><strong>积极倾听：</strong>在与他人交流时，积极倾听对方的观点和反馈，避免防御性反应。</li>
+        <li><strong>持续学习：</strong>通过学习新技能、接触新领域，不断探索未知区，实现个人成长。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>乔哈里视窗在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>团队建设活动：</strong>通过乔哈里视窗练习，帮助团队成员更好地了解彼此，建立信任，提高协作效率。</li>
+        <li><strong>绩效评估：</strong>在绩效评估过程中，使用乔哈里视窗模型，促进管理者和员工之间的开放沟通和反馈。</li>
+        <li><strong>冲突调解：</strong>在冲突调解中，使用乔哈里视窗帮助各方理解彼此的视角，扩大公开区，减少误解。</li>
+        <li><strong>领导力培训：</strong>在领导力培训中，使用乔哈里视窗帮助领导者提高自我认知，更好地理解团队成员的需求和视角。</li>
+        <li><strong>个人咨询：</strong>在心理咨询和个人发展 coaching 中，使用乔哈里视窗帮助客户提高自我认知，识别成长机会。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>自我进化</h3>
