--- a/thinking-models/习得性无助.html
+++ b/thinking-models/习得性无助.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -78,20 +77,92 @@
   </div>
   <div class="text-content">
     <h1>习得性无助 (Learned Helplessness)</h1>
-    <p>由马丁·塞利格曼发现。如果个体在早期经历中发现努力无法改变结果，大脑就会学会“放弃”。这种认知锁定会导致个体在环境改善、机会出现时，依然保持被动的停滞状态。</p>
+    <p>由马丁·塞利格曼发现。如果个体在早期经历中发现努力无法改变结果，大脑就会学会"放弃"。这种认知锁定会导致个体在环境改善、机会出现时，依然保持被动的停滞状态。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>习得性无助是一种通过学习获得的行为和心理状态，个体由于反复经历无法控制的负面事件，逐渐形成了"无论如何努力都无法改变结果"的信念。</p>
+      <ul>
+        <li><strong>神经机制：</strong>习得性无助与大脑中的前额叶皮层、海马体和杏仁核等区域的活动变化有关，这些变化影响了个体的动机和情绪调节。</li>
+        <li><strong>归因风格：</strong>无助个体往往采用悲观的归因风格，将失败归因为内部的、稳定的和普遍的因素，而将成功归因为外部的、暂时的和特定的因素。</li>
+        <li><strong>认知扭曲：</strong>习得性无助会导致个体产生认知扭曲，如过度概括、灾难化思维和自我否定等。</li>
+        <li><strong>行为抑制：</strong>由于预期到努力无法改变结果，个体逐渐减少甚至停止尝试行为，表现出动机缺失和行为抑制。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>习得性无助的核心原则在于理解其形成机制和影响因素，以及如何打破这种负面循环。</p>
+      <ul>
+        <li><strong>可控性原则：</strong>个体对环境的可控感是心理健康的重要基础，失去可控感是习得性无助形成的关键因素。</li>
+        <li><strong>归因原则：</strong>个体的归因风格直接影响其对挫折的反应和应对方式。</li>
+        <li><strong>累积效应原则：</strong>习得性无助是通过反复经历无法控制的负面事件逐渐形成的，具有累积效应。</li>
+        <li><strong>泛化原则：</strong>习得性无助会从特定情境泛化到其他情境，影响个体的整体功能。</li>
+        <li><strong>可逆性原则：</strong>通过适当的干预和训练，习得性无助是可以被克服的。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>习得性无助影响着个体生活的多个领域，从心理健康到学习、工作和人际关系。</p>
+      <ul>
+        <li><strong>心理健康：</strong>习得性无助与抑郁症、焦虑症等心理障碍密切相关。</li>
+        <li><strong>教育领域：</strong>学生在学习过程中反复经历失败可能导致习得性无助，影响学习动机和成绩。</li>
+        <li><strong>工作场所：</strong>员工在工作中缺乏控制感和反馈可能导致习得性无助，影响工作绩效和满意度。</li>
+        <li><strong>人际关系：</strong>在关系中反复经历挫折和无法改变的负面事件可能导致习得性无助，影响关系质量。</li>
+        <li><strong>健康行为：</strong>慢性病患者可能因无法控制病情而产生习得性无助，影响治疗依从性和健康 outcomes。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应对和克服习得性无助的具体技巧。</p>
+      <ul>
+        <li><strong>归因重构：</strong>学习将失败归因为外部的、暂时的和特定的因素，将成功归因为内部的、稳定的和普遍的因素。</li>
+        <li><strong>小胜利策略：</strong>设定并完成一系列小的、可实现的目标，积累成功经验，重建自我效能感。</li>
+        <li><strong>控制感训练：</strong>在生活中寻找和创造可控的领域，逐渐扩大控制范围。</li>
+        <li><strong>认知行为疗法：</strong>通过识别和挑战负面思维模式，改变消极的认知和行为。</li>
+        <li><strong>社会支持：</strong>寻求和利用社会支持网络，获得情感支持和实际帮助。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中实际应用习得性无助的应对策略。</p>
+      <ul>
+        <li><strong>自我监控：</strong>定期监控自己的思维模式和归因风格，及时识别消极的认知倾向。</li>
+        <li><strong>目标设定：</strong>设定具体、可衡量、可实现、相关和有时限的目标，避免设定过高或过低的目标。</li>
+        <li><strong>积极反馈：</strong>为自己的努力和进步提供积极的反馈，强化积极的行为和思维模式。</li>
+        <li><strong>寻求专业帮助：</strong>如果习得性无助严重影响生活，寻求心理咨询或治疗。</li>
+        <li><strong>培养韧性：</strong>通过挑战自己、学习新技能和应对挫折，培养心理韧性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>习得性无助在不同场景中的具体表现和应对策略。</p>
+      <ul>
+        <li><strong>学习困难：</strong>当学生在学习中遇到持续困难时，通过小胜利策略和归因重构，帮助其重建学习动机和信心。</li>
+        <li><strong>工作压力：</strong>当员工在工作中感到无助时，通过增加工作自主性、提供明确的反馈和支持，帮助其恢复控制感。</li>
+        <li><strong>关系问题：</strong>在面临关系困境时，通过沟通技巧训练和认知重构，帮助个体打破消极的互动模式。</li>
+        <li><strong>健康管理：</strong>对于慢性病患者，通过健康教育和自我管理技能培训，帮助其恢复对健康的控制感。</li>
+        <li><strong>心理障碍：</strong>在治疗抑郁症、焦虑症等心理障碍时，将习得性无助的应对策略整合到治疗方案中。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>心理算法</h3>
         <ul>
-          <li><strong>归因偏差：</strong>无助者会将失败归因为“永久的、普遍的、个人的”。这是一种自毁式的逻辑闭环。</li>
-          <li><strong>意志的萎缩：</strong>当尝试的冲动每次都被物理或社会现实打碎，系统会为了节省能量而关闭“探索”模块。</li>
+          <li><strong>归因偏差：</strong>无助者会将失败归因为"永久的、普遍的、个人的"。这是一种自毁式的逻辑闭环。</li>
+          <li><strong>意志的萎缩：</strong>当尝试的冲动每次都被物理或社会现实打碎，系统会为了节省能量而关闭"探索"模块。</li>
         </ul>
       </div>
       <div>
         <h3>破局策略</h3>
         <ul>
-          <li><strong>小胜利实验：</strong>通过设定 100% 能达成的微小目标（如：只写一行代码），强行重塑“努力产生改变”的神经连接。</li>
-          <li><strong>认知重构：</strong>将失败归因为“暂时的、具体的、外部的”。学会这种“乐观的解释风格”是生存的必备补丁。</li>
+          <li><strong>小胜利实验：</strong>通过设定 100% 能达成的微小目标（如：只写一行代码），强行重塑"努力产生改变"的神经连接。</li>
+          <li><strong>认知重构：</strong>将失败归因为"暂时的、具体的、外部的"。学会这种"乐观的解释风格"是生存的必备补丁。</li>
         </ul>
       </div>
     </div>
