--- a/thinking-models/习惯叠加.html
+++ b/thinking-models/习惯叠加.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -76,19 +75,91 @@
   <div class="text-content">
     <h1>习惯堆叠 (Habit Stacking)</h1>
     <p>借力使力。将你想养成的新习惯，锚定在一个已经非常牢固的旧习惯之后。利用旧习惯产生的惯性动能，带过新习惯最难的起步期。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>习惯堆叠是一种基于行为科学的习惯养成策略，通过将新习惯与已有习惯建立关联，利用已有习惯的自动化特性来促进新习惯的形成。</p>
+      <ul>
+        <li><strong>神经可塑性原理：</strong>习惯堆叠利用大脑的神经可塑性，通过重复的关联行为，强化新习惯的神经连接。</li>
+        <li><strong>启动能量节约：</strong>已有习惯的完成会触发新习惯的启动，减少了新习惯所需的决策能量和意志力消耗。</li>
+        <li><strong>情境线索强化：</strong>旧习惯的情境成为新习惯的触发线索，增强了新习惯的情境依赖记忆。</li>
+        <li><strong>习惯链效应：</strong>多个习惯可以形成链式反应，一个习惯的完成为下一个习惯的启动提供动力。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>习惯堆叠的核心原则在于利用已有习惯的力量来促进新习惯的形成。</p>
+      <ul>
+        <li><strong>锚点选择原则：</strong>选择已经非常牢固、自动化程度高的习惯作为锚点。</li>
+        <li><strong>邻近性原则：</strong>新习惯与锚点习惯在时间和空间上应该紧密相连。</li>
+        <li><strong>简单性原则：</strong>初始阶段的新习惯应该简单易行，降低执行阻力。</li>
+        <li><strong>一致性原则：</strong>保持习惯堆叠的一致性，确保新习惯能够获得足够的重复强化。</li>
+        <li><strong>可扩展性原则：</strong>随着新习惯的巩固，可以逐渐增加其复杂性或持续时间。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>习惯堆叠适用于各种需要养成新习惯的场景，从个人发展到健康管理。</p>
+      <ul>
+        <li><strong>个人发展：</strong>学习新技能、培养阅读习惯、建立冥想练习等。</li>
+        <li><strong>健康管理：</strong>养成运动习惯、改善饮食习惯、建立睡眠规律等。</li>
+        <li><strong>工作效率：</strong>建立工作计划、培养时间管理习惯、优化工作流程等。</li>
+        <li><strong>人际关系：</strong>养成问候习惯、建立沟通习惯、培养感恩练习等。</li>
+        <li><strong>财务管理：</strong>建立储蓄习惯、培养预算规划习惯、优化消费行为等。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用习惯堆叠的具体技巧。</p>
+      <ul>
+        <li><strong>锚点识别：</strong>识别个人最牢固、最自动化的习惯作为锚点。</li>
+        <li><strong>明确公式：</strong>使用"在[已有习惯]之后，我将[新习惯]"的明确公式。</li>
+        <li><strong>微小开始：</strong>新习惯的初始版本应该非常小，确保能够轻松完成。</li>
+        <li><strong>环境准备：</strong>为新习惯准备必要的环境和工具，减少执行阻力。</li>
+        <li><strong>习惯链构建：</strong>可以构建多个习惯组成的习惯链，形成更复杂的习惯系统。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中实际应用习惯堆叠。</p>
+      <ul>
+        <li><strong>习惯清单：</strong>列出个人现有的习惯，识别最适合作为锚点的习惯。</li>
+        <li><strong>目标设定：</strong>明确想要养成的新习惯，并将其分解为微小的初始版本。</li>
+        <li><strong>习惯堆叠设计：</strong>为每个新习惯设计具体的习惯堆叠公式。</li>
+        <li><strong>一致性执行：</strong>在一段时间内保持严格的一致性，确保新习惯能够获得足够的强化。</li>
+        <li><strong>渐进式调整：</strong>随着新习惯的巩固，逐渐调整其复杂性或持续时间。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>习惯堆叠在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>晨间例行：</strong>构建晨间习惯链，如"刷牙之后，我将喝一杯水；喝水之后，我将做5分钟伸展运动"。</li>
+        <li><strong>工作习惯：</strong>建立工作前的准备习惯，如"坐下之后，我将整理桌面；整理桌面之后，我将制定今日计划"。</li>
+        <li><strong>健康管理：</strong>培养健康习惯，如"吃完早餐之后，我将服用维生素；下班回家之后，我将更换运动服"。</li>
+        <li><strong>学习习惯：</strong>建立学习习惯，如"吃完晚餐之后，我将阅读10页书；阅读之后，我将做笔记"。</li>
+        <li><strong>睡前例行：</strong>构建睡前习惯链，如"刷完牙之后，我将关闭所有电子设备；关闭电子设备之后，我将冥想5分钟"。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>驱动逻辑</h3>
         <ul>
-          <li><strong>降低启动能耗：</strong>新习惯最难的是“想起去做”。旧习惯充当了那个永远不会失灵的生物闹钟。</li>
+          <li><strong>降低启动能耗：</strong>新习惯最难的是"想起去做"。旧习惯充当了那个永远不会失灵的生物闹钟。</li>
           <li><strong>联觉记忆：</strong>大脑会将两个动作连接在一起，形成一个新的、更庞大的自动化回路。</li>
         </ul>
       </div>
       <div>
-        <h3>D模板</h3>
+        <h3>模板</h3>
         <ul>
           <li><strong>精准公式：</strong>[已有习惯] 之后，我将 [新习惯]。（如：合上电脑之后，我立刻冥想 1 分钟）。</li>
-          <li><strong>微小化原则：</strong>被堆叠的新习惯起初必须极简，以确保“啮合”过程不产生任何心理阻力。</li>
+          <li><strong>微小化原则：</strong>被堆叠的新习惯起初必须极简，以确保"啮合"过程不产生任何心理阻力。</li>
         </ul>
       </div>
     </div>
