--- a/thinking-models/事后聪明偏差.html
+++ b/thinking-models/事后聪明偏差.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -67,7 +66,79 @@
   </div>
   <div class="text-content">
     <h1>后视偏差 (Hindsight Bias)</h1>
-    <p>人类大脑厌恶随机性，热衷于因果律。当结果发生后，我们会下意识地剪掉事前所有的担忧和不确定性，强行拼凑出一条“本来就该如此”的逻辑链。这导致我们在复盘时变得盲目自信。</p>
+    <p>人类大脑厌恶随机性，热衷于因果律。当结果发生后，我们会下意识地剪掉事前所有的担忧和不确定性，强行拼凑出一条"本来就该如此"的逻辑链。这导致我们在复盘时变得盲目自信。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>事后聪明偏差（Hindsight Bias）是一种认知偏差，指人们在得知事件结果后，倾向于高估自己在事件发生前预测结果的能力。</p>
+      <ul>
+        <li><strong>记忆重构机制：</strong>大脑会自动重构记忆，使过去的决策和预测与已知的结果保持一致，创造一种"我早知道"的错觉。</li>
+        <li><strong>因果关系偏好：</strong>人类大脑天生偏好因果解释，倾向于为随机事件寻找因果关系，即使这种关系并不存在。</li>
+        <li><strong>信息过滤：</strong>在回顾过去时，大脑会过滤掉与结果不符的信息，只保留支持结果的证据。</li>
+        <li><strong>认知一致性需求：</strong>为了维持认知一致性，大脑会调整对过去事件的记忆和理解，使其与当前的知识和信念一致。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>事后聪明偏差的核心原则在于理解其形成机制和影响，以及如何减少其对决策的负面影响。</p>
+      <ul>
+        <li><strong>记忆可塑性原则：</strong>人类记忆是可塑的，容易受到后续信息的影响而发生改变。</li>
+        <li><strong>结果导向原则：</strong>已知的结果会显著影响对过去事件的认知和记忆。</li>
+        <li><strong>过度自信原则：</strong>事后聪明偏差会导致个体对自己的预测能力和判断能力过度自信。</li>
+        <li><strong>学习障碍原则：</strong>事后聪明偏差会阻碍从经验中学习，因为它使个体忽视了决策过程中的不确定性和错误。</li>
+        <li><strong>情境依赖原则：</strong>事后聪明偏差的程度取决于事件的显著性、结果的清晰度和时间间隔等因素。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>事后聪明偏差影响着人类生活的多个领域，从个人决策到组织管理和社会认知。</p>
+      <ul>
+        <li><strong>个人决策：</strong>影响个人对过去决策的评估和未来决策的制定。</li>
+        <li><strong>组织管理：</strong>影响组织对项目结果的评估、绩效评价和经验总结。</li>
+        <li><strong>法律领域：</strong>影响法官和陪审团对事件的判断，可能导致对被告的不公平评价。</li>
+        <li><strong>医疗领域：</strong>影响医生对医疗决策的评估和医疗事故的分析。</li>
+        <li><strong>金融市场：</strong>影响投资者对市场走势的回顾性评估和投资决策。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应对和减少事后聪明偏差的具体技巧。</p>
+      <ul>
+        <li><strong>决策记录：</strong>在做决策前，详细记录决策过程、预测和不确定性，作为后续评估的客观依据。</li>
+        <li><strong>预设评估标准：</strong>在事件发生前，设定明确的评估标准，避免结果出来后再调整标准。</li>
+        <li><strong>考虑替代结果：</strong>在评估结果时，有意识地考虑其他可能的结果及其发生的可能性。</li>
+        <li><strong>寻求外部视角：</strong>咨询未参与决策的外部人士，获取更客观的评估。</li>
+        <li><strong>时间旅行技巧：</strong>尝试"回到过去"，想象自己在结果未知的情况下会如何决策和预测。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活和工作中实际应用事后聪明偏差的应对策略。</p>
+      <ul>
+        <li><strong>建立决策日记：</strong>养成记录重要决策的习惯，包括决策理由、预期结果和不确定性。</li>
+        <li><strong>定期复盘：</strong>定期回顾过去的决策，对照决策记录进行评估，避免被事后聪明偏差误导。</li>
+        <li><strong>培养不确定性思维：</strong>学会接受和管理不确定性，认识到决策过程中的不确定性是正常的。</li>
+        <li><strong>团队决策记录：</strong>在团队决策中，记录团队的讨论过程和不同意见，作为后续评估的参考。</li>
+        <li><strong>学习文化建设：</strong>在组织中建立开放、客观的学习文化，鼓励从失败中学习，避免过度关注结果而忽视过程。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>事后聪明偏差在不同场景中的具体表现和应对策略。</p>
+      <ul>
+        <li><strong>项目管理：</strong>在项目结束后，使用决策记录和预设评估标准进行客观评估，避免事后聪明偏差导致的错误总结。</li>
+        <li><strong>绩效评价：</strong>在绩效评价中，关注员工的决策过程和努力程度，而不仅仅是结果，减少事后聪明偏差的影响。</li>
+        <li><strong>投资决策：</strong>在投资回顾中，对照投资决策记录和市场实际走势，客观评估投资策略的有效性。</li>
+        <li><strong>教育教学：</strong>在教学中，鼓励学生记录学习过程中的思考和预测，培养学生的元认知能力，减少事后聪明偏差。</li>
+        <li><strong>风险管理：</strong>在风险管理中，定期回顾风险评估过程，检验风险预测的准确性，不断改进风险评估方法。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>记忆剪辑</h3>
@@ -80,7 +151,7 @@
         <h3>反思协议</h3>
         <ul>
           <li><strong>决策日记：</strong>在做任何重大决定前，强制写下当时的担忧和预测。这是对抗大脑重写记忆的唯一物理档案。</li>
-          <li><strong>承认随机性：</strong>伟大的结果往往伴随巨大的运气，承认这一点比强行归纳出一套“成功模版”更接近真理。</li>
+          <li><strong>承认随机性：</strong>伟大的结果往往伴随巨大的运气，承认这一点比强行归纳出一套"成功模版"更接近真理。</li>
         </ul>
       </div>
     </div>
