--- a/thinking-models/二八法则.html
+++ b/thinking-models/二八法则.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -72,6 +71,78 @@
   <div class="text-content">
     <h1>二八定律</h1>
     <p>帕累托法则揭示了系统的不对称性：20% 的因素产生 80% 的结果。识别出那 20% 的关键少数，是高效管理与决策的核心。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>二八定律（Pareto Principle），又称帕累托法则，是由意大利经济学家维尔弗雷多·帕累托（Vilfredo Pareto）在19世纪末发现的一种普遍存在的不对称现象。</p>
+      <ul>
+        <li><strong>幂律分布：</strong>二八定律反映了自然界和人类社会中广泛存在的幂律分布，即少数元素占据了大部分资源或产生了大部分效果。</li>
+        <li><strong>系统非线性：</strong>许多系统的输出与输入之间不是线性关系，而是呈现出非线性的不对称性。</li>
+        <li><strong>关键少数原则：</strong>在任何系统中，都存在着少数关键因素，它们对系统的整体表现起着决定性作用。</li>
+        <li><strong>资源优化机会：</strong>识别和聚焦于关键少数，可以显著提高资源利用效率和系统整体性能。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>二八定律的核心原则在于识别和聚焦于对结果产生最大影响的关键少数因素。</p>
+      <ul>
+        <li><strong>非均衡原则：</strong>系统的投入与产出之间存在非均衡关系，少数投入产生大部分产出。</li>
+        <li><strong>关键少数原则：</strong>识别并聚焦于对结果最有影响的少数因素。</li>
+        <li><strong>资源集中原则：</strong>将资源集中投入到关键少数因素上，以获得最大的回报。</li>
+        <li><strong>持续优化原则：</strong>定期评估和调整关键少数因素，以适应系统的变化。</li>
+        <li><strong>系统性思考原则：</strong>从系统整体的角度识别关键少数，避免局部优化导致整体效率下降。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>二八定律适用于几乎所有领域，从个人生活到组织管理和社会系统。</p>
+      <ul>
+        <li><strong>个人管理：</strong>时间管理、精力分配、学习重点等个人发展领域。</li>
+        <li><strong>企业管理：</strong>客户管理、产品管理、营销资源分配、人力资源管理等企业运营领域。</li>
+        <li><strong>投资决策：</strong>资产配置、投资组合管理、风险控制等投资领域。</li>
+        <li><strong>教育学习：</strong>课程设计、学习重点、教学资源分配等教育领域。</li>
+        <li><strong>社会系统：</strong>财富分配、资源配置、政策制定等社会领域。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用二八定律的具体技巧。</p>
+      <ul>
+        <li><strong>价值分析：</strong>对系统中的各个因素进行价值分析，识别出产生大部分价值的关键少数。</li>
+        <li><strong>优先级排序：</strong>根据价值贡献对任务和活动进行优先级排序，优先处理高价值的任务。</li>
+        <li><strong>资源重分配：</strong>将资源从低价值活动重新分配到高价值活动上。</li>
+        <li><strong>持续监控：</strong>定期监控系统的表现，及时调整关键少数因素。</li>
+        <li><strong>简化策略：</strong>通过聚焦于关键少数，简化系统和流程，减少复杂性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活和工作中实际应用二八定律。</p>
+      <ul>
+        <li><strong>时间审计：</strong>记录和分析自己的时间使用情况，识别出最有价值的时间使用方式。</li>
+        <li><strong>任务筛选：</strong>定期审查任务清单，删除或委托低价值任务，专注于高价值任务。</li>
+        <li><strong>客户细分：</strong>对客户进行细分，识别出最有价值的客户群体，为其提供个性化服务。</li>
+        <li><strong>产品优化：</strong>分析产品功能使用数据，聚焦于优化最常用的核心功能。</li>
+        <li><strong>学习聚焦：</strong>在学习新领域时，先掌握最核心的20%概念，再扩展到其他内容。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>二八定律在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>时间管理：</strong>识别并聚焦于20%的高价值活动，这些活动将产生80%的个人成就。</li>
+        <li><strong>客户关系管理：</strong>识别20%的核心客户，他们贡献了80%的 revenue，为其提供优先服务和个性化解决方案。</li>
+        <li><strong>产品开发：</strong>识别产品中20%的核心功能，这些功能被80%的用户使用，优先优化这些功能。</li>
+        <li><strong>市场营销：</strong>识别20%的营销渠道，它们带来了80%的 leads，将营销预算集中在这些渠道上。</li>
+        <li><strong>投资组合：</strong>识别20%的投资标的，它们贡献了80%的投资回报，优化投资组合配置。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>战略焦点</h3>
