--- a/thinking-models/二阶思维.html
+++ b/thinking-models/二阶思维.html
@@ -50,7 +50,7 @@
 
 
 
-    body { background: #0f172a; color: white; font-family: '我nter', sans-serif; overflow: hidden; }
+
     .ripple { animation: pulse-ripple 6s infinite; transform-origin: center; opacity: 0; }
     @keyframes pulse-ripple { 
       0% { transform: scale(0.5); opacity: 0; }
@@ -59,7 +59,7 @@
     }
   </style>
 </head>
-<body>data-theme="light" class="p-8 md:p-16 flex items-center justify-center min-h-screen">
+<body data-theme="light" class="p-8 md:p-16 flex items-center justify-center min-h-screen">
   <div class="max-w-7xl mx-auto w-full grid grid-cols-1 gap-20">
     <div class="space-y-12">
       <h1 class="text-8xl font-black text-white leading-none tracking-tighter italic">二阶<br><span class="text-blue-400 not-italic uppercase">思维</span></h1>
@@ -74,6 +74,83 @@
           <h4 class="font-black text-blue-400 mb-2">二阶思维 (涟漪效应)</h4>
           <p class="text-xs">关注连锁反应及其后果的后果。如：经常外出对健康的长期影响。</p>
         </div>
+      </div>
+
+      <!-- 深度分析 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">深度分析</h4>
+        <p class="text-sm text-slate-400 mb-4">二阶思维是一种超越直接后果，考虑决策连锁反应的思维方式。它要求我们不仅思考行动的直接影响，还要思考这些影响会带来的进一步影响。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">系统性思考：</span>二阶思维本质上是一种系统性思考，它将问题视为复杂系统的一部分，而非孤立事件。</li>
+          <li><span class="text-blue-400 font-bold">时间维度扩展：</span>通过考虑长期影响，二阶思维扩展了决策的时间维度，避免了短视行为。</li>
+          <li><span class="text-blue-400 font-bold">非线性影响识别：</span>二阶思维帮助识别决策的非线性影响，即那些不成比例放大或缩小的后果。</li>
+          <li><span class="text-blue-400 font-bold">反馈循环意识：</span>二阶思维强调识别和理解系统中的反馈循环，包括正反馈和负反馈。</li>
+        </ul>
+      </div>
+
+      <!-- 核心原则 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">核心原则</h4>
+        <p class="text-sm text-slate-400 mb-4">二阶思维的核心原则在于超越表面，深入思考决策的长期和间接影响。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">后果链式思考：</span>思考"然后呢？"的问题，追踪决策的连锁反应。</li>
+          <li><span class="text-blue-400 font-bold">时间延迟考虑：</span>考虑决策影响的时间延迟，避免被即时反馈误导。</li>
+          <li><span class="text-blue-400 font-bold">多维度分析：</span>从多个角度分析决策，包括经济、社会、环境等维度。</li>
+          <li><span class="text-blue-400 font-bold">不确定性管理：</span>承认并管理二阶影响的不确定性，而非忽视它。</li>
+          <li><span class="text-blue-400 font-bold">反思性思考：</span>定期反思过去决策的二阶影响，不断改进思维方式。</li>
+        </ul>
+      </div>
+
+      <!-- 适用范围 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">适用范围</h4>
+        <p class="text-sm text-slate-400 mb-4">二阶思维适用于各种需要长远考虑和复杂分析的场景。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">个人决策：</span>职业选择、教育投资、健康管理等个人重要决策。</li>
+          <li><span class="text-blue-400 font-bold">商业战略：</span>产品开发、市场进入、并购决策等企业战略决策。</li>
+          <li><span class="text-blue-400 font-bold">公共政策：</span>环境保护、教育改革、 healthcare 政策等公共决策。</li>
+          <li><span class="text-blue-400 font-bold">投资决策：</span>资产配置、投资组合管理、风险评估等投资决策。</li>
+          <li><span class="text-blue-400 font-bold">人际关系：</span>沟通方式、冲突解决、长期关系维护等人际决策。</li>
+        </ul>
+      </div>
+
+      <!-- 使用技巧 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">使用技巧</h4>
+        <p class="text-sm text-slate-400 mb-4">有效应用二阶思维的具体技巧。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">问"然后呢？"：</span>在做出决策前，反复问自己"然后会发生什么？"，追踪至少两层后果。</li>
+          <li><span class="text-blue-400 font-bold">绘制影响地图：</span>使用思维导图等工具，可视化决策的直接和间接影响。</li>
+          <li><span class="text-blue-400 font-bold">考虑时间跨度：</span>明确考虑决策在不同时间跨度（短期、中期、长期）的影响。</li>
+          <li><span class="text-blue-400 font-bold">寻求不同视角：</span>从不同利益相关者的角度分析决策影响，避免盲点。</li>
+          <li><span class="text-blue-400 font-bold">逆向思考：</span>从预期结果反向推导，识别可能的路径和障碍。</li>
+        </ul>
+      </div>
+
+      <!-- 实践建议 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">实践建议</h4>
+        <p class="text-sm text-slate-400 mb-4">如何在日常生活和工作中实际应用二阶思维。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">从小事练习：</span>从日常小决策开始练习二阶思维，逐渐应用到重要决策中。</li>
+          <li><span class="text-blue-400 font-bold">建立决策记录：</span>记录决策过程和预期的二阶影响，后续验证并学习。</li>
+          <li><span class="text-blue-400 font-bold">定期反思：</span>定期反思过去决策的实际影响，对比预期与现实的差异。</li>
+          <li><span class="text-blue-400 font-bold">团队协作：</span>与他人协作分析决策影响，利用集体智慧识别潜在的二阶影响。</li>
+          <li><span class="text-blue-400 font-bold">保持谦逊：</span>承认二阶影响的不确定性，避免过度自信。</li>
+        </ul>
+      </div>
+
+      <!-- 应用场景 -->
+      <div class="p-8 bg-white/5 border-l-4 border-slate-700 rounded-3xl">
+        <h4 class="font-black text-white mb-4 text-lg">应用场景</h4>
+        <p class="text-sm text-slate-400 mb-4">二阶思维在不同场景中的具体应用案例。</p>
+        <ul class="text-xs text-slate-500 space-y-2">
+          <li><span class="text-blue-400 font-bold">职业发展：</span>考虑职业选择的长期影响，包括技能发展、网络建立和行业趋势变化。</li>
+          <li><span class="text-blue-400 font-bold">产品设计：</span>考虑产品功能的二阶影响，如用户行为变化、市场竞争反应和生态系统影响。</li>
+          <li><span class="text-blue-400 font-bold">环境保护：</span>考虑环保政策的二阶影响，如经济成本、社会适应和技术创新激励。</li>
+          <li><span class="text-blue-400 font-bold">教育决策：</span>考虑教育投资的二阶影响，如职业机会、社会流动性和个人幸福感。</li>
+          <li><span class="text-blue-400 font-bold">健康管理：</span>考虑生活方式选择的二阶影响，如长期健康状况、医疗成本和生活质量。</li>
+        </ul>
       </div>
     </div>
 
