--- a/thinking-models/五小时法则.html
+++ b/thinking-models/五小时法则.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -70,6 +69,78 @@
   <div class="text-content">
     <h1>五小时原则 (The 5-Hour Rule)</h1>
     <p>富兰克林、比尔·盖茨、马斯克等人的共同习惯：无论多忙，每周至少留出 5 小时（每天 1 小时）进行纯粹的学习、反思与实验。这是对抗知识折旧的唯一手段。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>五小时原则是一种关于持续学习和自我提升的思维模型，强调在忙碌的生活中为学习和反思预留专门时间的重要性。</p>
+      <ul>
+        <li><strong>知识折旧曲线：</strong>在信息爆炸的时代，知识的折旧速度越来越快，持续学习是保持竞争力的必要条件。</li>
+        <li><strong>认知复利效应：</strong>持续学习产生的认知复利效应，能够在长期内带来指数级的能力提升。</li>
+        <li><strong>大脑可塑性：</strong>五小时原则利用大脑的神经可塑性，通过持续学习和反思强化神经连接，提高认知能力。</li>
+        <li><strong>创造性思维培养：</strong>专门的学习和反思时间为创造性思维提供了空间，促进创新和问题解决能力的提升。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>五小时原则的核心原则在于将学习视为一种日常习惯，而非偶尔的活动。</p>
+      <ul>
+        <li><strong>持续学习原则：</strong>学习应该是持续的、终身的，而非仅限于正式教育阶段。</li>
+        <li><strong>专门时间原则：</strong>为学习和反思预留专门的、不受干扰的时间。</li>
+        <li><strong>主动学习原则：</strong>采用主动学习方法，如深度阅读、反思、实验等，而非被动接受信息。</li>
+        <li><strong>跨学科学习原则：</strong>鼓励跨学科学习，构建多元化的知识体系。</li>
+        <li><strong>实践应用原则：</strong>将学习与实践相结合，通过应用巩固知识并产生实际价值。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>五小时原则适用于所有希望持续成长和提升的个人，无论其职业和背景如何。</p>
+      <ul>
+        <li><strong>专业人士：</strong>保持专业知识的更新，提升职业竞争力。</li>
+        <li><strong>创业者：</strong>拓展视野，识别新机会，解决复杂问题。</li>
+        <li><strong>领导者：</strong>提升领导力，理解新兴趋势，做出更明智的决策。</li>
+        <li><strong>学生：</strong>培养终身学习的习惯，为未来的职业生涯做准备。</li>
+        <li><strong>任何希望成长的个人：</strong>丰富内心世界，提高生活质量，实现个人目标。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用五小时原则的具体技巧。</p>
+      <ul>
+        <li><strong>时间块安排：</strong>将每周 5 小时的学习时间分解为每天 1 小时的时间块，保持一致性。</li>
+        <li><strong>学习环境优化：</strong>创建专门的学习环境，减少干扰，提高学习效率。</li>
+        <li><strong>学习资源选择：</strong>选择高质量的学习资源，如经典书籍、学术论文、专业课程等。</li>
+        <li><strong>学习方法多样化：</strong>结合阅读、写作、讨论、实验等多种学习方法，提高学习效果。</li>
+        <li><strong>学习社区参与：</strong>加入学习社区，与他人交流分享，拓展学习视野。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中实际应用五小时原则。</p>
+      <ul>
+        <li><strong>早起学习：</strong>利用早晨精力充沛的时间进行学习，避免日常事务的干扰。</li>
+        <li><strong>通勤时间利用：</strong>将通勤时间转化为学习时间，如听有声书、 podcasts 等。</li>
+        <li><strong>周末深度学习：</strong>在周末安排更长时间的深度学习和反思，处理更复杂的学习内容。</li>
+        <li><strong>学习计划制定：</strong>制定每周学习计划，明确学习目标和内容。</li>
+        <li><strong>学习记录与反思：</strong>记录学习内容和心得，定期反思学习效果，调整学习策略。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>五小时原则在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>职业发展：</strong>学习新技能、了解行业趋势、提升专业知识，为职业晋升做准备。</li>
+        <li><strong>创业创新：</strong>研究市场需求、学习新技术、探索商业模式，为创业项目提供灵感和支持。</li>
+        <li><strong>个人兴趣：</strong>发展个人爱好、学习艺术技能、探索新领域，丰富个人生活。</li>
+        <li><strong>健康管理：</strong>学习健康知识、研究营养科学、了解运动原理，改善个人健康状况。</li>
+        <li><strong>人际关系：</strong>学习沟通技巧、了解心理学知识、研究人际关系 dynamics，改善人际关系质量。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>投入分配</h3>
