--- a/thinking-models/产品生命周期.html
+++ b/thinking-models/产品生命周期.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -74,8 +73,80 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>产品生命周期 (计划Lc)</h1>
+    <h1>产品生命周期 (Product Lifecycle)</h1>
     <p>没有任何产品是永恒的。理解产品所处的阶段，能帮你决定当前是该疯狂买量，还是该收缩战线寻找接班人。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>产品生命周期（Product Lifecycle，PLC）是描述产品从引入市场到最终退出市场的全过程的模型。它帮助企业理解产品在不同阶段的特点和挑战，从而制定相应的战略。</p>
+      <ul>
+        <li><strong>阶段特征分析：</strong>每个阶段都有独特的市场特征、消费者行为和竞争态势，需要不同的战略应对。</li>
+        <li><strong>曲线形态变异：</strong>不同产品的生命周期曲线形态可能不同，有的产品可能跳过某些阶段，有的产品可能经历多个循环。</li>
+        <li><strong>生命周期长度：</strong>不同行业和产品的生命周期长度差异很大，受到技术进步、市场竞争和消费者需求变化的影响。</li>
+        <li><strong>战略转折点：</strong>生命周期中的转折点（如从导入期到成长期的过渡）是战略调整的关键时机。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>产品生命周期的核心原则在于理解产品在不同阶段的特点，并根据这些特点制定相应的战略。</p>
+      <ul>
+        <li><strong>阶段适配原则：</strong>不同阶段需要不同的战略、资源配置和管理方式。</li>
+        <li><strong>前瞻性原则：</strong>企业应该提前预见产品生命周期的变化，为下一阶段做好准备。</li>
+        <li><strong>差异化原则：</strong>在生命周期的不同阶段，产品差异化的重点和方式应该不同。</li>
+        <li><strong>资源优化原则：</strong>根据产品在生命周期中的位置，优化资源配置，最大化投资回报。</li>
+        <li><strong>创新驱动原则：</strong>通过持续创新，延长产品生命周期或为企业创造新的增长点。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>产品生命周期适用于各种产品和服务，从实物产品到数字产品，从消费品到工业品。</p>
+      <ul>
+        <li><strong>消费品行业：</strong>快速消费品、耐用消费品等传统消费品行业。</li>
+        <li><strong>科技行业：</strong>电子产品、软件、互联网服务等技术驱动的行业。</li>
+        <li><strong>工业品行业：</strong>机械设备、原材料、零部件等工业产品行业。</li>
+        <li><strong>服务行业：</strong>金融服务、 healthcare 服务、教育服务等服务行业。</li>
+        <li><strong>数字产品：</strong>移动应用、SaaS产品、数字内容等数字产品和服务。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用产品生命周期模型的具体技巧。</p>
+      <ul>
+        <li><strong>阶段识别：</strong>通过市场数据、销售趋势、利润水平等指标，准确识别产品所处的生命周期阶段。</li>
+        <li><strong>战略调整：</strong>根据产品所处的阶段，及时调整市场、产品、价格和渠道战略。</li>
+        <li><strong>生命周期延长：</strong>通过产品改进、市场扩展、营销创新等手段，延长产品的生命周期。</li>
+        <li><strong>新产品规划：</strong>在现有产品进入成熟期或衰退期前，规划和开发新产品，实现产品组合的良性循环。</li>
+        <li><strong>资源重新分配：</strong>根据产品在生命周期中的位置，重新分配研发、营销和生产资源。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际业务中应用产品生命周期模型。</p>
+      <ul>
+        <li><strong>建立监控系统：</strong>建立产品生命周期监控系统，定期评估产品在生命周期中的位置。</li>
+        <li><strong>制定阶段性计划：</strong>为产品的每个生命周期阶段制定详细的战略和行动计划。</li>
+        <li><strong>培养跨职能协作：</strong>产品生命周期管理需要市场、研发、生产、销售等多个部门的协作。</li>
+        <li><strong>保持市场敏感度：</strong>密切关注市场变化、竞争动态和消费者需求变化，及时调整策略。</li>
+        <li><strong>投资于创新：</strong>持续投资于产品创新和流程创新，为企业创造新的增长点。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>产品生命周期模型在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>新产品上市：</strong>根据导入期的特点，制定合适的市场进入策略和资源配置计划。</li>
+        <li><strong>增长期管理：</strong>在产品快速增长期，制定扩张战略，建立竞争壁垒，最大化市场份额。</li>
+        <li><strong>成熟期优化：</strong>在产品成熟期，通过精细化运营、成本控制和差异化策略，维持市场地位和利润水平。</li>
+        <li><strong>衰退期管理：</strong>在产品衰退期，制定退出策略或转型策略，最大化剩余价值。</li>
+        <li><strong>产品组合管理：</strong>根据不同产品在生命周期中的位置，优化产品组合，实现资源的最佳配置。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>战略分层</h3>
