--- a/thinking-models/价值锚定.html
+++ b/thinking-models/价值锚定.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -74,19 +73,91 @@
   </div>
   <div class="text-content">
     <h1>价值锚点 (Value Anchoring)</h1>
-    <p>自媒体和咨询服务的定价不是基于“成本”，而是基于“对比”。如果你直接报价，用户会锚定在廉价的网课上；如果你先展示你解决的问题能省下几百万的学费，你的服务定价将获得心理层面的物理支撑。</p>
+    <p>自媒体和咨询服务的定价不是基于"成本"，而是基于"对比"。如果你直接报价，用户会锚定在廉价的网课上；如果你先展示你解决的问题能省下几百万的学费，你的服务定价将获得心理层面的物理支撑。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>价值锚定是一种基于心理学的定价和价值传递策略，通过设定参考点来影响消费者对产品或服务价值的感知。</p>
+      <ul>
+        <li><strong>认知心理学基础：</strong>人类在做决策时，倾向于依赖已知的参考点（锚点）来评估新信息，而非从零开始分析。</li>
+        <li><strong>对比效应：</strong>价值锚定利用对比效应，通过展示高价值的参考点，使目标产品或服务显得更有价值或更合理。</li>
+        <li><strong>框架效应：</strong>价值锚定通过设定不同的框架，影响消费者对价值的感知和决策。</li>
+        <li><strong>稀缺性原理：</strong>价值锚定通常结合稀缺性原理，通过强调产品或服务的独特性和有限性，提升其感知价值。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>价值锚定的核心原则在于理解和利用人类的认知偏差，通过设定合适的参考点来影响价值感知。</p>
+      <ul>
+        <li><strong>参考点设定原则：</strong>选择合适的参考点是价值锚定的关键，参考点应该与目标产品或服务相关且具有足够的价值。</li>
+        <li><strong>对比合理性原则：</strong>对比应该合理且相关，避免过度夸张导致消费者不信任。</li>
+        <li><strong>价值一致性原则：</strong>价值锚定应该与产品或服务的实际价值保持一致，避免误导消费者。</li>
+        <li><strong>情境适应性原则：</strong>价值锚定策略应该根据不同的情境和目标受众进行调整。</li>
+        <li><strong>长期信任原则：</strong>价值锚定应该建立在长期信任的基础上，而非短期的销售技巧。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>价值锚定适用于各种需要影响消费者价值感知和决策的场景。</p>
+      <ul>
+        <li><strong>产品定价：</strong>通过设定参考价格，影响消费者对产品价值的感知和接受度。</li>
+        <li><strong>服务定价：</strong>尤其是专业服务、咨询服务等非标服务的定价。</li>
+        <li><strong>市场营销：</strong>在营销传播中，通过对比展示提升产品或服务的感知价值。</li>
+        <li><strong>谈判策略：</strong>在商务谈判中，通过设定合理的锚点影响谈判结果。</li>
+        <li><strong>品牌定位：</strong>通过与竞争对手或行业标准的对比，确立品牌的价值定位。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用价值锚定的具体技巧。</p>
+      <ul>
+        <li><strong>设定高价值参考点：</strong>在报价前，先展示高价值的参考点，如竞争对手的高价、问题的成本、解决方案的价值等。</li>
+        <li><strong>使用对比展示：</strong>通过并排展示或前后对比，突出目标产品或服务的价值优势。</li>
+        <li><strong>强调独特价值：</strong>突出产品或服务的独特性和不可替代性，提升感知价值。</li>
+        <li><strong>利用数字锚定：</strong>使用具体的数字和数据作为锚点，增加说服力。</li>
+        <li><strong>建立多层次锚点：</strong>设定多个层次的锚点，引导消费者逐步接受更高的价值。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际业务中应用价值锚定策略。</p>
+      <ul>
+        <li><strong>了解目标受众：</strong>了解目标受众的价值观、痛点和参考点，制定针对性的价值锚定策略。</li>
+        <li><strong>研究竞争对手：</strong>研究竞争对手的定价和价值主张，设定合理的对比锚点。</li>
+        <li><strong>突出独特价值：</strong>明确产品或服务的独特价值主张，作为价值锚定的基础。</li>
+        <li><strong>测试不同锚点：</strong>测试不同的价值锚点，找到最有效的策略。</li>
+        <li><strong>保持一致性：</strong>在营销、销售和服务全过程中保持价值主张的一致性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>价值锚定在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>咨询服务定价：</strong>在报价前，先展示客户问题的成本和解决方案的价值，使咨询费用显得合理。</li>
+        <li><strong>高端产品销售：</strong>通过与奢侈品或高价值替代品的对比，提升产品的感知价值。</li>
+        <li><strong>房地产销售：</strong>通过展示周边类似房产的价格，设定合理的价格锚点。</li>
+        <li><strong>薪资谈判：</strong>在薪资谈判中，设定合理的期望薪资作为锚点，影响谈判结果。</li>
+        <li><strong>营销活动：</strong>在促销活动中，通过展示原价和促销价的对比，提升促销的吸引力。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>非标溢价</h3>
         <ul>
-          <li><strong>拒绝按时计费：</strong>时间是不可扩展的。一旦按小时收费，你就是由于“效率高”而受罚。要按“结果的价值”收费。</li>
+          <li><strong>拒绝按时计费：</strong>时间是不可扩展的。一旦按小时收费，你就是由于"效率高"而受罚。要按"结果的价值"收费。</li>
           <li><strong>重塑参照系：</strong>主动抛出一个昂贵的对比项（如：雇佣全职团队的成本），让你的个人服务显得极其高效且划算。</li>
         </ul>
       </div>
       <div>
         <h3>心理主权</h3>
         <ul>
-          <li><strong>筛选客户：</strong>高价本身就是最好的“品质过滤器”。它能排除掉那些琐碎、消耗精力的低质量合作方。</li>
+          <li><strong>筛选客户：</strong>高价本身就是最好的"品质过滤器"。它能排除掉那些琐碎、消耗精力的低质量合作方。</li>
           <li><strong>建立高位锚：</strong>第一印象的报价决定了整个博弈过程的引力中心。宁可高开低走，绝不平开。</li>
         </ul>
       </div>
