--- a/thinking-models/价格定律.html
+++ b/thinking-models/价格定律.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -72,8 +71,80 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>普赖斯定律 (计划rice's Law)</h1>
+    <h1>普赖斯定律 (Price's Law)</h1>
     <p>科学计量学发现：在一个领域中，50% 的论文是由参与者人数的平方根（√N）贡献的。这意味着在 100 人的公司，最顶尖的 10 人完成了半数工作。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>普赖斯定律（Price's Law）是由 Derek de Solla Price 在 1963 年提出的，描述了在任何创造性领域中，贡献的分布规律。</p>
+      <ul>
+        <li><strong>幂律分布：</strong>普赖斯定律揭示了贡献并不是正态分布的，而是遵循幂律分布，少数人做出了大部分贡献。</li>
+        <li><strong>规模效应：</strong>随着组织规模的增大，平庸者的比例会增加，而核心贡献者的比例会下降。</li>
+        <li><strong>阈值效应：</strong>当组织规模超过一定阈值时，管理成本会急剧上升，而人均产出会下降。</li>
+        <li><strong>网络效应：</strong>核心贡献者之间的协作和网络效应，往往是组织创新和高绩效的关键。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>普赖斯定律的核心原则在于理解和管理组织中的贡献分布不均现象。</p>
+      <ul>
+        <li><strong>非对称贡献原则：</strong>承认并接受组织中贡献的非对称性，这是自然规律而非管理失败。</li>
+        <li><strong>人才密度原则：</strong>保持适当的人才密度是维持组织高绩效的关键。</li>
+        <li><strong>核心价值原则：</strong>识别和保留核心贡献者，他们是组织价值创造的关键。</li>
+        <li><strong>规模管理原则：</strong>谨慎管理组织规模，避免过度扩张导致的效率下降。</li>
+        <li><strong>激励差异化原则：</strong>根据贡献大小提供差异化的激励，而非平均主义。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>普赖斯定律适用于各种需要创造性贡献的组织和领域。</p>
+      <ul>
+        <li><strong>企业管理：</strong>理解和管理组织中的贡献分布，优化人才配置。</li>
+        <li><strong>科研领域：</strong>评估研究团队的绩效和贡献分布。</li>
+        <li><strong>创意产业：</strong>管理创意团队，识别核心创意人才。</li>
+        <li><strong>教育领域：</strong>理解学生的学习表现分布，优化教育资源配置。</li>
+        <li><strong>社区管理：</strong>理解社区贡献的分布，激励核心贡献者。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用普赖斯定律的具体技巧。</p>
+      <ul>
+        <li><strong>识别核心贡献者：</strong>通过数据和观察，识别组织中的核心贡献者。</li>
+        <li><strong>优化人才密度：</strong>保持适当的组织规模，避免人才密度稀释。</li>
+        <li><strong>差异化激励：</strong>为核心贡献者提供差异化的激励和发展机会。</li>
+        <li><strong>建立协作网络：</strong>促进核心贡献者之间的协作和知识共享。</li>
+        <li><strong>持续评估：</strong>定期评估贡献分布，及时调整管理策略。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际管理中应用普赖斯定律。</p>
+      <ul>
+        <li><strong>建立贡献评估体系：</strong>建立客观的贡献评估体系，识别核心贡献者。</li>
+        <li><strong>优化组织架构：</strong>根据贡献分布优化组织架构，减少层级和官僚。</li>
+        <li><strong>投资核心人才：</strong>在核心贡献者身上投入更多资源，包括培训、发展和激励。</li>
+        <li><strong>培养人才梯队：</strong>建立人才梯队，确保核心能力的传承。</li>
+        <li><strong>营造创新文化：</strong>营造鼓励创新和卓越的文化，吸引和保留高绩效人才。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>普赖斯定律在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>创业团队管理：</strong>在创业初期，保持小而精的团队规模，确保高人才密度。</li>
+        <li><strong>大公司创新：</strong>在大公司内部建立小型创新团队，保持高绩效和创新能力。</li>
+        <li><strong>科研项目管理：</strong>识别核心研究人员，优化研究团队配置。</li>
+        <li><strong>教育资源分配：</strong>根据学生的学习表现，优化教育资源分配。</li>
+        <li><strong>社区运营：</strong>识别和激励社区核心贡献者，促进社区健康发展。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>残酷分配</h3>
