--- a/thinking-models/优先连接.html
+++ b/thinking-models/优先连接.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
@@ -72,8 +71,80 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>偏好依附 (计划referential Attachment)</h1>
+    <h1>偏好依附 (Preferential Attachment)</h1>
     <p>网络增长的底层法则：新的节点在加入网络时，倾向于链接那些已有链接更多的节点。这种“跟风”行为导致网络迅速演化为极少数超级 Hub 统治全局的形态。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>偏好依附（Preferential Attachment）是网络科学中的一个核心概念，描述了网络增长过程中节点连接的形成机制。</p>
+      <ul>
+        <li><strong>幂律分布形成：</strong>偏好依附是导致网络中节点连接数呈现幂律分布的主要原因，少数节点拥有绝大多数连接。</li>
+        <li><strong>初始优势放大：</strong>节点的初始微小优势会通过偏好依附机制被无限放大，形成“富者愈富”的现象。</li>
+        <li><strong>无标度网络特性：</strong>由偏好依附形成的网络具有无标度特性，对随机故障具有鲁棒性，但对针对性攻击脆弱。</li>
+        <li><strong>路径依赖：</strong>网络的发展路径受到初始条件的强烈影响，形成路径依赖。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>偏好依附的核心原则在于理解网络增长中的连接形成机制及其影响。</p>
+      <ul>
+        <li><strong>连接偏好原则：</strong>新节点倾向于连接已有连接数多的节点，形成马太效应。</li>
+        <li><strong>初始条件敏感原则：</strong>网络的最终结构对初始条件高度敏感，微小的初始差异会导致巨大的最终差异。</li>
+        <li><strong>结构演化原则：</strong>网络结构会随着时间演化，逐渐形成少数超级节点主导的形态。</li>
+        <li><strong>鲁棒性与脆弱性并存原则：</strong>无标度网络对随机故障鲁棒，但对针对核心节点的攻击脆弱。</li>
+        <li><strong>动态平衡原则：</strong>网络在增长过程中，新节点的加入和旧节点的退出会影响网络的动态平衡。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>偏好依附适用于各种网络系统的分析和理解。</p>
+      <ul>
+        <li><strong>社交网络：</strong>理解社交网络中影响力的分布和信息传播。</li>
+        <li><strong>互联网：</strong>分析互联网的拓扑结构和路由策略。</li>
+        <li><strong>引用网络：</strong>理解学术论文的引用模式和知识传播。</li>
+        <li><strong>金融网络：</strong>分析金融机构之间的关联和系统性风险。</li>
+        <li><strong>交通网络：</strong>优化交通网络的设计和流量分配。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用偏好依附原理的具体技巧。</p>
+      <ul>
+        <li><strong>识别枢纽节点：</strong>在网络中识别和利用枢纽节点，提高资源获取效率。</li>
+        <li><strong>早期介入：</strong>在网络发展早期介入，建立初始优势。</li>
+        <li><strong>创造连接价值：</strong>通过提供独特价值，吸引其他节点主动连接。</li>
+        <li><strong>网络位置优化：</strong>优化自己在网络中的位置，靠近枢纽节点。</li>
+        <li><strong>风险管理：</strong>识别网络中的关键节点，评估系统性风险。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际应用中利用偏好依附原理。</p>
+      <ul>
+        <li><strong>个人网络建设：</strong>在社交和职业网络中，主动连接枢纽节点，提高个人影响力。</li>
+        <li><strong>产品推广：</strong>利用意见领袖的影响力，加速产品的市场渗透。</li>
+        <li><strong>内容创作：</strong>在内容平台上，关注热门话题和创作者，提高内容曝光率。</li>
+        <li><strong>网络安全：</strong>识别和保护网络中的关键节点，防范系统性风险。</li>
+        <li><strong>城市规划：</strong>优化交通枢纽和公共服务设施的布局，提高城市运行效率。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>偏好依附原理在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>社交媒体营销：</strong>通过与网红和意见领袖合作，利用他们的枢纽地位扩大品牌影响力。</li>
+        <li><strong>搜索引擎优化：</strong>通过获取高质量网站的链接，提高网站在搜索结果中的排名。</li>
+        <li><strong>科研合作：</strong>与领域内的核心研究者合作，提高研究成果的引用率和影响力。</li>
+        <li><strong>投资决策：</strong>识别行业中的领先企业和关键人物，做出更明智的投资决策。</li>
+        <li><strong>创新扩散：</strong>通过在网络中找到合适的初始采用者，加速创新的扩散速度。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>网络物理学</h3>
