--- a/thinking-models/信噪比.html
+++ b/thinking-models/信噪比.html
@@ -71,6 +71,79 @@
   <div class="text-content">
     <h1>信号与噪声 (Signal-to-Noise)</h1>
     <p>在这个信息过载的时代，最稀缺的能力不是获取信息，而是识别并提取出真正的“信号”。信号是那些能改变你预期的事实，而噪声仅仅是多余的波动。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>信号与噪声的概念源于通信理论，指的是有效信息（信号）与无用信息（噪声）的比例。在信息时代，这个概念已经扩展到各个领域，成为判断信息价值的重要标准。</p>
+      <ul>
+        <li><strong>信息价值梯度：</strong>不同信息的价值存在巨大差异，真正有价值的信号往往被大量无价值的噪声所淹没。</li>
+        <li><strong>认知带宽限制：</strong>人类的认知能力是有限的，过多的噪声会占用宝贵的认知带宽，影响对信号的识别和处理。</li>
+        <li><strong>信号的预测价值：</strong>真正的信号具有预测价值，能够改变我们对未来的预期和判断。</li>
+        <li><strong>噪声的伪装性：</strong>许多噪声会伪装成信号，通过情绪化的表达、权威的包装等方式吸引我们的注意力。</li>
+        <li><strong>信噪比的动态变化：</strong>随着信息环境的变化，信噪比也会动态变化，需要持续调整识别策略。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>信号与噪声的核心原则在于理解信息的本质和价值判断标准。</p>
+      <ul>
+        <li><strong>预测价值原则：</strong>判断信息是否为信号的关键在于其是否具有预测价值，能否改变我们的预期。</li>
+        <li><strong>认知带宽守恒原则：</strong>认知带宽是有限的资源，应该优先分配给高价值的信号。</li>
+        <li><strong>时间检验原则：</strong>真正的信号经得起时间的检验，而噪声往往转瞬即逝。</li>
+        <li><strong>来源可靠性原则：</strong>信息来源的可靠性是判断其是否为信号的重要依据。</li>
+        <li><strong>上下文相关性原则：</strong>信息的价值取决于其与特定上下文的相关性，同样的信息在不同上下文中可能具有不同的价值。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>信号与噪声的概念适用于各种需要处理信息和做出决策的领域。</p>
+      <ul>
+        <li><strong>投资决策：</strong>在金融市场中，识别真正的市场信号，避免被短期噪声所误导。</li>
+        <li><strong>媒体消费：</strong>在海量媒体信息中，筛选出有价值的内容，避免信息过载。</li>
+        <li><strong>科学研究：</strong>在实验数据中，区分真正的科学发现与随机噪声。</li>
+        <li><strong>商业决策：</strong>在市场信息中，识别真正的商业机会和趋势。</li>
+        <li><strong>个人生活：</strong>在日常生活中，选择有价值的信息和活动，提高生活质量。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效提高信噪比的具体技巧。</p>
+      <ul>
+        <li><strong>时间过滤法：</strong>对于非紧急信息，延迟处理，让时间筛选出真正重要的信号。</li>
+        <li><strong>来源验证法：</strong>验证信息来源的可靠性，优先选择权威、专业的信息源。</li>
+        <li><strong>交叉验证法：</strong>通过多个独立来源验证信息的一致性，提高信息的可信度。</li>
+        <li><strong>预测检验法：</strong>评估信息对预测的影响，只有能改变预测的信息才是真正的信号。</li>
+        <li><strong>信息节食法：</strong>主动减少信息摄入，特别是低价值的信息，为高价值信号腾出认知空间。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际生活中提高信噪比，优化信息处理能力。</p>
+      <ul>
+        <li><strong>建立信息筛选机制：</strong>设计个人的信息筛选标准和流程，自动过滤低价值信息。</li>
+        <li><strong>培养深度阅读习惯：</strong>减少碎片化阅读，增加深度阅读，提高对复杂信号的理解能力。</li>
+        <li><strong>定期信息断舍离：</strong>定期清理信息源，取消关注低价值的渠道，保持信息环境的整洁。</li>
+        <li><strong>发展批判性思维：</strong>培养独立思考能力，不盲目接受信息，学会分析和判断。</li>
+        <li><strong>设置信息边界：</strong>为不同类型的信息设置处理时间和边界，避免信息过载。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>信号与噪声概念在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>投资决策：</strong>在股票市场中，关注公司的基本面和长期趋势（信号），忽略短期市场波动和情绪（噪声）。</li>
+        <li><strong>媒体消费：</strong>选择高质量的媒体源，如学术期刊、专业书籍等，减少对社交媒体和新闻头条的依赖。</li>
+        <li><strong>职业发展：</strong>关注行业的长期发展趋势和核心技能（信号），而非短期的热门话题和投机机会（噪声）。</li>
+        <li><strong>健康管理：</strong>关注科学的健康研究和个性化的健康数据（信号），避免被营销宣传和伪科学（噪声）所误导。</li>
+        <li><strong>个人学习：</strong>选择经典的、经过时间检验的学习材料（信号），避免追逐各种短期的学习潮流（噪声）。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>识别算法</h3>
