--- a/thinking-models/信息几何.html
+++ b/thinking-models/信息几何.html
@@ -77,8 +77,82 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>信息几何 (我nformation Geometry)</h1>
+    <h1>信息几何 (Information Geometry)</h1>
     <p>将概率论与微分几何结合。它告诉我们，从一种信念状态转换到另一种状态，其难度不取决于数值差异，而取决于“信息流形”上的曲率。有些观点的转变在物理上就是比另一些更费力。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>信息几何是一门交叉学科，它将微分几何的概念和方法应用于概率论和统计学，为理解信息和信念提供了新的视角。</p>
+      <ul>
+        <li><strong>概率分布的几何表示：</strong>信息几何将每个概率分布视为几何空间中的一个点，整个分布族形成一个流形。</li>
+        <li><strong>费希尔信息矩阵：</strong>作为流形上的度量张量，费希尔信息矩阵定义了概率分布之间的“距离”，反映了从一个分布到另一个分布的认知成本。</li>
+        <li><strong>流形曲率与认知难度：</strong>信息流形的曲率反映了概率分布之间的相互关系，曲率越大的区域，认知更新的难度越大。</li>
+        <li><strong>测地线与最优认知路径：</strong>在信息流形上，连接两个点的测地线代表了认知转变的最优路径，即能量损耗最低的路径。</li>
+        <li><strong>信息几何与贝叶斯推断：</strong>信息几何为贝叶斯推断提供了几何解释，贝叶斯更新可以看作是在信息流形上的移动。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>信息几何的核心原则在于理解信息和信念的几何性质。</p>
+      <ul>
+        <li><strong>几何表示原则：</strong>概率分布可以表示为几何空间中的点，分布族形成流形。</li>
+        <li><strong>距离度量原则：</strong>费希尔信息矩阵定义了概率分布之间的自然距离，反映认知转变的难度。</li>
+        <li><strong>曲率影响原则：</strong>信息流形的曲率影响认知更新的难度，曲率越大，认知转变越困难。</li>
+        <li><strong>最优路径原则：</strong>测地线代表认知转变的最优路径，能量损耗最低。</li>
+        <li><strong>不变性原则：</strong>信息几何中的许多概念和结果不依赖于具体的参数化方式，具有几何不变性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>信息几何适用于各种需要处理概率分布和信息的领域。</p>
+      <ul>
+        <li><strong>统计学：</strong>提供了参数估计、假设检验和模型选择的几何视角。</li>
+        <li><strong>机器学习：</strong>用于理解和改进各种学习算法，如EM算法、变分推断等。</li>
+        <li><strong>信号处理：</strong>在信号检测和估计中应用几何方法。</li>
+        <li><strong>神经网络：</strong>分析神经网络的几何结构和训练动态。</li>
+        <li><strong>认知科学：</strong>理解人类信念形成和更新的机制。</li>
+        <li><strong>经济学：</strong>分析市场信念和预期的形成与演变。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效应用信息几何概念的具体技巧。</p>
+      <ul>
+        <li><strong>几何视角分析：</strong>将概率分布和信息处理问题转化为几何问题，利用几何直观理解复杂现象。</li>
+        <li><strong>距离度量应用：</strong>使用费希尔信息矩阵或其他信息几何距离度量来量化概率分布之间的差异。</li>
+        <li><strong>最优路径寻找：</strong>在处理认知转变或信息更新时，寻找测地线作为最优路径，减少认知成本。</li>
+        <li><strong>曲率分析：</strong>分析信息流形的曲率，识别认知转变的困难区域，提前做好准备。</li>
+        <li><strong>不变性利用：</strong>利用信息几何中的不变性性质，简化问题分析，获得更一般的结果。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际应用中利用信息几何的概念和方法。</p>
+      <ul>
+        <li><strong>跨学科思维：</strong>培养跨学科思维，将几何、概率和信息理论结合起来分析问题。</li>
+        <li><strong>可视化工具：</strong>使用可视化工具将高维信息流形投影到低维空间，获得直观理解。</li>
+        <li><strong>数值计算：</strong>对于复杂问题，使用数值方法计算费希尔信息矩阵和测地线。</li>
+        <li><strong>渐进分析：</strong>利用信息几何中的渐进理论，分析大规模系统的行为。</li>
+        <li><strong>理论与实践结合：</strong>将信息几何的理论 insights 与具体应用场景结合，开发实用方法。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>信息几何概念在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>机器学习算法设计：</strong>利用信息几何设计更高效的学习算法，如基于自然梯度的优化方法，提高训练速度和模型性能。</li>
+        <li><strong>认知科学研究：</strong>应用信息几何分析人类信念更新的机制，理解认知偏差的几何根源，开发更有效的认知干预方法。</li>
+        <li><strong>金融市场分析：</strong>使用信息几何模型分析市场参与者的信念分布和共识形成过程，预测市场动态和极端事件。</li>
+        <li><strong>神经科学研究：</strong>将大脑的信息处理视为几何过程，分析神经元网络的信息几何结构，理解大脑的计算原理。</li>
+        <li><strong>通信系统设计：</strong>应用信息几何优化通信系统的编码和解码策略，提高信息传输效率和可靠性。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>认知的能量障碍</h3>
