--- a/thinking-models/元认知.html
+++ b/thinking-models/元认知.html
@@ -80,6 +80,79 @@
   <div class="text-content">
     <h1>元认知循环 (Metacognition)</h1>
     <p>人类智慧的皇冠。不仅是思考，而是“对思考的思考”。它像一个悬浮在头顶的监控摄像头，时刻校准你的决策偏差、情绪波动和效率质量。当你拥有元认知时，你不再是情绪的奴隶，而是心智的操盘手。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>元认知是指个体对自己的认知过程和结果的意识与监控，是人类认知能力的高级形式。</p>
+      <ul>
+        <li><strong>认知的认知：</strong>元认知是对认知过程本身的认知，包括对自己的思维、记忆、注意力等认知过程的监控和调节。</li>
+        <li><strong>元认知的层次结构：</strong>元认知包括元认知知识（关于认知的知识）、元认知体验（对认知过程的感受）和元认知监控（对认知过程的调节）三个层面。</li>
+        <li><strong>神经机制基础：</strong>元认知与前额叶皮层的功能密切相关，特别是背外侧前额叶皮层和前扣带回皮层，这些脑区负责自我监控和认知控制。</li>
+        <li><strong>发展阶段：</strong>元认知能力随着年龄的增长而发展，从儿童期的初步发展到青少年期的显著提高，再到成年期的成熟。</li>
+        <li><strong>个体差异：</strong>不同个体的元认知能力存在显著差异，这种差异影响学习效果、决策质量和情绪管理能力。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>元认知的核心原则在于理解和监控自己的认知过程。</p>
+      <ul>
+        <li><strong>自我觉察原则：</strong>元认知的基础是对自己认知过程的觉察，意识到“我在思考”。</li>
+        <li><strong>监控调节原则：</strong>元认知不仅是觉察，还包括对认知过程的监控和调节。</li>
+        <li><strong>目标导向原则：</strong>元认知是目标导向的，根据目标调整认知策略。</li>
+        <li><strong>反馈优化原则：</strong>元认知利用反馈信息不断优化认知过程和策略。</li>
+        <li><strong>适应性原则：</strong>元认知能够根据任务性质和环境变化调整认知策略，具有适应性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>元认知适用于各种需要认知参与的活动和领域。</p>
+      <ul>
+        <li><strong>学习教育：</strong>提高学习效率和学习质量，培养自主学习能力。</li>
+        <li><strong>问题解决：</strong>优化问题解决策略，提高决策质量。</li>
+        <li><strong>情绪管理：</strong>识别和调节情绪，提高情绪智商。</li>
+        <li><strong>职业生涯：</strong>职业规划和发展，提高工作效率和职业满意度。</li>
+        <li><strong>日常生活：</strong>改善人际关系，提高生活质量。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效培养和应用元认知能力的具体技巧。</p>
+      <ul>
+        <li><strong>自我提问技术：</strong>通过问自己问题来激活元认知，如“我现在在做什么？”“我为什么要这样做？”“有没有更好的方法？”</li>
+        <li><strong>认知日记：</strong>记录自己的思考过程和决策过程，分析其中的优势和不足。</li>
+        <li><strong>思维导图：</strong>使用思维导图来组织和监控自己的思维过程。</li>
+        <li><strong>反思练习：</strong>定期进行反思，回顾自己的认知过程和结果，总结经验教训。</li>
+        <li><strong>元认知策略训练：</strong>学习和练习各种元认知策略，如计划、监控、评估等。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在日常生活中培养和应用元认知能力。</p>
+      <ul>
+        <li><strong>从小事做起：</strong>从日常的小任务开始，有意识地监控和调节自己的认知过程。</li>
+        <li><strong>设定明确目标：</strong>为学习和工作设定明确的目标，根据目标调整认知策略。</li>
+        <li><strong>主动寻求反馈：</strong>从他人那里获取关于自己认知过程和结果的反馈，不断改进。</li>
+        <li><strong>培养耐心：</strong>元认知能力的培养需要时间和练习，保持耐心和坚持。</li>
+        <li><strong>多样化学习：</strong>通过多样化的学习活动来锻炼元认知能力，如阅读、写作、讨论等。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>元认知在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>学习场景：</strong>在学习过程中，使用元认知策略来监控自己的理解程度，调整学习方法。例如，在阅读时，定期问自己是否理解了内容，是否需要重新阅读或做笔记。</li>
+        <li><strong>考试场景：</strong>在考试过程中，使用元认知策略来管理时间和精力，调整答题策略。例如，在遇到难题时，评估自己的能力和时间，决定是继续尝试还是先跳过。</li>
+        <li><strong>工作场景：</strong>在工作中，使用元认知策略来规划任务，监控进度，评估结果。例如，在项目管理中，定期评估项目进展，调整工作计划和策略。</li>
+        <li><strong>人际关系场景：</strong>在人际交往中，使用元认知策略来监控自己的情绪和行为，理解他人的观点和感受。例如，在冲突中，意识到自己的情绪反应，调整沟通方式。</li>
+        <li><strong>健康管理场景：</strong>在健康管理中，使用元认知策略来监控自己的健康行为，调整生活方式。例如，在饮食管理中，意识到自己的饮食习惯，调整饮食选择。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>心智监控器</h3>
