--- a/thinking-models/公共契约.html
+++ b/thinking-models/公共契约.html
@@ -78,8 +78,81 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>公开承诺协议 (计划ublic Contract)</h1>
+    <h1>公共契约 (Public Contract)</h1>
     <p>人类是极度厌恶在群体中丧失声誉的生物。当你一个人在家无法管理自己时，通过公开承诺（如：发朋友圈挑战 30 天打卡）或设定违约惩罚（没完成给朋友发红包），你强行把“私人懒惰”变成了“公众挑战”。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>公共契约是一种利用社会监督和声誉机制来促进个人行为改变的策略。它基于人类对社会认可的需求和对声誉损失的恐惧。</p>
+      <ul>
+        <li><strong>社会认同理论：</strong>人类是社会性动物，渴望获得群体的认可和接纳，避免被排斥。</li>
+        <li><strong>承诺一致性原理：</strong>一旦个人公开做出承诺，就会产生一种内在的压力，促使其行为与承诺保持一致。</li>
+        <li><strong>损失厌恶：</strong>人们对损失的感受比对同等收益的感受更强烈，违约惩罚利用了这种心理。</li>
+        <li><strong>问责机制：</strong>公开承诺引入了外部问责机制，弥补了自我管理的不足。</li>
+        <li><strong>群体规范的影响：</strong>在群体中，个人行为会受到群体规范的影响，趋向于符合群体的期望。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>公共契约的核心原则在于理解和利用社会因素对个人行为的影响。</p>
+      <ul>
+        <li><strong>公开性原则：</strong>承诺必须公开，才能引入社会监督和声誉机制。</li>
+        <li><strong>明确性原则：</strong>承诺的内容和违约惩罚必须明确具体，避免模糊不清。</li>
+        <li><strong>可执行性原则：</strong>承诺必须是可执行的，目标要合理，避免设定无法实现的目标。</li>
+        <li><strong>问责性原则：</strong>必须有有效的问责机制，确保违约惩罚能够执行。</li>
+        <li><strong>持续性原则：</strong>公共契约需要持续的社会互动和反馈，才能维持其效果。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>公共契约适用于各种需要个人行为改变和自我管理的场景。</p>
+      <ul>
+        <li><strong>个人发展：</strong>如学习、健身、写作等需要长期坚持的个人目标。</li>
+        <li><strong>职业发展：</strong>如项目管理、技能提升、工作习惯改善等。</li>
+        <li><strong>健康管理：</strong>如减肥、戒烟、规律作息等健康相关目标。</li>
+        <li><strong>团队建设：</strong>如团队目标设定、团队承诺、团队协作等。</li>
+        <li><strong>社区建设：</strong>如社区规则制定、社区活动组织、社区公共事务管理等。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>有效设计和执行公共契约的具体技巧。</p>
+      <ul>
+        <li><strong>选择合适的平台：</strong>根据目标和受众选择合适的公开平台，如社交媒体、专业社区、朋友圈等。</li>
+        <li><strong>设定明确的目标：</strong>使用SMART原则（具体、可衡量、可实现、相关、有时限）设定目标。</li>
+        <li><strong>设计合理的惩罚：</strong>惩罚要足够有威慑力，但又不能过于严重以至于让人望而却步。</li>
+        <li><strong>建立问责伙伴：</strong>找一个可靠的朋友或伙伴来监督你的执行情况。</li>
+        <li><strong>定期更新进度：</strong>定期在公开平台更新你的进度，保持社会监督的连续性。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>如何在实际生活中有效运用公共契约策略。</p>
+      <ul>
+        <li><strong>从简单开始：</strong>刚开始时，选择相对简单的目标和较短的时间周期，建立信心。</li>
+        <li><strong>逐步增加难度：</strong>随着执行能力的提高，逐步增加目标的难度和时间周期。</li>
+        <li><strong>寻找志同道合的群体：</strong>加入或创建有共同目标的群体，互相监督和支持。</li>
+        <li><strong>记录和反思：</strong>记录你的执行过程和感受，定期反思和调整策略。</li>
+        <li><strong>庆祝成功：</strong>当你完成目标时，在公开平台庆祝你的成功，强化积极行为。</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>公共契约在不同场景中的具体应用案例。</p>
+      <ul>
+        <li><strong>学习打卡：</strong>在社交媒体上每天打卡学习进度，如背单词、阅读、编程练习等。可以邀请朋友监督，设定未完成的惩罚措施。</li>
+        <li><strong>健身挑战：</strong>发起或参与健身挑战，如30天健身计划，每天在朋友圈或健身群分享运动成果。</li>
+        <li><strong>写作计划：</strong>公开承诺每天或每周写一定数量的文章或字数，如公众号更新、小说创作等。</li>
+        <li><strong>项目管理：</strong>在团队中公开承诺项目里程碑和交付时间，接受团队成员的监督。</li>
+        <li><strong>健康习惯：</strong>如戒烟、戒酒、规律作息等，通过公开承诺和朋友监督来改变不良习惯。</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>压力转化</h3>
@@ -91,7 +164,7 @@
       <div>
         <h3>实战模型</h3>
         <ul>
-          <li><strong>日历打卡法：</strong>在项目群每天贴出完成截图。这种“被看见”的感觉是维持D力复利最廉价的催化剂。</li>
+          <li><strong>日历打卡法：</strong>在项目群每天贴出完成截图。这种“被看见”的感觉是维持动力复利最廉价的催化剂。</li>
           <li><strong>公开进化史：</strong>在小红书开一个号专门记录“失败”和“死磕过程”。因为有人在看，你不敢轻易断更。</li>
         </ul>
       </div>
