--- a/thinking-models/复杂性偏见.html
+++ b/thinking-models/复杂性偏见.html
@@ -261,7 +261,14 @@
 
     <div class="text-content">
       <h1>复杂性偏见 (Complexity Bias)</h1>
-      <p>人类倾向于相信复杂的解释或方案，而认为简单的方案“没水平”。在不确定的世界里，复杂性被大脑误读为“深度”与“权威”。</p>
+      <p>人类倾向于相信复杂的解释或方案，而认为简单的方案"没水平"。在不确定的世界里，复杂性被大脑误读为"深度"与"权威"。</p>
+      
+      <h2>深度分析</h2>
+      <p>复杂性偏见是人类认知中的一种普遍倾向，指的是人们往往会认为复杂的解释或方案比简单的更可信、更有价值。这种偏见源于人类对不确定性的厌恶，以及对专业知识和权威的崇拜。</p>
+      <p>从进化心理学角度看，复杂性偏见可能源于人类对专家的依赖。在原始社会中，拥有复杂知识和技能的人（如巫师、猎人领袖）往往能为群体带来生存优势，因此人们逐渐形成了对复杂性和专业知识的崇拜。</p>
+      <p>从认知心理学角度看，复杂性偏见与"认知捷径"有关。大脑为了节省认知资源，会使用简化的判断规则，将复杂性与专业性、权威性关联起来。这种关联在大多数情况下是有效的，但在某些情况下会导致错误的判断。</p>
+      <p>从社会心理学角度看，复杂性偏见与社会认同有关。使用复杂术语和概念被视为一种社会地位的象征，能获得群体的认同和尊重。这种社会奖励机制进一步强化了复杂性偏见。</p>
+      <p>此外，复杂性偏见还与自我保护机制有关。复杂的计划或解释失败时，更容易找到借口和替罪羊，而简单的计划失败则无法遁形。这种自我保护的需求也会促使人们倾向于选择复杂的方案。</p>
       
       <div class="grid">
         <div>
