--- a/thinking-models/巴菲特525法则.html
+++ b/thinking-models/巴菲特525法则.html
@@ -292,10 +292,12 @@
     <!-- 模型内容区域 -->
     <div class="model-content">
       <h1>巴菲特 5/25 法则</h1>
-      <p>列出 25 个目标，圈出最重要的 5 个。剩下的 20 个不是“有空再做”，而是“绝对不能碰”。因为它们具有足够的诱惑力来分散你的核心精力，却无法带给你真正的卓越。</p>
+      <p>列出 25 个目标，圈出最重要的 5 个。剩下的 20 个不是"有空再做"，而是"绝对不能碰"。因为它们具有足够的诱惑力来分散你的核心精力，却无法带给你真正的卓越。</p>
 
-      <h2>核心概念</h2>
-      <p>巴菲特 5/25 法则是一种时间管理和目标设定的策略，由投资大师沃伦·巴菲特提出。它的核心思想是通过极端的专注来实现真正的卓越。这个法则要求我们将注意力集中在最重要的少数目标上，而不是分散在多个次要目标上。</p>
+      <h2>深度分析</h2>
+      <p>巴菲特 5/25 法则的本质是一种优先级管理策略，它基于帕累托原理（80/20法则）的延伸。帕累托原理指出，80%的结果来自20%的原因，而巴菲特 5/25 法则则更进一步，将注意力集中在最核心的5%目标上，以获得最大的价值。</p>
+      <p>从心理学角度看，这个法则利用了人类认知的局限性。研究表明，人类的注意力和意志力是有限的资源，分散在多个目标上会导致每一个目标都无法得到充分的关注。通过限制目标数量，我们可以将有限的认知资源集中在最有价值的任务上，提高成功率。</p>
+      <p>在决策理论中，巴菲特 5/25 法则体现了"机会成本"的概念。每选择一个目标，就意味着放弃了其他可能的机会。通过明确区分最重要的5个目标和其余20个目标，我们可以更清晰地认识到机会成本，避免被"次优"选择所迷惑。</p>
 
       <h2>核心原则</h2>
       <ul>
@@ -305,41 +307,40 @@
         <li><strong>资源优化：</strong>将时间、精力和资源集中在最能产生价值的领域。</li>
       </ul>
 
-      <h2>应用范围</h2>
+      <h2>适用范围</h2>
       <ul>
         <li><strong>个人发展：</strong>职业规划、学习计划、个人目标设定。</li>
         <li><strong>企业管理：</strong>战略规划、项目优先级排序、资源分配。</li>
         <li><strong>投资决策：</strong>投资组合构建、资产配置。</li>
         <li><strong>时间管理：</strong>日常任务优先级排序、日程安排。</li>
+        <li><strong>产品开发：</strong>功能优先级排序、产品路线图规划。</li>
       </ul>
 
-      <h2>使用方法</h2>
-      <h3>平庸的陷阱</h3>
+      <h2>使用技巧</h2>
       <ul>
-        <li><strong>二等目标的破坏性：</strong>真正的阻碍不是那些显而易见的烂事，而是那些“次优”的选择。它们像寄生虫一样吸干了你冲刺巅峰所需的最后 5% 能量。</li>
-        <li><strong>专注的残酷：</strong>专注不是对烂点子说不，而是对那个“非常迷人但不在核心”的好点子冷酷拒绝。</li>
-      </ul>
-
-      <h3>操作指南</h3>
-      <ul>
-        <li><strong>无情剪枝：</strong>当你发现自己正在忙于第 6-10 件事时，意识到你正在自杀式地稀释你的核心价值。</li>
-        <li><strong>边界防御：</strong>将那 5 件事贴在桌面上，把那 20 件事关进禁闭室。直到前 5 项达成，绝不开启新战场。</li>
+        <li><strong>目标筛选：</strong>首先列出所有可能的目标，然后通过多轮筛选，最终确定最重要的5个。</li>
+        <li><strong>明确标准：</strong>建立明确的评估标准，如影响力、可行性、与长期目标的一致性等，来判断目标的重要性。</li>
+        <li><strong>可视化管理：</strong>将Top 5目标放在显眼的位置，如桌面、手机壁纸等，作为日常提醒。</li>
+        <li><strong>边界设定：</strong>为Top 5目标设定明确的时间和资源边界，确保它们得到充分的关注。</li>
+        <li><strong>定期回顾：</strong>每季度或每半年重新评估目标清单，确保它反映当前的优先级变化。</li>
       </ul>
 
       <h2>实践建议</h2>
       <ul>
-        <li><strong>定期回顾：</strong>每季度或每半年重新评估你的 5/25 清单，确保它反映了你当前的优先级。</li>
-        <li><strong>可视化提醒：</strong>将你的 Top 5 目标放在显眼的位置，如桌面、手机壁纸等。</li>
-        <li><strong>学会说不：</strong>当新的机会出现时，先评估它是否会干扰你的 Top 5 目标。</li>
-        <li><strong>专注执行：</strong>为每个 Top 5 目标制定详细的执行计划，并确保每天都有时间投入。</li>
-        <li><strong>衡量进展：</strong>为每个 Top 5 目标设定明确的衡量标准，定期检查进展情况。</li>
+        <li><strong>分步实施：</strong>先尝试在一个领域应用该法则，如职业发展，然后再扩展到其他领域。</li>
+        <li><strong>从小做起：</strong>如果一开始难以确定25个目标，可以先从10个目标开始，逐步扩展。</li>
+        <li><strong>寻求反馈：</strong>与导师、同事或朋友分享你的目标清单，获取他们的反馈和建议。</li>
+        <li><strong>保持灵活性：</strong>虽然要专注于Top 5目标，但也要保持一定的灵活性，以应对突发事件。</li>
+        <li><strong>庆祝进展：</strong>当实现Top 5目标中的一个时，庆祝成功，然后更新目标清单。</li>
       </ul>
 
-      <h2>案例分析</h2>
+      <h2>应用场景</h2>
       <ul>
-        <li><strong>巴菲特的投资策略：</strong>巴菲特只投资于他真正了解的少数公司，而不是分散投资于大量股票。</li>
-        <li><strong>苹果公司：</strong>在史蒂夫·乔布斯的领导下，苹果专注于少数几款产品，如iPhone和Mac，而不是分散精力于多个产品线。</li>
-        <li><strong>个人成功案例：</strong>许多成功人士通过专注于少数核心技能或领域，而非尝试掌握所有技能，实现了卓越。</li>
+        <li><strong>职业规划：</strong>确定5个最重要的职业发展目标，如获得特定证书、提升领导能力、建立专业网络等，忽略其他次要目标。</li>
+        <li><strong>企业战略：</strong>企业领导者确定5个最重要的战略目标，如市场扩张、产品创新、成本优化等，将资源集中在这些领域。</li>
+        <li><strong>投资决策：</strong>投资者确定5个最有潜力的投资机会，集中资金进行投资，而不是分散投资于多个项目。</li>
+        <li><strong>学习计划：</strong>学生或职场人士确定5个最重要的学习目标，如掌握特定技能、学习新语言、获取专业知识等，集中时间进行学习。</li>
+        <li><strong>产品开发：</strong>产品团队确定5个最重要的功能或改进点，集中资源进行开发，而不是尝试同时实现所有可能的功能。</li>
       </ul>
 
       <h2>总结</h2>
