--- a/thinking-models/狄德罗效应.html
+++ b/thinking-models/狄德罗效应.html
@@ -249,6 +249,14 @@ li strong {
       <p>这种效应源于人类对和谐与一致性的追求，以及对社会地位和身份认同的渴望。它揭示了消费行为背后的心理机制，提醒我们警惕无意识的消费冲动。</p>
     </div>
     
+    <div class="in-depth-analysis">
+      <h3>深度分析</h3>
+      <p>从心理学角度看，狄德罗效应源于人类对认知一致性的需求。大脑倾向于保持内部和外部环境的一致性，当新物品打破这种一致性时，会产生心理不适，促使人们通过购买更多物品来恢复平衡。</p>
+      <p>从社会学角度分析，狄德罗效应与社会比较和身份认同密切相关。人们通过消费行为构建和展示自己的社会身份，新物品的引入会触发与他人的比较，进而引发更多的消费行为。</p>
+      <p>从经济学角度看，狄德罗效应挑战了传统经济学中的理性消费假设。它表明，消费行为不仅受到价格和效用的影响，还受到心理和社会因素的驱动。</p>
+      <p>从神经科学角度研究发现，狄德罗效应与大脑中的奖励系统有关。购买新物品会激活大脑的奖励中心，释放多巴胺，这种愉悦感会强化消费行为，形成循环。</p>
+    </div>
+    
     <div class="core-principles">
       <h3>核心原理</h3>
       <ul>
