--- a/thinking-models/确认偏误.html
+++ b/thinking-models/确认偏误.html
@@ -263,6 +263,13 @@
         <h3>模型描述</h3>
         <p>确认偏误是一种认知偏差，指人们倾向于寻找、解释、关注和记忆那些能够证实自己已有信念或假设的信息，而忽视或贬低那些与自己信念相矛盾的信息。这种偏差是人类思维中的一种普遍现象，影响着我们的决策、判断和问题解决过程。</p>
         
+        <h3>深度分析</h3>
+        <p>从心理学角度看，确认偏误源于人类对认知一致性的需求。大脑倾向于保持现有的信念和态度，因为改变信念需要消耗大量认知资源，会导致认知失调带来的心理不适。</p>
+        <p>从神经科学角度分析，确认偏误与大脑的奖励系统有关。当我们遇到支持自己信念的信息时，大脑会释放多巴胺，带来愉悦感；而遇到相反信息时，则会激活杏仁核，产生威胁感。</p>
+        <p>从信息处理角度看，确认偏误是一种认知捷径。在信息过载的环境中，大脑通过过滤掉与现有信念不符的信息，减少认知负荷，提高信息处理效率。</p>
+        <p>从进化心理学角度看，确认偏误可能具有适应性。在原始环境中，快速做出判断并保持信念的一致性，有助于个体快速应对威胁，提高生存几率。</p>
+        <p>从社会心理学角度看，确认偏误与群体认同有关。人们往往通过保持与群体一致的信念，获得群体归属感和社会认可，进一步强化了确认偏误。</p>
+        
         <h3>核心原则</h3>
         <ul>
           <li><strong>选择性信息处理：</strong>人们会无意识地过滤掉与自己信念不符的信息，只保留支持性证据。</li>
