--- a/thinking-models/禀赋效应.html
+++ b/thinking-models/禀赋效应.html
@@ -257,6 +257,14 @@
         <p>禀赋效应揭示了人类决策中的非理性因素，解释了为什么人们往往不愿意放弃自己已经拥有的东西，即使面对更有价值的替代选项。</p>
       </div>
       
+      <div class="in-depth-analysis">
+        <h3>深度分析</h3>
+        <p>从神经科学角度看，禀赋效应与大脑中的损失厌恶机制密切相关。研究表明，大脑对损失的反应比获得更强烈，这是人类在进化过程中形成的自我保护机制。</p>
+        <p>从心理学角度分析，禀赋效应源于所有权带来的身份认同和情感连接。当我们拥有某物品时，它会成为我们自我概念的一部分，放弃它就像放弃自我的一部分。</p>
+        <p>从经济学角度看，禀赋效应挑战了传统经济学中的理性人假设。它表明，人们的决策不仅基于客观价值，还受到主观情感因素的影响。</p>
+        <p>从社会文化角度分析，禀赋效应在不同文化中表现程度不同，反映了文化对个人所有权观念的影响。</p>
+      </div>
+      
       <div class="core-principles">
         <h3>核心原理</h3>
         <ul>
