--- a/thinking-models/螃蟹效应.html
+++ b/thinking-models/螃蟹效应.html
@@ -245,6 +245,15 @@
         <p>螃蟹效应（Crab Mentality）是指当一只螃蟹试图从桶中爬出来时，其他螃蟹会拉扯它的腿，把它拉回桶里，最终没有一只螃蟹能够成功逃脱的现象。这种现象在人类社会中也很常见，特别是在组织和团队中。</p>
       </div>
       
+      <!-- 深度分析 -->
+      <div class="in-depth-analysis">
+        <h3>深度分析</h3>
+        <p>从心理学角度看，螃蟹效应源于人类的嫉妒心理和自我保护机制。当个体感到自己的地位或资源受到威胁时，会产生防御性反应，通过拉低他人来维持自己的相对优势。</p>
+        <p>从社会学角度分析，螃蟹效应与群体规范和社会比较密切相关。在资源有限的环境中，群体可能形成一种隐性的“平等”规范，排斥任何试图脱颖而出的个体。</p>
+        <p>从组织行为学角度看，螃蟹效应是组织文化的产物。当组织缺乏明确的价值观和激励机制时，容易滋生这种负面的竞争文化。</p>
+        <p>从进化心理学角度看，螃蟹效应可能源于人类原始的生存竞争本能。在资源稀缺的环境中，个体的生存依赖于群体的相对平衡，任何打破平衡的行为都可能被视为威胁。</p>
+      </div>
+      
       <!-- 核心原理 -->
       <div class="core-principles">
         <h3>核心原理</h3>
