--- a/thinking-models/青蛙 eater.html
+++ b/thinking-models/青蛙 eater.html
@@ -275,6 +275,13 @@
         <p>通过在意志力最充沛的早晨处理最难的任务，你可以减少拖延带来的焦虑，提高整体工作效率，并获得成就感，为一天的工作奠定积极的基调。</p>
       </div>
       
+      <div class="in-depth-analysis">
+        <h3>深度分析</h3>
+        <p>从心理学角度看，"吃掉那只青蛙"策略利用了人类意志力的时间分布规律。研究表明，人类的意志力在早晨最为充沛，随着一天的进行而逐渐消耗。因此，在意志力巅峰时期处理最具挑战性的任务，能够最大化任务完成的质量和效率。</p>
+        <p>从时间管理理论来看，这一策略与艾森豪威尔矩阵中的"重要且紧急"任务处理原则高度一致。通过优先处理最重要的任务，减少了因拖延而产生的紧急情况，从而形成良性循环。</p>
+        <p>从行为经济学角度分析，"吃掉那只青蛙"策略利用了损失厌恶和即时满足的心理机制。完成困难任务后获得的成就感和心理释放，会强化这一行为模式，形成习惯。</p>
+      </div>
+      
       <div class="core-principles">
         <h3>核心原理</h3>
         <ul>
