--- a/thinking-models/GPU执行.html
+++ b/thinking-models/GPU执行.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>显卡级D力</title><style>
+  <title>GPU执行模型</title><style>
 /* 拟态设计 - 白色主题（默认） */
 :root {
   --bg: #e0e5ec;
@@ -50,11 +49,11 @@
   <div class="neu-card">
     <svg viewBox="0 0 1000 650">
       <g transform="translate(500, 325)">
-        <!-- C计划U: 认知逻辑 (处理速度慢、单线程) -->
+        <!-- CPU: 认知逻辑 (处理速度慢、单线程) -->
         <g transform="translate(-300, 0)">
           <rect x="-60" y="-60" width="120" height="120" rx="10" fill="#1e293b" opacity="0.1" stroke="#1e293b" stroke-width="2" />
           <path d="M-30,-30 L30,30 M30,-30 L-30,30" stroke="#1e293b" stroke-width="2" opacity="0.5" />
-          <text y="100" text-anchor="middle" fill="#1e293b" style="font-size: 24px; font-weight: 900;">C计划U (思考)</text>
+          <text y="100" text-anchor="middle" fill="#1e293b" style="font-size: 24px; font-weight: 900;">CPU (思考)</text>
           <text y="130" text-anchor="middle" fill="#64748b" opacity="0.5" style="font-size: 10px;">高逻辑、低吞吐</text>
         </g>
         
@@ -65,7 +64,7 @@
           </line>
         </g>
 
-        <!-- G计划U: D渲染 (海量并行、极速产出) -->
+        <!-- GPU: 执行渲染 (海量并行、极速产出) -->
         <g transform="translate(250, 0)">
           <rect x="-120" y="-120" width="240" height="240" rx="20" fill="#ef4444" fill-opacity="0.1" stroke="#ef4444" stroke-width="4" />
           <g fill="#ef4444">
@@ -76,8 +75,8 @@
             <circle cx="0" cy="50" r="10" class="animate-pulse" style="animation-delay: 0.8s" />
             <circle cx="50" cy="50" r="10" class="animate-pulse" style="animation-delay: 1s" />
           </g>
-          <text y="160" text-anchor="middle" fill="#ef4444" style="font-size: 32px; font-weight: 900;">G计划U (D端)</text>
-          <text y="190" text-anchor="middle" fill="#ef4444" style="font-size: 14px; font-weight: 900;">暴力产出、无脑渲染</text>
+          <text y="160" text-anchor="middle" fill="#ef4444" style="font-size: 32px; font-weight: 900;">GPU (执行端)</text>
+          <text y="190" text-anchor="middle" fill="#ef4444" style="font-size: 14px; font-weight: 900;">并行处理、高效执行</text>
         </g>
 
         <text y="-250" text-anchor="middle" fill="#ef4444" style="font-size: 32px; font-weight: 900; letter-spacing: 0.1em;">插好你的显卡：别让认知在脑内空转</text>
@@ -88,20 +87,82 @@
     </svg>
   </div>
   <div class="text-content">
-    <h1>显卡级D力 (Execution Throughput)</h1>
-    <p>你的大脑是一台顶级服务器，但如果你不把认知（C计划U 指令）转化为产出（G计划U 渲染），系统就会因为过热而降频。所谓的D力，就是物理层面的数据吞吐量。停止优化算法，开始跑渲染任务。</p>
+    <h1>GPU执行模型 (Execution Throughput)</h1>
+    <p>你的大脑是一台顶级服务器，但如果你不把认知（CPU 指令）转化为产出（GPU 渲染），系统就会因为过热而降频。所谓的执行力，就是物理层面的数据吞吐量。停止优化算法，开始跑渲染任务。</p>
+
+    <div class="section">
+      <h2>深度分析</h2>
+      <p>GPU执行模型将大脑的认知过程类比为计算机的CPU和GPU分工，强调将思考转化为实际产出的重要性。</p>
+      <ul>
+        <li>关键要素1：认知处理 (CPU) - 负责逻辑思考和规划</li>
+        <li>关键要素2：执行产出 (GPU) - 负责将想法转化为实际成果</li>
+        <li>关键要素3：传输瓶颈 - 认知到执行的转化效率</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>核心原则</h2>
+      <p>GPU执行模型的核心原则基于认知科学和生产力理论。</p>
+      <ul>
+        <li><strong>原则1：</strong>产出优先于完美 - 完成比完美更重要</li>
+        <li><strong>原则2：</strong>批量处理 - 集中时间进行机械式产出</li>
+        <li><strong>原则3：</strong>物理证据 - 只有实际产出才是真实的成果</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>适用范围</h2>
+      <p>GPU执行模型适用于需要将创意和思考转化为实际成果的场景。</p>
+      <ul>
+        <li>内容创作 - 写作、视频制作、设计等</li>
+        <li>项目执行 - 软件开发、产品设计、市场营销</li>
+        <li>学习实践 - 将理论知识转化为实际技能</li>
+        <li>个人成长 - 习惯养成、目标实现</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>使用技巧</h2>
+      <p>如何应用GPU执行模型思维提高生产力。</p>
+      <ul>
+        <li><strong>技巧1：</strong>时间分离 - 将思考时间和执行时间完全分开</li>
+        <li><strong>技巧2：</strong>饱和式执行 - 设定固定的“GPU时间”进行高强度产出</li>
+        <li><strong>技巧3：</strong>结果量化 - 用具体的产出数量衡量生产力</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>实践建议</h2>
+      <p>在实际工作和生活中应用GPU执行模型。</p>
+      <ul>
+        <li><strong>建议1：</strong>建立产出仪式 - 创造固定的环境和流程启动GPU模式</li>
+        <li><strong>建议2：</strong>减少认知负荷 - 在执行时消除所有干扰和决策</li>
+        <li><strong>建议3：</strong>积累成果库 - 建立个人作品集合，展示持续产出</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>应用场景</h2>
+      <p>GPU执行模型在不同领域的具体应用。</p>
+      <ul>
+        <li><strong>案例1：</strong>内容创作者 - 设定每天固定的创作时间，专注产出而不是过度策划</li>
+        <li><strong>案例2：</strong>软件开发者 - 采用时间盒技术，在固定时间内专注编码实现</li>
+        <li><strong>案例3：</strong>学生学习 - 将理论学习和实践练习分开，确保有足够的时间进行实际操作</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div>
         <h3>病理分析</h3>
         <ul>
-          <li><strong>算力浪费：</strong>你研究了 10 个视频剪辑教程（C计划U 高负载），但 1 秒钟都没剪（G计划U 零负载）。系统由于“空转”而产生了巨大的焦虑热量。</li>
-          <li><strong>解耦逻辑：</strong>要把“想什么”和“做什么”彻底分开。D时不需要智商，只需要稳定的帧率输出。</li>
+          <li><strong>算力浪费：</strong>你研究了 10 个视频剪辑教程（CPU 高负载），但 1 秒钟都没剪（GPU 零负载）。系统由于“空转”而产生了巨大的焦虑热量。</li>
+          <li><strong>解耦逻辑：</strong>要把“想什么”和“做什么”彻底分开。执行时不需要智商，只需要稳定的帧率输出。</li>
         </ul>
       </div>
       <div>
         <h3>物理补丁</h3>
         <ul>
-          <li><strong>饱和式产出：</strong>每天强行规定 4 小时的“G计划U 时间”。在这个时间段内，禁止进行逻辑思考，只准进行机械化的产出（录音、剪辑、发帖）。</li>
+          <li><strong>饱和式产出：</strong>每天强行规定 4 小时的“GPU 时间”。在这个时间段内，禁止进行逻辑思考，只准进行机械化的产出（录音、剪辑、发帖）。</li>
           <li><strong>结果指纹：</strong>只有在硬盘上留下的字节，才是真实资产。脑子里的想法全是系统负债。</li>
         </ul>
       </div>
