--- a/thinking-models/布朗搜索.html
+++ b/thinking-models/布朗搜索.html
@@ -307,8 +307,10 @@
       <h1>布朗运动搜索 (Brownian Search)</h1>
       <p>统计物理证明：在广阔且资源分布不均的未知空间中，纯粹随机的布朗运动往往比有明确目标但信息错误的搜索更具鲁棒性。随机性提供了打破局部最优陷阱的必要动力。</p>
 
-      <h2>核心概念</h2>
-      <p>布朗运动搜索是一种基于随机游走的搜索策略，灵感来源于物理学中的布朗运动现象。它通过随机改变搜索方向和步长，在未知或复杂的搜索空间中寻找目标。这种方法特别适用于资源分布不均、目标位置不确定的场景。</p>
+      <h2>深度分析</h2>
+      <p>布朗运动搜索的理论基础源于物理学中的布朗运动现象，即微小粒子在流体中受到分子碰撞而产生的随机运动。在搜索理论中，这种随机策略具有独特的优势：它不需要对搜索空间有先验知识，能够适应未知环境的变化，并且在理论上可以遍历整个搜索空间。</p>
+      <p>从数学角度看，布朗运动是一种马尔可夫过程，具有无记忆性和连续性。这意味着每一步的搜索方向只与当前状态有关，与过去的路径无关，这种特性使得搜索过程不会被历史路径所限制，更容易跳出局部最优解的陷阱。</p>
+      <p>在复杂系统理论中，布朗运动搜索体现了“混沌边缘”的概念——适当的随机性可以使系统在秩序和混沌之间保持平衡，既不会过于僵化，也不会过于混乱。这种平衡状态正是创新和适应的最佳区域。</p>
 
       <h2>核心原则</h2>
       <ul>
@@ -318,43 +320,41 @@
         <li><strong>鲁棒性：</strong>对搜索空间的变化和不确定性具有较强的抵抗能力。</li>
       </ul>
 
-      <h2>应用范围</h2>
+      <h2>适用范围</h2>
       <ul>
         <li><strong>科学研究：</strong>在未知领域的探索和发现。</li>
         <li><strong>创新管理：</strong>鼓励员工进行无目的的探索，激发创新。</li>
         <li><strong>人工智能：</strong>强化学习中的探索策略，如ε-贪婪算法。</li>
         <li><strong>市场调研：</strong>在未知市场中寻找机会。</li>
         <li><strong>个人发展：</strong>通过广泛涉猎不同领域，发现新的兴趣和机会。</li>
+        <li><strong>问题解决：</strong>在复杂问题中寻找创新解决方案。</li>
       </ul>
 
-      <h2>使用方法</h2>
-      <h3>混乱的功用</h3>
+      <h2>使用技巧</h2>
       <ul>
-        <li><strong>避免锁定：</strong>过度精确的计划会将你锁死在一个狭窄的逻辑走廊里。布朗运动式的“闲逛”能让你意外撞见那些原本处于视阈之外的跨界机会。</li>
-        <li><strong>零成本探索：</strong>在信息极度匮乏时，不带偏见的随机尝试是成本最低的信息采集方式。</li>
-      </ul>
-
-      <h3>创新管理</h3>
-      <ul>
-        <li><strong>Google 的 20% 时间：</strong>这就是组织内部的布朗运动。允许员工进行无目的的探索，是为了防止组织在过于高效的“主干道”上逐渐僵死。</li>
-        <li><strong>增加碰撞率：</strong>通过开放式的办公环境或随机的咖啡对话，人为增加思想的布朗运动，从而催化出非线性创新的火花。</li>
+        <li><strong>平衡探索与利用：</strong>根据环境的不确定性程度，调整探索（随机搜索）和利用（基于已有信息搜索）的比例。</li>
+        <li><strong>控制搜索步长：</strong>在不同的搜索阶段，调整随机搜索的步长，初期可以较大，接近目标时可以较小。</li>
+        <li><strong>结合启发式信息：</strong>在完全随机和完全确定之间找到平衡点，利用有限的先验信息指导搜索方向。</li>
+        <li><strong>建立反馈机制：</strong>及时评估搜索结果，调整搜索策略。</li>
+        <li><strong>创造碰撞机会：</strong>在组织环境中，通过设计物理空间和社交活动，增加思想的随机碰撞。</li>
       </ul>
 
       <h2>实践建议</h2>
       <ul>
-        <li><strong>平衡探索与利用：</strong>在保持核心业务稳定的同时，预留一定资源用于随机探索。</li>
-        <li><strong>创造偶遇机会：</strong>设计物理空间和虚拟平台，促进不同背景人员的随机交流。</li>
-        <li><strong>鼓励跨界学习：</strong>支持员工学习与本职工作无关的知识和技能。</li>
-        <li><strong>容忍失败：</strong>将探索过程中的失败视为学习机会，而非惩罚对象。</li>
-        <li><strong>建立反馈机制：</strong>及时捕捉和评估随机探索中发现的有价值信息。</li>
+        <li><strong>预留探索时间：</strong>个人和组织都应该预留一定的时间用于无目的的探索和学习。</li>
+        <li><strong>设计偶遇空间：</strong>创造开放式的办公环境和社交平台，促进不同背景人员的随机交流。</li>
+        <li><strong>鼓励跨界合作：</strong>支持不同领域的人员合作，激发跨学科创新。</li>
+        <li><strong>容忍失败：</strong>将探索过程中的失败视为学习机会，建立容错文化。</li>
+        <li><strong>捕捉意外发现：</strong>建立机制，及时捕捉和评估随机探索中发现的有价值信息。</li>
       </ul>
 
-      <h2>案例分析</h2>
+      <h2>应用场景</h2>
       <ul>
-        <li><strong>Google 的 20% 时间：</strong>允许工程师将20%的工作时间用于个人感兴趣的项目，诞生了Gmail、AdSense等重要产品。</li>
-        <li><strong>3M 的创新文化：</strong>鼓励员工进行“实验时间”，发明了便利贴等畅销产品。</li>
-        <li><strong>科学发现：</strong>许多重要的科学发现，如青霉素的发现，都源于意外的观察和随机的探索。</li>
-        <li><strong>创业机会：</strong>许多成功的创业公司是在创始人探索不同领域时发现的市场缺口。</li>
+        <li><strong>组织创新：</strong>如Google的20%时间政策，允许员工将部分工作时间用于个人感兴趣的项目。</li>
+        <li><strong>产品开发：</strong>在产品设计的初期阶段，通过头脑风暴和随机探索，寻找创新的设计方向。</li>
+        <li><strong>科学研究：</strong>在基础研究中，通过广泛的实验和观察，发现意外的科学现象。</li>
+        <li><strong>创业探索：</strong>在创业初期，通过测试不同的商业模式和市场定位，寻找最佳的商业机会。</li>
+        <li><strong>个人成长：</strong>通过广泛阅读、学习不同领域的知识和技能，发现新的职业方向和兴趣爱好。</li>
       </ul>
 
       <h2>总结</h2>
