--- a/thinking-models/布鲁克斯法则.html
+++ b/thinking-models/布鲁克斯法则.html
@@ -325,10 +325,12 @@
     <!-- 模型内容区域 -->
     <div class="model-content">
       <h1>布鲁克斯法则 (Brooks's Law)</h1>
-      <p>“向进度落后的软件项目增加人手，只会使进度更加落后。” 这是软件工程史上的第一铁律，揭示了沟通成本的非线性爆炸。</p>
+      <p>"向进度落后的软件项目增加人手，只会使进度更加落后。" 这是软件工程史上的第一铁律，揭示了沟通成本的非线性爆炸。</p>
 
-      <h2>核心概念</h2>
+      <h2>深度分析</h2>
       <p>布鲁克斯法则由弗雷德里克·布鲁克斯在其经典著作《人月神话》中提出，它指出在项目进度落后的情况下，简单地增加人手不仅不能加快进度，反而会导致进度更加落后。这一法则的核心在于揭示了软件开发中的沟通成本和学习曲线对项目进度的影响。</p>
+      <p>从数学角度看，团队规模与沟通成本之间呈平方关系增长。当团队规模从 N 增加到 N+1 时，沟通渠道的数量会从 N(N-1)/2 增加到 (N+1)N/2，净增加 N 个沟通渠道。这种非线性增长会迅速消耗团队的生产力。</p>
+      <p>此外，新成员的加入还会带来学习成本。现有团队成员需要花费时间向新成员介绍项目背景、技术栈和代码库，这会暂时降低团队的整体产出。在项目后期，这种影响尤为明显，因为新成员需要快速掌握大量复杂的项目知识。</p>
 
       <h2>核心原则</h2>
       <ul>
@@ -338,7 +340,7 @@
         <li><strong>团队凝聚力：</strong>频繁的人员变动会破坏团队的凝聚力和工作节奏。</li>
       </ul>
 
-      <h2>应用范围</h2>
+      <h2>适用范围</h2>
       <ul>
         <li><strong>软件开发：</strong>项目管理和团队规模规划。</li>
         <li><strong>产品开发：</strong>跨功能团队的组建和管理。</li>
@@ -346,17 +348,13 @@
         <li><strong>组织管理：</strong>团队规模和结构设计。</li>
       </ul>
 
-      <h2>使用方法</h2>
-      <h3>管理悖论</h3>
+      <h2>使用技巧</h2>
       <ul>
-        <li><strong>培训成本：</strong>新人的加入会占用老员工的生产时间进行辅导，导致短期产出负增长。</li>
-        <li><strong>沟通路径爆炸：</strong>当团队人数从 N 增加到 N+1，沟通渠道以 N(N-1)/2 的速度暴增。</li>
-      </ul>
-
-      <h3>破局之道</h3>
-      <ul>
-        <li><strong>保持精干：</strong>与其盲目增人，不如优化架构（如康威定律）减少跨团队依赖。</li>
-        <li><strong>切分任务：</strong>只有任务能被完全解耦、独立时，增加人手才有正向收益。</li>
+        <li><strong>识别关键路径：</strong>在增加人手前，先识别项目的关键路径，确保新成员能真正为关键任务贡献价值。</li>
+        <li><strong>模块化分解：</strong>将项目分解为相对独立的模块，减少模块间的依赖，提高并行开发的可能性。</li>
+        <li><strong>渐进式集成：</strong>新成员应先在小模块上工作，逐步熟悉项目，再参与核心模块。</li>
+        <li><strong>沟通优化：</strong>建立清晰的沟通机制，如每日站会、周会等，减少不必要的沟通成本。</li>
+        <li><strong>知识传递：</strong>建立完善的文档系统，使新成员能快速自助学习项目知识。</li>
       </ul>
 
       <h2>实践建议</h2>
@@ -369,11 +367,13 @@
         <li><strong>合理预期：</strong>对项目进度有合理的预期，避免不切实际的时间压力导致的盲目决策。</li>
       </ul>
 
-      <h2>案例分析</h2>
+      <h2>应用场景</h2>
       <ul>
         <li><strong>大型软件项目：</strong>许多大型软件项目失败的原因之一就是在进度落后时盲目增加人手，导致沟通成本激增，最终项目延期更严重。</li>
         <li><strong>创业公司：</strong>一些快速成长的创业公司在扩展团队时，没有考虑到沟通成本的增加，导致团队效率下降。</li>
         <li><strong>产品发布：</strong>为了赶产品发布 deadline，一些团队会临时增加人手，但往往事与愿违，导致发布延期。</li>
+        <li><strong>跨团队协作：</strong>在多个团队协作的大型项目中，沟通成本的增加会显著影响项目进度。</li>
+        <li><strong>紧急修复：</strong>在需要紧急修复生产环境问题时，增加太多人手反而会延长修复时间。</li>
       </ul>
 
       <h2>总结</h2>
