--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/图标/应用图标网站logo.png" type="image/png" sizes="16x16" />
     <link rel="apple-touch-icon" href="/图标/应用图标网站logo.png" />
     <link rel="shortcut icon" href="/图标/应用图标网站logo.png" type="image/png" />
+    <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="all">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print" onload="this.media='all'">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
       body {
@@ -26,7 +26,7 @@
       }
       
       body.dark {
-        background-color: #18181b;
+        background-color: #1e1e2e;
         color: #f4f4f5;
       }
       .font-mono {
