--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>人生游戏系统</title>
     <meta name="description" content="人生游戏管理系统" />
     <meta name="theme-color" content="#4285f4" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/图标/应用图标网站logo.png" type="image/png" sizes="32x32" />
-    <link rel="icon" href="/图标/应用图标网站logo.png" type="image/png" sizes="16x16" />
-    <link rel="apple-touch-icon" href="/图标/应用图标网站logo.png" />
-    <link rel="shortcut icon" href="/图标/应用图标网站logo.png" type="image/png" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" href="./图标/应用图标网站logo.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="./图标/应用图标网站logo.png" type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" href="./图标/应用图标网站logo.png" />
+    <link rel="shortcut icon" href="./图标/应用图标网站logo.png" type="image/png" />
     <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="all">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
